@@ -1,26 +1,41 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.compiler.progress;
 
-import com.intellij.build.*;
+import com.intellij.build.BuildBundle;
+import com.intellij.build.BuildDescriptor;
+import com.intellij.build.BuildViewManager;
+import com.intellij.build.DefaultBuildDescriptor;
+import com.intellij.build.FilePosition;
 import com.intellij.build.events.MessageEvent;
+import com.intellij.build.issue.BuildIssue;
 import com.intellij.build.progress.BuildProgress;
 import com.intellij.build.progress.BuildProgressDescriptor;
 import com.intellij.compiler.impl.CompilerPropertiesAction;
 import com.intellij.compiler.impl.ExcludeFromCompileAction;
 import com.intellij.compiler.impl.ExitStatus;
+import com.intellij.compiler.options.ExcludeFromValidationAction;
 import com.intellij.execution.ExecutionBundle;
 import com.intellij.execution.filters.RegexpFilter;
+import com.intellij.execution.filters.UrlFilter;
 import com.intellij.icons.AllIcons;
 import com.intellij.ide.IdeBundle;
-import com.intellij.openapi.actionSystem.*;
+import com.intellij.openapi.actionSystem.ActionManager;
+import com.intellij.openapi.actionSystem.ActionUpdateThread;
+import com.intellij.openapi.actionSystem.AnAction;
+import com.intellij.openapi.actionSystem.AnActionEvent;
+import com.intellij.openapi.actionSystem.DefaultActionGroup;
+import com.intellij.openapi.actionSystem.IdeActions;
+import com.intellij.openapi.actionSystem.Presentation;
 import com.intellij.openapi.compiler.CompilerMessage;
 import com.intellij.openapi.compiler.CompilerMessageCategory;
 import com.intellij.openapi.compiler.JavaCompilerBundle;
+import com.intellij.openapi.extensions.ExtensionPointName;
 import com.intellij.openapi.fileEditor.OpenFileDescriptor;
 import com.intellij.openapi.progress.ProgressIndicator;
 import com.intellij.openapi.project.DumbAwareAction;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.util.NlsContexts;
+import com.intellij.openapi.util.NlsSafe;
 import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.openapi.wm.ex.ProgressIndicatorEx;
 import com.intellij.pom.Navigatable;
@@ -28,30 +43,63 @@ import com.intellij.util.SmartList;
 import com.intellij.util.containers.Stack;
 import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.Nls;
+import org.jetbrains.annotations.NonNls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.io.File;
-import java.util.*;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 
-import static com.intellij.execution.filters.RegexpFilter.*;
-import static com.intellij.openapi.util.text.StringUtil.*;
+import static com.intellij.execution.filters.RegexpFilter.COLUMN_MACROS;
+import static com.intellij.execution.filters.RegexpFilter.FILE_PATH_MACROS;
+import static com.intellij.execution.filters.RegexpFilter.LINE_MACROS;
+import static com.intellij.openapi.util.text.StringUtil.capitalize;
+import static com.intellij.openapi.util.text.StringUtil.endsWithLineBreak;
+import static com.intellij.openapi.util.text.StringUtil.escapeMnemonics;
+import static com.intellij.openapi.util.text.StringUtil.isEmptyOrSpaces;
+import static com.intellij.openapi.util.text.StringUtil.notNullize;
+import static com.intellij.openapi.util.text.StringUtil.splitByLines;
+import static com.intellij.openapi.util.text.StringUtil.startsWithChar;
+import static com.intellij.openapi.util.text.StringUtil.trimEnd;
+import static com.intellij.openapi.util.text.StringUtil.trimStart;
+import static com.intellij.openapi.util.text.StringUtil.wordsToBeginFromLowerCase;
 import static com.intellij.openapi.vfs.VfsUtilCore.virtualToIoFile;
 
 @ApiStatus.Internal
 public class BuildOutputService implements BuildViewService {
-  private static final String ANSI_RESET = "\u001B[0m"; //NON-NLS
-  private static final String ANSI_RED = "\u001B[31m"; //NON-NLS
-  private static final String ANSI_YELLOW = "\u001B[33m"; //NON-NLS
-  private static final String ANSI_BOLD = "\u001b[1m"; //NON-NLS
+  private static final ExtensionPointName<BuildIssueContributor> BUILD_ISSUE_EP =
+    ExtensionPointName.create("com.intellij.compiler.buildIssueContributor");
+
+  private static final @NonNls String ANSI_RESET = "\u001B[0m";
+  private static final @NonNls String ANSI_RED = "\u001B[31m";
+  private static final @NonNls String ANSI_YELLOW = "\u001B[33m";
+  private static final @NonNls String ANSI_BOLD = "\u001b[1m";
   private final @NotNull Project myProject;
   private final @NotNull BuildProgress<BuildProgressDescriptor> myBuildProgress;
   private final @NotNull @NlsContexts.TabTitle String myContentName;
+  private final boolean myCompilationStartedAutomatically;
+  private final ConsolePrinter myConsolePrinter;
 
   public BuildOutputService(@NotNull Project project, @NotNull @NlsContexts.TabTitle String contentName) {
+    this(project, contentName, false);
+  }
+
+  public BuildOutputService(
+    @NotNull Project project,
+    @NotNull @NlsContexts.TabTitle String contentName,
+    boolean compilationStartedAutomatically
+  ) {
     myProject = project;
     myContentName = contentName;
+    myCompilationStartedAutomatically = compilationStartedAutomatically;
     myBuildProgress = BuildViewManager.createBuildProgress(project);
+    myConsolePrinter = new ConsolePrinter(myBuildProgress);
   }
 
   @Override
@@ -80,30 +128,28 @@ public class BuildOutputService implements BuildViewService {
         .withAction(new CompilerPropertiesAction())
         .withExecutionFilter(new ModuleLinkFilter(myProject))
         .withExecutionFilter(new RegexpFilter(myProject, FILE_PATH_MACROS + ":" + LINE_MACROS + ":" + COLUMN_MACROS))
+        .withExecutionFilter(new UrlFilter(myProject))
         .withContextAction(node -> {
           return new ExcludeFromCompileAction(myProject) {
             @Override
             protected @Nullable VirtualFile getFile() {
               List<Navigatable> navigatables = node.getNavigatables();
               if (navigatables.size() != 1) return null;
-              Navigatable navigatable = navigatables.get(0);
-              if (navigatable instanceof OpenFileDescriptor) {
-                return ((OpenFileDescriptor)navigatable).getFile();
-              }
-              else if (navigatable instanceof FileNavigatable) {
-                OpenFileDescriptor fileDescriptor = ((FileNavigatable)navigatable).getFileDescriptor();
-                return fileDescriptor != null ? fileDescriptor.getFile() : null;
-              }
-              return null;
+              Navigatable navigatable = navigatables.getFirst();
+              return ExcludeFromValidationAction.getTargetFile(navigatable);
             }
           };
         })
         .withContextActions(contextActions.toArray(AnAction.EMPTY_ARRAY));
 
+    if (myCompilationStartedAutomatically) {
+      // When compilation is triggered automatically (e.g., by auto test run), avoid stealing focus
+      buildDescriptor.setActivateToolWindowWhenFailed(false);
+    }
+
     myBuildProgress.start(new BuildProgressDescriptor() {
-      @NotNull
       @Override
-      public String getTitle() {
+      public @NotNull String getTitle() {
         return buildDescriptor.getTitle();
       }
 
@@ -130,10 +176,10 @@ public class BuildOutputService implements BuildViewService {
       boolean isUpToDate = exitStatus == ExitStatus.UP_TO_DATE;
       if (JavaCompilerBundle.message("classes.up.to.date.check").equals(myContentName)) {
         if (isUpToDate) {
-          myBuildProgress.output(JavaCompilerBundle.message("compiler.build.messages.classes.check.uptodate"), true);
+          myConsolePrinter.print(JavaCompilerBundle.message("compiler.build.messages.classes.check.uptodate"), MessageEvent.Kind.SIMPLE);
         }
         else {
-          myBuildProgress.output(JavaCompilerBundle.message("compiler.build.messages.classes.check.outdated"), true);
+          myConsolePrinter.print(JavaCompilerBundle.message("compiler.build.messages.classes.check.outdated"), MessageEvent.Kind.SIMPLE);
         }
       }
       message = BuildBundle.message("build.messages.finished", wordsToBeginFromLowerCase(myContentName));
@@ -146,11 +192,15 @@ public class BuildOutputService implements BuildViewService {
     MessageEvent.Kind kind = convertCategory(compilerMessage.getCategory());
     VirtualFile virtualFile = compilerMessage.getVirtualFile();
     Navigatable navigatable = compilerMessage.getNavigatable();
-    if (virtualFile != null) {
+    String title = getMessageTitle(compilerMessage);
+    BuildIssue issue = buildIssue(compilerMessage.getModuleNames(), title, compilerMessage.getMessage(), kind, virtualFile, navigatable);
+    if (issue != null) {
+      myBuildProgress.buildIssue(issue, kind);
+    }
+    else if (virtualFile != null) {
       File file = virtualToIoFile(virtualFile);
       FilePosition filePosition;
-      if (navigatable instanceof OpenFileDescriptor) {
-        OpenFileDescriptor fileDescriptor = (OpenFileDescriptor)navigatable;
+      if (navigatable instanceof OpenFileDescriptor fileDescriptor) {
         int column = fileDescriptor.getColumn();
         int line = fileDescriptor.getLine();
         filePosition = new FilePosition(file, line, column);
@@ -158,43 +208,47 @@ public class BuildOutputService implements BuildViewService {
       else {
         filePosition = new FilePosition(file, 0, 0);
       }
-      String title = getMessageTitle(compilerMessage);
+
       myBuildProgress.fileMessage(title, compilerMessage.getMessage(), kind, filePosition);
     }
     else {
       if (kind == MessageEvent.Kind.ERROR || kind == MessageEvent.Kind.WARNING) {
-        String title = getMessageTitle(compilerMessage);
         myBuildProgress.message(title, compilerMessage.getMessage(), kind, navigatable);
       }
-      String color;
-      if (kind == MessageEvent.Kind.ERROR) {
-        color = ANSI_RED;
-      }
-      else if (kind == MessageEvent.Kind.WARNING) {
-        color = ANSI_YELLOW;
-      }
-      else {
-        color = ANSI_BOLD;
-      }
-      myBuildProgress.output(color + compilerMessage.getMessage() + ANSI_RESET + '\n', kind != MessageEvent.Kind.ERROR);
+      myConsolePrinter.print(compilerMessage.getMessage(), kind);
     }
   }
 
-  @NotNull
-  private List<AnAction> getRestartActions(Runnable restartWork, ProgressIndicator indicator) {
+  private @Nullable BuildIssue buildIssue(@NotNull Collection<String> moduleNames,
+                                          @NotNull String title,
+                                          @NotNull String message,
+                                          @NotNull MessageEvent.Kind kind,
+                                          @Nullable VirtualFile virtualFile,
+                                          @Nullable Navigatable navigatable) {
+    return BUILD_ISSUE_EP.computeSafeIfAny(contributor -> {
+      return contributor.createBuildIssue(myProject, moduleNames, title, message, kind, virtualFile, navigatable);
+    });
+  }
+
+  private @NotNull List<AnAction> getRestartActions(Runnable restartWork, ProgressIndicator indicator) {
     List<AnAction> restartActions = new SmartList<>();
     if (restartWork != null) {
       AnAction restartAction = new DumbAwareAction(
         ExecutionBundle.messagePointer("rerun.configuration.action.name", escapeMnemonics(myContentName)),
         Presentation.NULL_STRING, AllIcons.Actions.Compile) {
         @Override
+        public void actionPerformed(@NotNull AnActionEvent e) {
+          restartWork.run();
+        }
+
+        @Override
         public void update(@NotNull AnActionEvent e) {
           e.getPresentation().setEnabled(!indicator.isRunning());
         }
 
         @Override
-        public void actionPerformed(@NotNull AnActionEvent e) {
-          restartWork.run();
+        public @NotNull ActionUpdateThread getActionUpdateThread() {
+          return ActionUpdateThread.BGT;
         }
       };
       restartActions.add(restartAction);
@@ -209,6 +263,11 @@ public class BuildOutputService implements BuildViewService {
       public void update(@NotNull AnActionEvent event) {
         event.getPresentation().setEnabled(indicator.isRunning());
       }
+
+      @Override
+      public @NotNull ActionUpdateThread getActionUpdateThread() {
+        return ActionUpdateThread.BGT;
+      }
     };
     restartActions.add(stopAction);
     return restartActions;
@@ -220,8 +279,8 @@ public class BuildOutputService implements BuildViewService {
     }
     ((ProgressIndicatorEx)indicator).addStateDelegate(new CompilerMessagesService.DummyProgressIndicator() {
       private final Map<String, Set<String>> mySeenMessages = new HashMap<>();
-      private String lastMessage = null;
-      private Stack<String> myTextStack;
+      private @NlsSafe String lastMessage = null;
+      private Stack<@NlsContexts.ProgressText String> myTextStack;
 
       @Override
       public void setText(@Nls(capitalization = Nls.Capitalization.Sentence) String text) {
@@ -238,15 +297,14 @@ public class BuildOutputService implements BuildViewService {
         myBuildProgress.progress(lastMessage, 100, (long)(fraction * 100), "%");
       }
 
-      @NotNull
-      private Stack<String> getTextStack() {
-        Stack<String> stack = myTextStack;
+      private @NotNull Stack<@NlsContexts.ProgressText String> getTextStack() {
+        Stack<@NlsContexts.ProgressText String> stack = myTextStack;
         if (stack == null) myTextStack = stack = new Stack<>(2);
         return stack;
       }
 
-      private void addIndicatorNewMessagesAsBuildOutput(String msg) {
-        Stack<String> textStack = getTextStack();
+      private void addIndicatorNewMessagesAsBuildOutput(@Nls String msg) {
+        Stack<@NlsContexts.ProgressText String> textStack = getTextStack();
         if (!textStack.isEmpty() && msg.equals(textStack.peek())) {
           textStack.pop();
           return;
@@ -264,23 +322,22 @@ public class BuildOutputService implements BuildViewService {
             if (isSeenMessage) return;
           }
         }
-        myBuildProgress.output(msg + '\n', true);
+        myConsolePrinter.print(msg, MessageEvent.Kind.SIMPLE);
       }
     });
   }
 
-  @NotNull
-  private static List<AnAction> getContextActions() {
+  private static @NotNull List<AnAction> getContextActions() {
     List<AnAction> contextActions = new SmartList<>();
-    ActionGroup compilerErrorsViewPopupGroup =
-      (ActionGroup)ActionManager.getInstance().getAction(IdeActions.GROUP_COMPILER_ERROR_VIEW_POPUP);
+    ActionManager actionManager = ActionManager.getInstance();
+    DefaultActionGroup compilerErrorsViewPopupGroup = (DefaultActionGroup)actionManager.getAction(IdeActions.GROUP_COMPILER_ERROR_VIEW_POPUP);
     if (compilerErrorsViewPopupGroup != null) {
-      Collections.addAll(contextActions, compilerErrorsViewPopupGroup.getChildren(null));
+      Collections.addAll(contextActions, compilerErrorsViewPopupGroup.getChildren(actionManager));
     }
     return contextActions;
   }
 
-  private static String getMessageTitle(@NotNull CompilerMessage compilerMessage) {
+  private static @Nls String getMessageTitle(@NotNull CompilerMessage compilerMessage) {
     String message = null;
     String[] messages = splitByLines(compilerMessage.getMessage());
     if (messages.length > 1) {
@@ -305,19 +362,45 @@ public class BuildOutputService implements BuildViewService {
     return trimEnd(trimStart(message, "java: "), '.'); //NON-NLS
   }
 
-  @NotNull
-  private static MessageEvent.Kind convertCategory(@NotNull CompilerMessageCategory category) {
-    switch (category) {
-      case ERROR:
-        return MessageEvent.Kind.ERROR;
-      case WARNING:
-        return MessageEvent.Kind.WARNING;
-      case INFORMATION:
-        return MessageEvent.Kind.INFO;
-      case STATISTICS:
-        return MessageEvent.Kind.STATISTICS;
-      default:
-        return MessageEvent.Kind.SIMPLE;
+  private static @NotNull MessageEvent.Kind convertCategory(@NotNull CompilerMessageCategory category) {
+    return switch (category) {
+      case ERROR -> MessageEvent.Kind.ERROR;
+      case WARNING -> MessageEvent.Kind.WARNING;
+      case INFORMATION -> MessageEvent.Kind.INFO;
+      case STATISTICS -> MessageEvent.Kind.STATISTICS;
+    };
+  }
+
+  private static class ConsolePrinter {
+    private final @NotNull BuildProgress<BuildProgressDescriptor> progress;
+    private volatile boolean isNewLinePosition = true;
+
+    private ConsolePrinter(@NotNull BuildProgress<BuildProgressDescriptor> progress) {this.progress = progress;}
+
+    private void print(@NotNull @Nls String message, @NotNull MessageEvent.Kind kind) {
+      String text = wrapWithAnsiColor(kind, message);
+      if (!isNewLinePosition && !startsWithChar(message, '\r')) {
+        text = '\n' + text;
+      }
+      isNewLinePosition = endsWithLineBreak(message);
+      progress.output(text, kind != MessageEvent.Kind.ERROR);
+    }
+
+    private static @Nls String wrapWithAnsiColor(MessageEvent.Kind kind, @Nls String message) {
+      if (kind == MessageEvent.Kind.SIMPLE) return message;
+      @NlsSafe
+      String color;
+      if (kind == MessageEvent.Kind.ERROR) {
+        color = ANSI_RED;
+      }
+      else if (kind == MessageEvent.Kind.WARNING) {
+        color = ANSI_YELLOW;
+      }
+      else {
+        color = ANSI_BOLD;
+      }
+      final @NlsSafe String ansiReset = ANSI_RESET;
+      return color + message + ansiReset;
     }
   }
 }
