@@ -1,26 +1,42 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.codeInspection.dataFlow;
 
-import com.intellij.codeInsight.*;
-import com.intellij.openapi.project.Project;
+import com.intellij.codeInsight.AnnotationUtil;
+import com.intellij.codeInsight.Nullability;
+import com.intellij.codeInsight.NullabilityAnnotationInfo;
+import com.intellij.codeInsight.NullableNotNullManager;
+import com.intellij.codeInsight.StaticAnalysisAnnotationManager;
+import com.intellij.java.library.JavaLibraryModificationTracker;
+import com.intellij.openapi.roots.ProjectFileIndex;
 import com.intellij.openapi.util.text.StringUtil;
-import com.intellij.psi.*;
+import com.intellij.psi.JavaPsiFacade;
+import com.intellij.psi.PsiAnnotation;
+import com.intellij.psi.PsiCallExpression;
+import com.intellij.psi.PsiExpression;
+import com.intellij.psi.PsiFile;
+import com.intellij.psi.PsiMethod;
+import com.intellij.psi.PsiMethodCallExpression;
 import com.intellij.psi.impl.light.LightRecordMethod;
-import com.intellij.psi.util.CachedValueProvider;
+import com.intellij.psi.util.CachedValueProvider.Result;
 import com.intellij.psi.util.CachedValuesManager;
 import com.intellij.psi.util.PsiModificationTracker;
 import com.intellij.psi.util.PsiUtil;
 import com.intellij.util.ObjectUtils;
-import com.siyeh.ig.psiutils.ExpressionUtils;
-import com.siyeh.ig.psiutils.MethodCallUtils;
+import com.intellij.util.containers.ContainerUtil;
+import com.siyeh.ig.callMatcher.CallMatcher;
+import one.util.streamex.EntryStream;
 import one.util.streamex.StreamEx;
 import org.jetbrains.annotations.Contract;
+import org.jetbrains.annotations.NonNls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
 
 /**
  * Methods to operate on Java contracts
@@ -28,9 +44,6 @@ import java.util.List;
 public final class JavaMethodContractUtil {
   private JavaMethodContractUtil() {}
 
-  /**
-   * JetBrains contract annotation fully-qualified name
-   */
   public static final String ORG_JETBRAINS_ANNOTATIONS_CONTRACT = Contract.class.getName();
 
   /**
@@ -102,13 +115,42 @@ public final class JavaMethodContractUtil {
     boolean pure = Boolean.TRUE.equals(AnnotationUtil.getBooleanAttributeValue(annotation, "pure"));
     String mutates = StringUtil.notNullize(AnnotationUtil.getStringAttributeValue(annotation, MutationSignature.ATTR_MUTATES));
     String resultValue = StreamEx.of(contracts).joining("; ");
-    Project project = annotation.getProject();
-    return DefaultInferredAnnotationProvider.createContractAnnotation(project, pure, resultValue, mutates);
+    String attributes = createAttributesText(resultValue, pure, mutates);
+    if (attributes.isEmpty()) return null;
+    return JavaPsiFacade.getElementFactory(annotation.getProject())
+      .createAnnotationFromText("@" + annotation.getQualifiedName() + "(" + attributes + ")", annotation);
+  }
+
+  /**
+   * Creates a string representing attributes for a method's contract annotation based on provided parameters.
+   *
+   * @param contracts a string describing the method's contracts using the contract syntax
+   * @param pure indicates whether the method is pure (does not modify any state)
+   * @param mutates specifier which describes which method parameters can be mutated during the method cal, if pure is passed as true, this
+   *                argument is ignored.
+   * @return contract arguments as a string, for example <code>value = "null, _ -> false", pure = true</code>
+   */
+  public static @NotNull String createAttributesText(String contracts, boolean pure, String mutates) {
+    @NonNls Map<String, String> attrMap = new LinkedHashMap<>();
+    if (!contracts.isEmpty()) {
+      attrMap.put("value", StringUtil.wrapWithDoubleQuote(contracts));
+    }
+    if (pure) {
+      attrMap.put("pure", "true");
+    }
+    else if (!mutates.trim().isEmpty()) {
+      attrMap.put("mutates", StringUtil.wrapWithDoubleQuote(mutates));
+    }
+    if (attrMap.isEmpty()) {
+      return "";
+    }
+    return attrMap.keySet().equals(Collections.singleton("value")) ?
+           attrMap.get("value") : EntryStream.of(attrMap).join(" = ").joining(", ");
   }
 
   static class ContractInfo {
     static final ContractInfo EMPTY = new ContractInfo(Collections.emptyList(), false, false, MutationSignature.UNKNOWN);
-    static final ContractInfo PURE = new ContractInfo(Collections.emptyList(), true, false, MutationSignature.PURE);
+    static final ContractInfo PURE = new ContractInfo(Collections.emptyList(), true, false, MutationSignature.transparent());
 
     private final @NotNull List<StandardMethodContract> myContracts;
     private final boolean myPure;
@@ -141,19 +183,25 @@ public final class JavaMethodContractUtil {
     }
   }
 
+  /**
+   * TODO: replace with external annotations when annotations for Java 26+ will be supported
+   */
+  private static final CallMatcher ADDITIONAL_PURE_METHODS =
+      CallMatcher.instanceCall("java.lang.LazyConstant", "get", "isInitialized");
+
   static @NotNull ContractInfo getContractInfo(@NotNull PsiMethod method) {
-    if (PsiUtil.isAnnotationMethod(method) || method instanceof LightRecordMethod) {
+    if (PsiUtil.isAnnotationMethod(method) || method instanceof LightRecordMethod || ADDITIONAL_PURE_METHODS.methodMatches(method)) {
       return ContractInfo.PURE;
     }
     return CachedValuesManager.getCachedValue(method, () -> {
-      final PsiAnnotation contractAnno = findContractAnnotation(method);
+      PsiAnnotation contractAnno = findContractAnnotation(method);
       ContractInfo info = ContractInfo.EMPTY;
       if (contractAnno != null) {
         List<StandardMethodContract> contracts = parseContracts(method, contractAnno);
         boolean pure = Boolean.TRUE.equals(AnnotationUtil.getBooleanAttributeValue(contractAnno, "pure"));
         MutationSignature mutationSignature = MutationSignature.UNKNOWN;
         if (pure) {
-          mutationSignature = MutationSignature.PURE;
+          mutationSignature = MutationSignature.pure();
         } else {
           String mutationText = AnnotationUtil.getStringAttributeValue(contractAnno, MutationSignature.ATTR_MUTATES);
           if (mutationText != null) {
@@ -167,7 +215,16 @@ public final class JavaMethodContractUtil {
         boolean explicit = !AnnotationUtil.isInferredAnnotation(contractAnno);
         info = new ContractInfo(contracts, pure, explicit, mutationSignature);
       }
-      return CachedValueProvider.Result.create(info, method, PsiModificationTracker.MODIFICATION_COUNT);
+
+      PsiFile file = method.getContainingFile();
+      if (file != null
+          && file.getVirtualFile() != null
+          && ProjectFileIndex.getInstance(method.getProject()).isInLibrary(file.getVirtualFile())) {
+        // there is no need to recompute info on changes in the project code
+        return Result.create(info, JavaLibraryModificationTracker.getInstance(method.getProject()));
+      }
+
+      return Result.create(info, method, PsiModificationTracker.MODIFICATION_COUNT);
     });
   }
 
@@ -186,7 +243,7 @@ public final class JavaMethodContractUtil {
       try {
         final int paramCount = method.getParameterList().getParametersCount();
         List<StandardMethodContract> parsed = StandardMethodContract.parseContract(text);
-        if (parsed.stream().allMatch(c -> c.getParameterCount() == paramCount)) {
+        if (ContainerUtil.and(parsed, c -> c.getParameterCount() == paramCount)) {
           return parsed;
         }
       }
@@ -197,13 +254,28 @@ public final class JavaMethodContractUtil {
   }
 
   /**
-   * Returns a contract annotation for given method, checking the hierarchy
+   * Returns a contract annotation for a given method, checking the hierarchy
+   *
+   * @param method a method
+   * @param skipExternal to skip external annotations
+   * @return a found annotation (null if not found)
+   */
+  public static @Nullable PsiAnnotation findContractAnnotation(@NotNull PsiMethod method, boolean skipExternal) {
+    return AnnotationUtil.findAnnotationInHierarchy(method,
+                                                    Set.of(StaticAnalysisAnnotationManager.getInstance().getKnownContractAnnotations()),
+                                                    skipExternal);
+  }
+
+  /**
+   * Returns a contract annotation for a given method, checking the hierarchy
    *
    * @param method a method
    * @return a found annotation (null if not found)
    */
   public static @Nullable PsiAnnotation findContractAnnotation(@NotNull PsiMethod method) {
-    return AnnotationUtil.findAnnotationInHierarchy(method, Collections.singleton(ORG_JETBRAINS_ANNOTATIONS_CONTRACT));
+    return AnnotationUtil.findAnnotationInHierarchy(method,
+                                                    Set.of(StaticAnalysisAnnotationManager.getInstance().getKnownContractAnnotations()),
+                                                    false);
   }
 
   /**
@@ -226,7 +298,7 @@ public final class JavaMethodContractUtil {
     List<ContractValue> failConditions = new ArrayList<>();
     for (MethodContract contract : contracts) {
       List<ContractValue> conditions = contract.getConditions();
-      if (conditions.isEmpty() || conditions.stream().allMatch(c -> failConditions.stream().anyMatch(c::isExclusive))) {
+      if (conditions.isEmpty() || ContainerUtil.and(conditions, c -> failConditions.stream().anyMatch(c::isExclusive))) {
         return contract.getReturnValue();
       }
       if (contract.getReturnValue().isFail()) {
@@ -256,16 +328,6 @@ public final class JavaMethodContractUtil {
     List<? extends MethodContract> contracts = getMethodCallContracts(call);
     ContractReturnValue returnValue = getNonFailingReturnValue(contracts);
     if (returnValue == null) return null;
-    if (returnValue.equals(ContractReturnValue.returnThis())) {
-      return ExpressionUtils.getEffectiveQualifier(call.getMethodExpression());
-    }
-    if (returnValue instanceof ContractReturnValue.ParameterReturnValue) {
-      int number = ((ContractReturnValue.ParameterReturnValue)returnValue).getParameterNumber();
-      PsiExpression[] args = call.getArgumentList().getExpressions();
-      if (args.length <= number) return null;
-      if (args.length == number + 1 && MethodCallUtils.isVarArgCall(call)) return null;
-      return args[number];
-    }
-    return null;
+    return returnValue.findPlace(call);
   }
 }
