@@ -1,29 +1,96 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.codeInsight.completion;
 
-import com.intellij.codeInsight.*;
+import com.intellij.codeInsight.CodeInsightSettings;
+import com.intellij.codeInsight.CodeInsightUtilCore;
+import com.intellij.codeInsight.ExpectedTypeInfo;
+import com.intellij.codeInsight.JavaProjectCodeInsightSettings;
 import com.intellij.codeInsight.completion.impl.CamelHumpMatcher;
 import com.intellij.codeInsight.completion.scope.CompletionElement;
 import com.intellij.codeInsight.completion.scope.JavaCompletionProcessor;
 import com.intellij.codeInsight.completion.util.CompletionStyleUtil;
-import com.intellij.codeInsight.completion.util.ParenthesesInsertHandler;
-import com.intellij.codeInsight.daemon.impl.analysis.LambdaHighlightingUtil;
 import com.intellij.codeInsight.editorActions.TabOutScopesTracker;
 import com.intellij.codeInsight.guess.GuessManager;
-import com.intellij.codeInsight.lookup.*;
-import com.intellij.codeInspection.java15api.Java15APIUsageInspection;
-import com.intellij.lang.StdLanguages;
+import com.intellij.codeInsight.lookup.Lookup;
+import com.intellij.codeInsight.lookup.LookupElement;
+import com.intellij.codeInsight.lookup.LookupElementDecorator;
+import com.intellij.codeInsight.lookup.LookupElementPresentation;
+import com.intellij.codeInsight.lookup.LookupElementRenderer;
+import com.intellij.codeInsight.lookup.PackageLookupItem;
+import com.intellij.codeInsight.lookup.PsiTypeLookupItem;
+import com.intellij.codeInsight.lookup.TypedLookupItem;
+import com.intellij.codeInsight.lookup.VariableLookupItem;
+import com.intellij.java.codeserver.core.JavaPsiModuleUtil;
 import com.intellij.lang.java.JavaLanguage;
+import com.intellij.openapi.application.ReadAction;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.editor.Document;
-import com.intellij.openapi.editor.Editor;
 import com.intellij.openapi.editor.RangeMarker;
-import com.intellij.openapi.fileEditor.FileDocumentManager;
+import com.intellij.openapi.module.JdkApiCompatibilityService;
+import com.intellij.openapi.project.DumbService;
 import com.intellij.openapi.project.Project;
-import com.intellij.openapi.util.*;
+import com.intellij.openapi.util.Condition;
+import com.intellij.openapi.util.Conditions;
+import com.intellij.openapi.util.Key;
+import com.intellij.openapi.util.NullableLazyKey;
+import com.intellij.openapi.util.Ref;
 import com.intellij.openapi.util.text.StringUtil;
+import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.patterns.PsiJavaPatterns;
-import com.intellij.psi.*;
+import com.intellij.pom.java.JavaFeature;
+import com.intellij.pom.java.LanguageLevel;
+import com.intellij.psi.CommonClassNames;
+import com.intellij.psi.HierarchicalMethodSignature;
+import com.intellij.psi.JavaPsiFacade;
+import com.intellij.psi.PsiAnonymousClass;
+import com.intellij.psi.PsiArrayType;
+import com.intellij.psi.PsiCall;
+import com.intellij.psi.PsiClass;
+import com.intellij.psi.PsiClassOwner;
+import com.intellij.psi.PsiClassType;
+import com.intellij.psi.PsiCompiledElement;
+import com.intellij.psi.PsiDocCommentOwner;
+import com.intellij.psi.PsiDocumentManager;
+import com.intellij.psi.PsiElement;
+import com.intellij.psi.PsiEnumConstant;
+import com.intellij.psi.PsiExpression;
+import com.intellij.psi.PsiField;
+import com.intellij.psi.PsiFile;
+import com.intellij.psi.PsiIdentifier;
+import com.intellij.psi.PsiImplicitClass;
+import com.intellij.psi.PsiImportStatementBase;
+import com.intellij.psi.PsiImportStaticReferenceElement;
+import com.intellij.psi.PsiImportStaticStatement;
+import com.intellij.psi.PsiInstanceOfExpression;
+import com.intellij.psi.PsiIntersectionType;
+import com.intellij.psi.PsiJavaCodeReferenceElement;
+import com.intellij.psi.PsiJavaModule;
+import com.intellij.psi.PsiJavaReference;
+import com.intellij.psi.PsiManager;
+import com.intellij.psi.PsiMember;
+import com.intellij.psi.PsiMethod;
+import com.intellij.psi.PsiMethodReferenceExpression;
+import com.intellij.psi.PsiModifier;
+import com.intellij.psi.PsiModifierListOwner;
+import com.intellij.psi.PsiNewExpression;
+import com.intellij.psi.PsiPackage;
+import com.intellij.psi.PsiPackageStatement;
+import com.intellij.psi.PsiPolyVariantReference;
+import com.intellij.psi.PsiReference;
+import com.intellij.psi.PsiReferenceExpression;
+import com.intellij.psi.PsiReferenceParameterList;
+import com.intellij.psi.PsiSubstitutor;
+import com.intellij.psi.PsiSuperExpression;
+import com.intellij.psi.PsiType;
+import com.intellij.psi.PsiTypeElement;
+import com.intellij.psi.PsiTypeMapper;
+import com.intellij.psi.PsiTypeParameter;
+import com.intellij.psi.PsiTypes;
+import com.intellij.psi.PsiVariable;
+import com.intellij.psi.ResolveResult;
+import com.intellij.psi.ResolveState;
+import com.intellij.psi.SmartPointerManager;
+import com.intellij.psi.SmartPsiElementPointer;
 import com.intellij.psi.codeStyle.CommonCodeStyleSettings;
 import com.intellij.psi.codeStyle.JavaCodeStyleManager;
 import com.intellij.psi.codeStyle.SuggestedNameInfo;
@@ -33,11 +100,16 @@ import com.intellij.psi.impl.FakePsiElement;
 import com.intellij.psi.impl.light.LightVariableBuilder;
 import com.intellij.psi.impl.source.PostprocessReformattingAspect;
 import com.intellij.psi.impl.source.PsiImmediateClassType;
+import com.intellij.psi.jsp.JspxLanguage;
 import com.intellij.psi.scope.ElementClassHint;
 import com.intellij.psi.scope.NameHint;
 import com.intellij.psi.scope.PsiScopeProcessor;
 import com.intellij.psi.scope.util.PsiScopesUtil;
-import com.intellij.psi.util.*;
+import com.intellij.psi.util.InheritanceUtil;
+import com.intellij.psi.util.MethodSignatureUtil;
+import com.intellij.psi.util.PsiTreeUtil;
+import com.intellij.psi.util.PsiUtil;
+import com.intellij.psi.util.TypeConversionUtil;
 import com.intellij.psi.util.proximity.ReferenceListWeigher;
 import com.intellij.ui.JBColor;
 import com.intellij.util.IncorrectOperationException;
@@ -47,16 +119,24 @@ import com.intellij.util.ThreeState;
 import com.intellij.util.containers.ContainerUtil;
 import com.intellij.util.containers.JBIterable;
 import com.siyeh.ig.psiutils.SideEffectChecker;
-import gnu.trove.THashSet;
+import it.unimi.dsi.fastutil.objects.ReferenceOpenHashSet;
 import one.util.streamex.StreamEx;
 import org.jetbrains.annotations.Contract;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
+import org.jetbrains.annotations.Unmodifiable;
 
-import java.util.*;
+import java.util.Collections;
+import java.util.HashSet;
+import java.util.LinkedHashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Set;
+import java.util.function.Consumer;
+import java.util.function.Function;
 
 import static com.intellij.codeInsight.completion.ReferenceExpressionCompletionContributor.findConstantsUsedInSwitch;
-import static com.intellij.patterns.PlatformPatterns.psiElement;
 import static com.intellij.psi.util.proximity.ReferenceListWeigher.ReferenceListApplicability.inapplicable;
 
 public final class JavaCompletionUtil {
@@ -65,24 +145,24 @@ public final class JavaCompletionUtil {
   public static final Key<PairFunction<PsiExpression, CompletionParameters, PsiType>> DYNAMIC_TYPE_EVALUATOR = Key.create("DYNAMIC_TYPE_EVALUATOR");
 
   private static final Key<PsiType> QUALIFIER_TYPE_ATTR = Key.create("qualifierType"); // SmartPsiElementPointer to PsiType of "qualifier"
-  static final NullableLazyKey<ExpectedTypeInfo[], CompletionLocation> EXPECTED_TYPES = NullableLazyKey.create("expectedTypes",
-                                                                                                               location -> {
-                                                                                                                 if (PsiJavaPatterns.psiElement().beforeLeaf(PsiJavaPatterns.psiElement().withText("."))
-                                                                                                                   .accepts(location.getCompletionParameters().getPosition())) {
-                                                                                                                   return ExpectedTypeInfo.EMPTY_ARRAY;
-                                                                                                                 }
+  static final NullableLazyKey<ExpectedTypeInfo[], CompletionLocation> EXPECTED_TYPES = NullableLazyKey.create(
+    "expectedTypes",
+    location -> {
+      if (PsiJavaPatterns.psiElement().beforeLeaf(PsiJavaPatterns.psiElement().withText("."))
+        .accepts(location.getBaseCompletionParameters().getPosition())) {
+        return ExpectedTypeInfo.EMPTY_ARRAY;
+      }
 
-                                                                                                                 return JavaSmartCompletionContributor.getExpectedTypes(location.getCompletionParameters());
-                                                                                                               });
+      return JavaSmartCompletionContributor.getExpectedTypes(location.getBaseCompletionParameters());
+    });
 
   public static final Key<Boolean> SUPER_METHOD_PARAMETERS = Key.create("SUPER_METHOD_PARAMETERS");
 
-  @Nullable
-  public static Set<PsiType> getExpectedTypes(final CompletionParameters parameters) {
-    final PsiExpression expr = PsiTreeUtil.getContextOfType(parameters.getPosition(), PsiExpression.class, true);
+  public static @Nullable Set<PsiType> getExpectedTypes(@NotNull BaseCompletionParameters parameters) {
+    PsiExpression expr = PsiTreeUtil.getContextOfType(parameters.getPosition(), PsiExpression.class, true);
     if (expr != null) {
-      final Set<PsiType> set = new THashSet<>();
-      for (final ExpectedTypeInfo expectedInfo : JavaSmartCompletionContributor.getExpectedTypes(parameters)) {
+      Set<PsiType> set = new HashSet<>();
+      for (ExpectedTypeInfo expectedInfo : JavaSmartCompletionContributor.getExpectedTypes(parameters)) {
         set.add(expectedInfo.getType());
       }
       return set;
@@ -92,35 +172,36 @@ public final class JavaCompletionUtil {
 
   private static final Key<List<SmartPsiElementPointer<PsiMethod>>> ALL_METHODS_ATTRIBUTE = Key.create("allMethods");
 
-  public static PsiType getQualifierType(LookupElement item) {
+  public static PsiType getQualifierType(@NotNull LookupElement item) {
     return item.getUserData(QUALIFIER_TYPE_ATTR);
   }
 
   public static void completeVariableNameForRefactoring(Project project, Set<LookupElement> set, String prefix, PsiType varType, VariableKind varKind) {
-    final CamelHumpMatcher camelHumpMatcher = new CamelHumpMatcher(prefix);
+    CamelHumpMatcher camelHumpMatcher = new CamelHumpMatcher(prefix);
     JavaMemberNameCompletionContributor.completeVariableNameForRefactoring(project, set, camelHumpMatcher, varType, varKind, true, false);
   }
 
-  public static void putAllMethods(LookupElement item, List<? extends PsiMethod> methods) {
+  public static void putAllMethods(@NotNull LookupElement item, @NotNull List<? extends PsiMethod> methods) {
     item.putUserData(ALL_METHODS_ATTRIBUTE, ContainerUtil.map(methods, method -> SmartPointerManager.getInstance(method.getProject()).createSmartPsiElementPointer(method)));
   }
 
-  public static List<PsiMethod> getAllMethods(LookupElement item) {
+  public static @Unmodifiable List<PsiMethod> getAllMethods(@NotNull LookupElement item) {
     List<SmartPsiElementPointer<PsiMethod>> pointers = item.getUserData(ALL_METHODS_ATTRIBUTE);
     if (pointers == null) return null;
 
-    return ContainerUtil.mapNotNull(pointers, pointer -> pointer.getElement());
+    return ContainerUtil.mapNotNull(pointers, SmartPsiElementPointer::getElement);
   }
 
-  public static String[] completeVariableNameForRefactoring(JavaCodeStyleManager codeStyleManager, @Nullable final PsiType varType,
-                                                               final VariableKind varKind,
-                                                               SuggestedNameInfo suggestedNameInfo) {
+  public static String @NotNull [] completeVariableNameForRefactoring(@NotNull JavaCodeStyleManager codeStyleManager,
+                                                                      @Nullable PsiType varType,
+                                                                      @NotNull VariableKind varKind,
+                                                                      @NotNull SuggestedNameInfo suggestedNameInfo) {
     return JavaMemberNameCompletionContributor
       .completeVariableNameForRefactoring(codeStyleManager, new CamelHumpMatcher(""), varType, varKind, suggestedNameInfo, true, false);
   }
 
-  public static boolean isInExcludedPackage(@NotNull final PsiMember member, boolean allowInstanceInnerClasses) {
-    final String name = PsiUtil.getMemberQualifiedName(member);
+  public static boolean isInExcludedPackage(@NotNull PsiMember member, boolean allowInstanceInnerClasses) {
+    String name = PsiUtil.getMemberQualifiedName(member);
     if (name == null) return false;
 
     if (!member.hasModifierProperty(PsiModifier.STATIC)) {
@@ -135,37 +216,35 @@ public final class JavaCompletionUtil {
     return JavaProjectCodeInsightSettings.getSettings(member.getProject()).isExcluded(name);
   }
 
-  @NotNull
-  public static <T extends PsiType> T originalize(@NotNull T type) {
+  public static @NotNull <T extends PsiType> T originalize(@NotNull T type) {
     if (!type.isValid()) {
       return type;
     }
 
     T result = new PsiTypeMapper() {
-      private final Set<PsiClassType> myVisited = ContainerUtil.newIdentityTroveSet();
+      private final Set<PsiClassType> myVisited = new ReferenceOpenHashSet<>();
 
       @Override
-      public PsiType visitClassType(@NotNull final PsiClassType classType) {
+      public PsiType visitClassType(@NotNull PsiClassType classType) {
         if (!myVisited.add(classType)) return classType;
 
-        final PsiClassType.ClassResolveResult classResolveResult = classType.resolveGenerics();
-        final PsiClass psiClass = classResolveResult.getElement();
-        final PsiSubstitutor substitutor = classResolveResult.getSubstitutor();
+        PsiClassType.ClassResolveResult classResolveResult = classType.resolveGenerics();
+        PsiClass psiClass = classResolveResult.getElement();
+        PsiSubstitutor substitutor = classResolveResult.getSubstitutor();
         if (psiClass == null) return classType;
 
         return new PsiImmediateClassType(CompletionUtil.getOriginalOrSelf(psiClass), originalizeSubstitutor(substitutor));
       }
 
-      private PsiSubstitutor originalizeSubstitutor(final PsiSubstitutor substitutor) {
+      private @NotNull PsiSubstitutor originalizeSubstitutor(@NotNull PsiSubstitutor substitutor) {
         PsiSubstitutor originalSubstitutor = PsiSubstitutor.EMPTY;
-        for (final Map.Entry<PsiTypeParameter, PsiType> entry : substitutor.getSubstitutionMap().entrySet()) {
-          final PsiType value = entry.getValue();
+        for (Map.Entry<PsiTypeParameter, PsiType> entry : substitutor.getSubstitutionMap().entrySet()) {
+          PsiType value = entry.getValue();
           originalSubstitutor = originalSubstitutor.put(CompletionUtil.getOriginalOrSelf(entry.getKey()),
                                                         value == null ? null : mapType(value));
         }
         return originalSubstitutor;
       }
-
 
       @Override
       public PsiType visitType(@NotNull PsiType type) {
@@ -178,23 +257,20 @@ public final class JavaCompletionUtil {
     return result;
   }
 
-  @Nullable
-  public static List<? extends PsiElement> getAllPsiElements(final LookupElement item) {
+  public static @Nullable List<? extends PsiElement> getAllPsiElements(@NotNull LookupElement item) {
     List<PsiMethod> allMethods = getAllMethods(item);
     if (allMethods != null) return allMethods;
     if (item.getObject() instanceof PsiElement) return Collections.singletonList((PsiElement)item.getObject());
     return null;
   }
 
-  @Nullable
-  public static PsiType getLookupElementType(final LookupElement element) {
+  static @Nullable PsiType getLookupElementType(@NotNull LookupElement element) {
     TypedLookupItem typed = element.as(TypedLookupItem.CLASS_CONDITION_KEY);
     return typed != null ? typed.getType() : null;
   }
 
-  @Nullable
-  public static PsiType getQualifiedMemberReferenceType(@Nullable PsiType qualifierType, @NotNull final PsiMember member) {
-    final Ref<PsiSubstitutor> subst = Ref.create(PsiSubstitutor.EMPTY);
+  static @Nullable PsiType getQualifiedMemberReferenceType(@Nullable PsiType qualifierType, @NotNull PsiMember member) {
+    Ref<PsiSubstitutor> subst = Ref.create(PsiSubstitutor.EMPTY);
     class MyProcessor implements PsiScopeProcessor, NameHint, ElementClassHint {
       @Override
       public boolean execute(@NotNull PsiElement element, @NotNull ResolveState state) {
@@ -225,59 +301,22 @@ public final class JavaCompletionUtil {
 
     PsiScopesUtil.processTypeDeclarations(qualifierType, member, new MyProcessor());
 
-    PsiType rawType = member instanceof PsiField ? ((PsiField) member).getType() :
-                      member instanceof PsiMethod ? ((PsiMethod) member).getReturnType() :
+    PsiType rawType = member instanceof PsiField ? ((PsiField)member).getType() :
+                      member instanceof PsiMethod ? ((PsiMethod)member).getReturnType() :
                       JavaPsiFacade.getElementFactory(member.getProject()).createType((PsiClass)member);
     return subst.get().substitute(rawType);
   }
 
-  static Set<LookupElement> processJavaReference(PsiElement element,
-                                                 PsiJavaCodeReferenceElement javaReference,
-                                                 ElementFilter elementFilter,
-                                                 JavaCompletionProcessor.Options options,
-                                                 Condition<? super String> nameCondition,
-                                                 CompletionParameters parameters) {
-    PsiElement elementParent = element.getContext();
-    if (elementParent instanceof PsiReferenceExpression) {
-      final PsiExpression qualifierExpression = ((PsiReferenceExpression)elementParent).getQualifierExpression();
-      if (qualifierExpression instanceof PsiReferenceExpression) {
-        final PsiElement resolve = ((PsiReferenceExpression)qualifierExpression).resolve();
-        if (resolve instanceof PsiParameter) {
-          final PsiElement declarationScope = ((PsiParameter)resolve).getDeclarationScope();
-          if (((PsiParameter)resolve).getType() instanceof PsiLambdaParameterType) {
-            final PsiLambdaExpression lambdaExpression = (PsiLambdaExpression)declarationScope;
-            if (PsiTypesUtil.getExpectedTypeByParent(lambdaExpression) == null) {
-              final int parameterIndex = lambdaExpression.getParameterList().getParameterIndex((PsiParameter)resolve);
-              final Set<LookupElement> set = new LinkedHashSet<>();
-              final boolean overloadsFound = LambdaUtil.processParentOverloads(lambdaExpression, functionalInterfaceType -> {
-                PsiType qualifierType = LambdaUtil.getLambdaParameterFromType(functionalInterfaceType, parameterIndex);
-                if (qualifierType instanceof PsiWildcardType) {
-                  qualifierType = ((PsiWildcardType)qualifierType).getBound();
-                }
-                if (qualifierType == null) return;
+  static @NotNull Set<LookupElement> processJavaReference(@NotNull PsiElement element,
+                                                          @NotNull PsiJavaCodeReferenceElement javaReference,
+                                                          @NotNull ElementFilter elementFilter,
+                                                          @NotNull JavaCompletionProcessor.Options options,
+                                                          @NotNull Condition<? super String> nameCondition,
+                                                          @NotNull CompletionParameters parameters) {
+    Set<LookupElement> set = new LinkedHashSet<>();
 
-                PsiReferenceExpression fakeRef = createReference("xxx.xxx", createContextWithXxxVariable(element, qualifierType));
-                set.addAll(processJavaQualifiedReference(fakeRef.getReferenceNameElement(), fakeRef, elementFilter, options, nameCondition, parameters));
-              });
-              if (overloadsFound) return set;
-            }
-          }
-        }
-      }
-    }
-    return processJavaQualifiedReference(element, javaReference, elementFilter, options, nameCondition, parameters);
-  }
-
-  private static Set<LookupElement> processJavaQualifiedReference(PsiElement element,
-                                                                  PsiJavaCodeReferenceElement javaReference,
-                                                                  ElementFilter elementFilter,
-                                                                  JavaCompletionProcessor.Options options,
-                                                                  Condition<? super String> nameCondition,
-                                                                  CompletionParameters parameters) {
-    final Set<LookupElement> set = new LinkedHashSet<>();
-
-    final JavaCompletionProcessor processor = new JavaCompletionProcessor(element, elementFilter, options, nameCondition);
-    final PsiType plainQualifier = processor.getQualifierType();
+    JavaCompletionProcessor processor = new JavaCompletionProcessor(element, elementFilter, options, nameCondition);
+    PsiType plainQualifier = processor.getQualifierType();
 
     List<PsiType> runtimeQualifiers = getQualifierCastTypes(javaReference, parameters);
     if (!runtimeQualifiers.isEmpty()) {
@@ -292,20 +331,24 @@ public final class JavaCompletionUtil {
 
     List<PsiTypeLookupItem> castItems = ContainerUtil.map(runtimeQualifiers, q -> PsiTypeLookupItem.createLookupItem(q, element));
 
-    final boolean pkgContext = inSomePackage(element);
+    boolean pkgContext = inSomePackage(element);
 
     PsiClass qualifierClass = PsiUtil.resolveClassInClassTypeOnly(plainQualifier);
-    final boolean honorExcludes = qualifierClass == null || !isInExcludedPackage(qualifierClass, false);
+    boolean honorExcludes = qualifierClass == null || !isInExcludedPackage(qualifierClass, false);
 
     Set<PsiType> expectedTypes = ObjectUtils.coalesce(getExpectedTypes(parameters), Collections.emptySet());
 
-    final Set<PsiMember> mentioned = new THashSet<>();
+    Set<PsiMember> mentioned = new HashSet<>();
+    JavaLookupElementHighlighter highlighter = getHighlighterForPlace(element, parameters.getOriginalFile().getVirtualFile());
     for (CompletionElement completionElement : processor.getResults()) {
       for (LookupElement item : createLookupElements(completionElement, javaReference)) {
         item.putUserData(QUALIFIER_TYPE_ATTR, plainQualifier);
-        final Object o = item.getObject();
-        if (o instanceof PsiClass && !isSourceLevelAccessible(element, (PsiClass)o, pkgContext)) {
-          continue;
+        Object o = item.getObject();
+        if (o instanceof PsiClass) {
+          PsiClass specifiedQualifierClass = javaReference.isQualified() ? qualifierClass : ((PsiClass)o).getContainingClass();
+          if (!isSourceLevelAccessible(element, (PsiClass)o, pkgContext, specifiedQualifierClass)) {
+            continue;
+          }
         }
         if (o instanceof PsiMember) {
           if (honorExcludes && isInExcludedPackage((PsiMember)o, true)) {
@@ -315,13 +358,13 @@ public final class JavaCompletionUtil {
         }
         PsiTypeLookupItem qualifierCast = findQualifierCast(item, castItems, plainQualifier, processor, expectedTypes);
         if (qualifierCast != null) item = castQualifier(item, qualifierCast);
-        set.add(highlightIfNeeded(qualifierCast != null ? qualifierCast.getType() : plainQualifier, item, o, element));
+        set.add(highlighter.highlightIfNeeded(qualifierCast != null ? qualifierCast.getType() : plainQualifier, item, o));
       }
     }
 
     PsiElement refQualifier = javaReference.getQualifier();
     if (refQualifier == null && PsiTreeUtil.getParentOfType(element, PsiPackageStatement.class, PsiImportStatementBase.class) == null) {
-      final StaticMemberProcessor memberProcessor = new JavaStaticMemberProcessor(parameters);
+      StaticMemberProcessor memberProcessor = new JavaStaticMemberProcessor(parameters);
       memberProcessor.processMembersOfRegisteredClasses(nameCondition, (member, psiClass) -> {
         if (!mentioned.contains(member) && processor.satisfies(member, ResolveState.initial())) {
           ContainerUtil.addIfNotNull(set, memberProcessor.createLookupElement(member, psiClass, true));
@@ -335,18 +378,15 @@ public final class JavaCompletionUtil {
     return set;
   }
 
-  @NotNull
-  static PsiReferenceExpression createReference(@NotNull String text, @NotNull PsiElement context) {
-    return (PsiReferenceExpression) JavaPsiFacade.getElementFactory(context.getProject()).createExpressionFromText(text, context);
+  static @NotNull PsiReferenceExpression createReference(@NotNull String text, @NotNull PsiElement context) {
+    return (PsiReferenceExpression)JavaPsiFacade.getElementFactory(context.getProject()).createExpressionFromText(text, context);
   }
 
-  @NotNull
-  private static List<PsiType> getQualifierCastTypes(PsiJavaReference javaReference, CompletionParameters parameters) {
-    if (javaReference instanceof PsiReferenceExpression) {
-      final PsiReferenceExpression refExpr = (PsiReferenceExpression)javaReference;
-      final PsiExpression qualifier = refExpr.getQualifierExpression();
+  private static @NotNull List<PsiType> getQualifierCastTypes(PsiJavaReference javaReference, @NotNull CompletionParameters parameters) {
+    if (javaReference instanceof PsiReferenceExpression refExpr) {
+      PsiExpression qualifier = refExpr.getQualifierExpression();
       if (qualifier != null) {
-        final Project project = qualifier.getProject();
+        Project project = qualifier.getProject();
         PairFunction<PsiExpression, CompletionParameters, PsiType> evaluator = refExpr.getContainingFile().getCopyableUserData(DYNAMIC_TYPE_EVALUATOR);
         if (evaluator != null) {
           PsiType type = evaluator.fun(qualifier, parameters);
@@ -361,74 +401,70 @@ public final class JavaCompletionUtil {
     return Collections.emptyList();
   }
 
-  private static boolean shouldCast(@NotNull LookupElement item,
-                                    @NotNull PsiTypeLookupItem castTypeItem,
-                                    @Nullable PsiType plainQualifier,
-                                    @NotNull JavaCompletionProcessor processor,
-                                    @NotNull Set<? extends PsiType> expectedTypes) {
-    PsiType castType = castTypeItem.getType();
+  public static boolean shouldCast(@Nullable PsiType plainQualifier,
+                                   @NotNull JavaCompletionProcessor processor,
+                                   @NotNull Set<? extends PsiType> expectedTypes,
+                                   PsiType castType,
+                                   @NotNull PsiMember member) {
     if (plainQualifier != null) {
-      Object o = item.getObject();
-      if (o instanceof PsiMethod) {
-        if (plainQualifier instanceof PsiClassType && castType instanceof PsiClassType) {
-          PsiMethod method = (PsiMethod)o;
-          PsiClassType.ClassResolveResult plainResult = ((PsiClassType)plainQualifier).resolveGenerics();
-          PsiClass plainClass = plainResult.getElement();
-          HierarchicalMethodSignature signature = method.getHierarchicalMethodSignature();
-          PsiMethod plainMethod = plainClass == null ? null :
-                                  StreamEx.ofTree(signature, s -> StreamEx.of(s.getSuperSignatures()))
-                                          .map(sig -> MethodSignatureUtil.findMethodBySignature(plainClass, sig, true))
-                                          .filter(Objects::nonNull)
-                                          .findFirst().orElse(null);
-          if (plainMethod != null) {
-            PsiClassType.ClassResolveResult castResult = ((PsiClassType)castType).resolveGenerics();
-            PsiClass castClass = castResult.getElement();
+      if (member instanceof PsiMethod method &&
+          plainQualifier instanceof PsiClassType classQualifier &&
+          castType instanceof PsiClassType classCastType) {
+        PsiClassType.ClassResolveResult plainResult = classQualifier.resolveGenerics();
+        PsiClass plainClass = plainResult.getElement();
+        HierarchicalMethodSignature signature = method.getHierarchicalMethodSignature();
+        PsiMethod plainMethod = plainClass == null ? null :
+                                StreamEx.ofTree(signature, s -> StreamEx.of(s.getSuperSignatures()))
+                                .map(sig -> MethodSignatureUtil.findMethodBySignature(plainClass, sig, true))
+                                .filter(Objects::nonNull)
+                                .findFirst().orElse(null);
+        if (plainMethod != null) {
+          PsiClassType.ClassResolveResult castResult = classCastType.resolveGenerics();
+          PsiClass castClass = castResult.getElement();
 
-            if (castClass == null || !castClass.isInheritor(plainClass, true)) {
-              return false;
-            }
-
-            if (!processor.isAccessible(plainMethod)) {
-              return true;
-            }
-
-            PsiSubstitutor castSub = TypeConversionUtil.getSuperClassSubstitutor(plainClass, (PsiClassType)castType);
-            PsiType typeAfterCast = toRaw(castSub.substitute(method.getReturnType()));
-            PsiType typeDeclared = toRaw(plainResult.getSubstitutor().substitute(plainMethod.getReturnType()));
-            return typeAfterCast != null && typeDeclared != null &&
-                   !typeAfterCast.equals(typeDeclared) &&
-                   expectedTypes.stream().anyMatch(et -> et.isAssignableFrom(typeAfterCast) && !et.isAssignableFrom(typeDeclared));
+          if (castClass == null || !castClass.isInheritor(plainClass, true)) {
+            return false;
           }
+
+          if (!processor.isAccessible(plainMethod)) {
+            return true;
+          }
+
+          PsiSubstitutor castSub = TypeConversionUtil.getSuperClassSubstitutor(plainClass, classCastType);
+          PsiType typeAfterCast = toRaw(castSub.substitute(method.getReturnType()));
+          PsiType typeDeclared = toRaw(plainResult.getSubstitutor().substitute(plainMethod.getReturnType()));
+          return typeAfterCast != null && typeDeclared != null &&
+                 !typeAfterCast.equals(typeDeclared) &&
+                 ContainerUtil.exists(expectedTypes, et -> et.isAssignableFrom(typeAfterCast) && !et.isAssignableFrom(typeDeclared));
         }
       }
 
-      return containsMember(castType, o, true) && !containsMember(plainQualifier, o, true);
+      return containsMember(castType, member, true) && !containsMember(plainQualifier, member, true);
     }
     return false;
   }
 
-  @NotNull
-  private static LookupElement castQualifier(@NotNull LookupElement item, @NotNull PsiTypeLookupItem castTypeItem) {
+  private static @NotNull LookupElement castQualifier(@NotNull LookupElement item, @NotNull PsiTypeLookupItem castTypeItem) {
     return new LookupElementDecorator<>(item) {
       @Override
       public void handleInsert(@NotNull InsertionContext context) {
-        final Document document = context.getEditor().getDocument();
+        Document document = context.getEditor().getDocument();
         context.commitDocument();
-        final PsiFile file = context.getFile();
-        final PsiJavaCodeReferenceElement ref =
+        PsiFile file = context.getFile();
+        PsiJavaCodeReferenceElement ref =
           PsiTreeUtil.findElementOfClassAtOffset(file, context.getStartOffset(), PsiJavaCodeReferenceElement.class, false);
         if (ref != null) {
-          final PsiElement qualifier = ref.getQualifier();
+          PsiElement qualifier = ref.getQualifier();
           if (qualifier != null) {
-            final CommonCodeStyleSettings settings = CompletionStyleUtil.getCodeStyleSettings(context);
+            CommonCodeStyleSettings settings = CompletionStyleUtil.getCodeStyleSettings(context);
 
-            final String parenSpace = settings.SPACE_WITHIN_PARENTHESES ? " " : "";
+            String parenSpace = settings.SPACE_WITHIN_PARENTHESES ? " " : "";
             document.insertString(qualifier.getTextRange().getEndOffset(), parenSpace + ")");
 
-            final String spaceWithin = settings.SPACE_WITHIN_CAST_PARENTHESES ? " " : "";
-            final String prefix = "(" + parenSpace + "(" + spaceWithin;
-            final String spaceAfter = settings.SPACE_AFTER_TYPE_CAST ? " " : "";
-            final int exprStart = qualifier.getTextRange().getStartOffset();
+            String spaceWithin = settings.SPACE_WITHIN_CAST_PARENTHESES ? " " : "";
+            String prefix = "(" + parenSpace + "(" + spaceWithin;
+            String spaceAfter = settings.SPACE_AFTER_TYPE_CAST ? " " : "";
+            int exprStart = qualifier.getTextRange().getStartOffset();
             document.insertString(exprStart, prefix + spaceWithin + ")" + spaceAfter);
 
             CompletionUtil.emulateInsertion(context, exprStart + prefix.length(), castTypeItem);
@@ -441,7 +477,7 @@ public final class JavaCompletionUtil {
       }
 
       @Override
-      public void renderElement(LookupElementPresentation presentation) {
+      public void renderElement(@NotNull LookupElementPresentation presentation) {
         super.renderElement(presentation);
 
         presentation.appendTailText(" on " + castTypeItem.getType().getPresentableText(), true);
@@ -450,55 +486,99 @@ public final class JavaCompletionUtil {
   }
 
   private static PsiTypeLookupItem findQualifierCast(@NotNull LookupElement item,
-                                                     @NotNull List<? extends PsiTypeLookupItem> castTypeItems,
-                                                     @Nullable PsiType plainQualifier, JavaCompletionProcessor processor, Set<? extends PsiType> expectedTypes) {
-    return ContainerUtil.find(castTypeItems, c -> shouldCast(item, c, plainQualifier, processor, expectedTypes));
+                                                     @NotNull List<PsiTypeLookupItem> castTypeItems,
+                                                     @Nullable PsiType plainQualifier,
+                                                     JavaCompletionProcessor processor,
+                                                     Set<? extends PsiType> expectedTypes) {
+    PsiMember member = ObjectUtils.tryCast(item.getObject(), PsiMember.class);
+    if (member == null) return null;
+    return ContainerUtil.find(castTypeItems, c -> {
+      PsiType castType = c.getType();
+      return shouldCast(plainQualifier, processor, expectedTypes, castType, member);
+    });
   }
 
-  @Nullable
-  private static PsiType toRaw(@Nullable PsiType type) {
+  private static @Nullable PsiType toRaw(@Nullable PsiType type) {
     return type instanceof PsiClassType ? ((PsiClassType)type).rawType() : type;
   }
 
-  @NotNull
-  public static LookupElement highlightIfNeeded(@Nullable PsiType qualifierType,
-                                                @NotNull LookupElement item,
-                                                @NotNull Object object,
-                                                @NotNull PsiElement place) {
-    if (shouldMarkRed(object, place)) {
-      return PrioritizedLookupElement.withExplicitProximity(LookupElementDecorator.withRenderer(item, new LookupElementRenderer<>() {
-        @Override
-        public void renderElement(LookupElementDecorator<LookupElement> element, LookupElementPresentation presentation) {
-          element.getDelegate().renderElement(presentation);
-          presentation.setItemTextForeground(JBColor.RED);
-        }
-      }), -1);
+  static class JavaLookupElementHighlighter {
+    private final @NotNull PsiElement myPlace;
+    private final @Nullable VirtualFile myOriginalFile;
+    private final @NotNull LanguageLevel myLanguageLevel;
+    private final @NotNull Set<PsiField> myConstantsUsedInSwitch;
+
+    JavaLookupElementHighlighter(@NotNull PsiElement place, @Nullable VirtualFile originalFile) {
+      myPlace = place;
+      myOriginalFile = originalFile;
+      myLanguageLevel = PsiUtil.getLanguageLevel(myPlace);
+      myConstantsUsedInSwitch = findConstantsUsedInSwitch(myPlace);
     }
-    if (containsMember(qualifierType, object, false) && !qualifierType.equalsToText(CommonClassNames.JAVA_LANG_OBJECT)) {
-      LookupElementDecorator<LookupElement> bold = LookupElementDecorator.withRenderer(item, new LookupElementRenderer<>() {
-        @Override
-        public void renderElement(LookupElementDecorator<LookupElement> element, LookupElementPresentation presentation) {
-          element.getDelegate().renderElement(presentation);
-          presentation.setItemTextBold(true);
-        }
-      });
-      return object instanceof PsiField ? bold : PrioritizedLookupElement.withExplicitProximity(bold, 1);
+
+    @NotNull
+    LookupElement highlightIfNeeded(@Nullable PsiType qualifierType, @NotNull LookupElement item, @NotNull Object object) {
+      LookupElement element = generateLookupElementDecorator(qualifierType, object, presentationDecorator ->
+        LookupElementDecorator.withRenderer(item, new LookupElementRenderer<>() {
+          @Override
+          public void renderElement(@NotNull LookupElementDecorator<LookupElement> element, @NotNull LookupElementPresentation presentation) {
+            element.getDelegate().renderElement(presentation);
+            presentationDecorator.accept(presentation);
+          }
+        }));
+      return element == null ? item : element;
     }
-    return item;
+
+    private @Nullable LookupElement generateLookupElementDecorator(@Nullable PsiType qualifierType, @NotNull Object object,
+                                                                   @NotNull Function<Consumer<LookupElementPresentation>, LookupElementDecorator<LookupElement>> generator) {
+      if (object instanceof PsiMember) {
+        if (JdkApiCompatibilityService.getInstance().firstCompatibleLanguageLevel((PsiMember)object, myLanguageLevel) != null) {
+          LookupElementDecorator<LookupElement> element = generator.apply(presentation -> presentation.setItemTextForeground(JBColor.RED));
+          return PrioritizedLookupElement.withExplicitProximity(element, -1);
+        }
+        if (object instanceof PsiEnumConstant psiEnumConstant &&
+            myConstantsUsedInSwitch.contains(CompletionUtil.getOriginalOrSelf(psiEnumConstant))) {
+          LookupElementDecorator<LookupElement> element = generator.apply(presentation -> presentation.setItemTextForeground(JBColor.RED));
+          return PrioritizedLookupElement.withExplicitProximity(element, -1);
+        }
+        if (object instanceof PsiClass psiClass) {
+          if (ReferenceListWeigher.INSTANCE.getApplicability(psiClass, myPlace) == inapplicable) {
+            LookupElementDecorator<LookupElement> element = generator.apply(presentation -> presentation.setItemTextForeground(JBColor.RED));
+            return PrioritizedLookupElement.withExplicitProximity(element, -1);
+          }
+          if (PsiUtil.isAvailable(JavaFeature.MODULES, myPlace)) {
+            final PsiJavaModule currentModule =
+              ReadAction.compute(() -> JavaPsiModuleUtil.findDescriptorByFile(myOriginalFile, myPlace.getProject()));
+            if (currentModule != null) {
+              final PsiJavaModule targetModule = ReadAction.compute(() -> JavaPsiModuleUtil.findDescriptorByElement(psiClass));
+              if (targetModule != null && targetModule != currentModule &&
+                  !JavaPsiModuleUtil.reads(currentModule, targetModule)) {
+                LookupElementDecorator<LookupElement> element = generator.apply(presentation -> presentation.setItemTextForeground(JBColor.RED));
+                return PrioritizedLookupElement.withExplicitProximity(element, -1);
+              }
+            }
+          }
+        }
+      }
+      if (containsMember(qualifierType, object, false) && !qualifierType.equalsToText(CommonClassNames.JAVA_LANG_OBJECT)) {
+        LookupElementDecorator<LookupElement> element = generator.apply(presentation -> presentation.setItemTextBold(true));
+        return object instanceof PsiField ? element : PrioritizedLookupElement.withExplicitProximity(element, 1);
+      }
+      return null;
+    }
   }
 
-  private static boolean shouldMarkRed(@NotNull Object object, @NotNull PsiElement place) {
-    if (!(object instanceof PsiMember)) return false;
-    if (Java15APIUsageInspection.getLastIncompatibleLanguageLevel((PsiMember)object, PsiUtil.getLanguageLevel(place)) != null) return true;
-
-    if (object instanceof PsiEnumConstant) {
-      return findConstantsUsedInSwitch(place).contains(CompletionUtil.getOriginalOrSelf((PsiEnumConstant)object));
-    }
-    if (object instanceof PsiClass && ReferenceListWeigher.INSTANCE.getApplicability((PsiClass)object, place) == inapplicable) {
-      return true;
-    }
-    return false;
+  static @NotNull JavaLookupElementHighlighter getHighlighterForPlace(@NotNull PsiElement place, @Nullable VirtualFile originalFile) {
+    return new JavaLookupElementHighlighter(place, originalFile);
   }
+
+  public static @NotNull LookupElement highlightIfNeeded(@Nullable PsiType qualifierType,
+                                                         @Nullable VirtualFile originalFile,
+                                                         @NotNull LookupElement item,
+                                                         @NotNull Object object,
+                                                         @NotNull PsiElement place) {
+    return getHighlighterForPlace(place, originalFile).highlightIfNeeded(qualifierType, item, object);
+  }
+
 
   @Contract("null, _, _ -> false")
   private static boolean containsMember(@Nullable PsiType qualifierType, @NotNull Object object, boolean checkBases) {
@@ -506,9 +586,8 @@ public final class JavaCompletionUtil {
 
     if (qualifierType instanceof PsiArrayType) { //length and clone()
       PsiFile file = ((PsiMember)object).getContainingFile();
-      if (file == null || file.getVirtualFile() == null) { //yes, they're a bit dummy
-        return true;
-      }
+      //yes, they're a bit dummy
+      return file == null || file.getVirtualFile() == null;
     }
     else if (qualifierType instanceof PsiClassType) {
       PsiClass qualifierClass = ((PsiClassType)qualifierType).resolve();
@@ -522,7 +601,7 @@ public final class JavaCompletionUtil {
     return false;
   }
 
-  static Iterable<? extends LookupElement> createLookupElements(CompletionElement completionElement, PsiJavaReference reference) {
+  static @Unmodifiable @NotNull Iterable<? extends LookupElement> createLookupElements(@NotNull CompletionElement completionElement, @NotNull PsiJavaReference reference) {
     Object completion = completionElement.getElement();
     assert !(completion instanceof LookupElement);
 
@@ -560,23 +639,27 @@ public final class JavaCompletionUtil {
       return Collections.singletonList(item);
     }
     if (completion instanceof PsiVariable) {
-      return Collections.singletonList(new VariableLookupItem((PsiVariable)completion).setSubstitutor(substitutor).qualifyIfNeeded(reference));
+      if (completion instanceof PsiEnumConstant enumConstant &&
+          PsiTreeUtil.isAncestor(enumConstant.getArgumentList(), reference.getElement(), true)) {
+        return Collections.emptyList();
+      }
+      return Collections.singletonList(new VariableLookupItem((PsiVariable)completion).setSubstitutor(substitutor).qualifyIfNeeded(reference, null));
     }
     if (completion instanceof PsiPackage) {
       return Collections.singletonList(new PackageLookupItem((PsiPackage)completion, reference.getElement()));
     }
 
-    return Collections.singletonList(LookupItemUtil.objectToLookupItem(completion));
+    return List.of();
   }
 
   public static boolean hasAccessibleConstructor(@NotNull PsiType type, @NotNull PsiElement place) {
     if (type instanceof PsiArrayType) return true;
 
-    final PsiClass psiClass = PsiUtil.resolveClassInType(type);
+    PsiClass psiClass = PsiUtil.resolveClassInType(type);
     if (psiClass == null || psiClass.isEnum() || psiClass.isAnnotationType()) return false;
 
     PsiMethod[] methods = psiClass.getConstructors();
-    return methods.length == 0 || Arrays.stream(methods).anyMatch(constructor -> isConstructorCompletable(constructor, place));
+    return methods.length == 0 || ContainerUtil.exists(methods, constructor -> isConstructorCompletable(constructor, place));
   }
 
   private static boolean isConstructorCompletable(@NotNull PsiMethod constructor, @NotNull PsiElement place) {
@@ -592,13 +675,13 @@ public final class JavaCompletionUtil {
     allLookupStrings.add(name);
     PsiClass containingClass = member.getContainingClass();
     while (containingClass != null) {
-      final String className = containingClass.getName();
+      String className = containingClass.getName();
       if (className == null) {
         break;
       }
       name = className + "." + name;
       allLookupStrings.add(name);
-      final PsiElement parent = containingClass.getParent();
+      PsiElement parent = containingClass.getParent();
       if (!(parent instanceof PsiClass)) {
         break;
       }
@@ -607,7 +690,7 @@ public final class JavaCompletionUtil {
     return allLookupStrings;
   }
 
-  public static boolean mayHaveSideEffects(@Nullable final PsiElement element) {
+  public static boolean mayHaveSideEffects(@Nullable PsiElement element) {
     return element instanceof PsiExpression && SideEffectChecker.mayHaveSideEffects((PsiExpression)element);
   }
 
@@ -616,16 +699,15 @@ public final class JavaCompletionUtil {
   }
 
   public static int insertClassReference(PsiClass psiClass, PsiFile file, int startOffset, int endOffset) {
-    final Project project = file.getProject();
+    Project project = file.getProject();
     PsiDocumentManager documentManager = PsiDocumentManager.getInstance(project);
-    documentManager.commitAllDocuments();
+    Document document = file.getFileDocument();
+    documentManager.commitDocument(document);
 
-    final PsiManager manager = file.getManager();
-
-    final Document document = FileDocumentManager.getInstance().getDocument(file.getViewProvider().getVirtualFile());
+    PsiManager manager = file.getManager();
 
     PsiReference reference = file.findReferenceAt(startOffset);
-    if (reference != null && manager.areElementsEquivalent(psiClass, reference.resolve())) {
+    if (reference != null && manager.areElementsEquivalent(psiClass, resolve(project, reference))) {
       return endOffset;
     }
 
@@ -648,55 +730,54 @@ public final class JavaCompletionUtil {
     document.replaceString(startOffset, endOffset, name);
 
     int newEndOffset = startOffset + name.length();
-    final RangeMarker toDelete = insertTemporary(newEndOffset, document, " ");
+    RangeMarker toDelete = insertTemporary(newEndOffset, document, " ");
 
-    documentManager.commitAllDocuments();
+    documentManager.commitDocument(document);
 
     PsiElement element = file.findElementAt(startOffset);
     if (element instanceof PsiIdentifier) {
       PsiElement parent = element.getParent();
-      if (parent instanceof PsiJavaCodeReferenceElement &&
-          !((PsiJavaCodeReferenceElement)parent).isQualified() &&
-          !(parent.getParent() instanceof PsiPackageStatement)) {
-        PsiJavaCodeReferenceElement ref = (PsiJavaCodeReferenceElement)parent;
+      if (parent instanceof PsiJavaCodeReferenceElement ref && !ref.isQualified() &&
+          !(parent.getParent() instanceof PsiPackageStatement) && psiClass.isValid() &&
+          !psiClass.getManager().areElementsEquivalent(psiClass, resolveReference(ref))) {
+        boolean staticImport = ref instanceof PsiImportStaticReferenceElement;
+        PsiElement newElement;
+        try {
+          newElement = staticImport
+                       ? ((PsiImportStaticReferenceElement)ref).bindToTargetClass(psiClass)
+                       : ref.bindToElement(psiClass);
+        }
+        catch (IncorrectOperationException e) {
+          return endOffset; // can happen if fqn contains reserved words, for example
+        }
+        SmartPsiElementPointer<PsiClass> classPointer = SmartPointerManager.createPointer(psiClass);
 
-        if (psiClass.isValid() && !psiClass.getManager().areElementsEquivalent(psiClass, resolveReference(ref))) {
-          final boolean staticImport = ref instanceof PsiImportStaticReferenceElement;
-          PsiElement newElement;
-          try {
-            newElement = staticImport
-                                    ? ((PsiImportStaticReferenceElement)ref).bindToTargetClass(psiClass)
-                                    : ref.bindToElement(psiClass);
-          }
-          catch (IncorrectOperationException e) {
-            return endOffset; // can happen if fqn contains reserved words, for example
-          }
+        RangeMarker rangeMarker = document.createRangeMarker(newElement.getTextRange());
+        documentManager.doPostponedOperationsAndUnblockDocument(document);
+        documentManager.commitDocument(document);
 
-          final RangeMarker rangeMarker = document.createRangeMarker(newElement.getTextRange());
-          documentManager.doPostponedOperationsAndUnblockDocument(document);
-          documentManager.commitDocument(document);
-
-          newElement = CodeInsightUtilCore.findElementInRange(file, rangeMarker.getStartOffset(), rangeMarker.getEndOffset(),
-                                                              PsiJavaCodeReferenceElement.class,
-                                                              JavaLanguage.INSTANCE);
-          rangeMarker.dispose();
-          if (newElement != null) {
-            newEndOffset = newElement.getTextRange().getEndOffset();
-            if (!(newElement instanceof PsiReferenceExpression)) {
-              PsiReferenceParameterList parameterList = ((PsiJavaCodeReferenceElement)newElement).getParameterList();
-              if (parameterList != null) {
-                newEndOffset = parameterList.getTextRange().getStartOffset();
-              }
+        newElement = CodeInsightUtilCore.findElementInRange(file, rangeMarker.getStartOffset(), rangeMarker.getEndOffset(),
+                                                            PsiJavaCodeReferenceElement.class,
+                                                            JavaLanguage.INSTANCE);
+        rangeMarker.dispose();
+        if (newElement != null) {
+          newEndOffset = newElement.getTextRange().getEndOffset();
+          if (!(newElement instanceof PsiReferenceExpression)) {
+            PsiReferenceParameterList parameterList = ((PsiJavaCodeReferenceElement)newElement).getParameterList();
+            if (parameterList != null) {
+              newEndOffset = parameterList.getTextRange().getStartOffset();
             }
+          }
+          psiClass = classPointer.getElement();
 
-            if (!staticImport &&
-                !psiClass.getManager().areElementsEquivalent(psiClass, resolveReference((PsiReference)newElement)) &&
-                !PsiUtil.isInnerClass(psiClass)) {
-              final String qName = psiClass.getQualifiedName();
-              if (qName != null) {
-                document.replaceString(newElement.getTextRange().getStartOffset(), newEndOffset, qName);
-                newEndOffset = newElement.getTextRange().getStartOffset() + qName.length();
-              }
+          if (!staticImport &&
+              psiClass != null &&
+              !psiClass.getManager().areElementsEquivalent(psiClass, resolveReference((PsiReference)newElement)) &&
+              !PsiUtil.isInnerClass(psiClass)) {
+            String qName = psiClass.getQualifiedName();
+            if (qName != null) {
+              document.replaceString(newElement.getTextRange().getStartOffset(), newEndOffset, qName);
+              newEndOffset = newElement.getTextRange().getStartOffset() + qName.length();
             }
           }
         }
@@ -710,19 +791,23 @@ public final class JavaCompletionUtil {
     return newEndOffset;
   }
 
-  @Nullable
-  static PsiElement resolveReference(final PsiReference psiReference) {
-    if (psiReference instanceof PsiPolyVariantReference) {
-      final ResolveResult[] results = ((PsiPolyVariantReference)psiReference).multiResolve(true);
-      if (results.length == 1) return results[0].getElement();
-    }
-    return psiReference.resolve();
+  private static @Nullable PsiElement resolve(Project project, PsiReference reference) {
+    return DumbService.getInstance(project).computeWithAlternativeResolveEnabled(reference::resolve);
   }
 
-  @Nullable
-  public static RangeMarker insertTemporary(int endOffset, Document document, String temporary) {
-    final CharSequence chars = document.getCharsSequence();
-    if (endOffset < chars.length() && Character.isJavaIdentifierPart(chars.charAt(endOffset))){
+  static @Nullable PsiElement resolveReference(PsiReference psiReference) {
+    return DumbService.getInstance(psiReference.getElement().getProject()).computeWithAlternativeResolveEnabled(() -> {
+      if (psiReference instanceof PsiPolyVariantReference) {
+        ResolveResult[] results = ((PsiPolyVariantReference)psiReference).multiResolve(true);
+        if (results.length == 1) return results[0].getElement();
+      }
+      return psiReference.resolve();
+    });
+  }
+
+  public static @Nullable RangeMarker insertTemporary(int endOffset, Document document, String temporary) {
+    CharSequence chars = document.getCharsSequence();
+    if (endOffset < chars.length() && Character.isJavaIdentifierPart(chars.charAt(endOffset))) {
       document.insertString(endOffset, temporary);
       RangeMarker toDelete = document.createRangeMarker(endOffset, endOffset + 1);
       toDelete.setGreedyToLeft(true);
@@ -736,130 +821,15 @@ public final class JavaCompletionUtil {
                                        @NotNull LookupElement item,
                                        boolean overloadsMatter,
                                        boolean hasParams) {
-    insertParentheses(context, item, overloadsMatter, ThreeState.fromBoolean(hasParams), false);
-  }
-
-  public static void insertParentheses(@NotNull InsertionContext context,
-                                       @NotNull LookupElement item,
-                                       boolean overloadsMatter,
-                                       ThreeState hasParams, // UNSURE if providing no arguments is a valid situation
-                                       final boolean forceClosingParenthesis) {
-    final Editor editor = context.getEditor();
-    final char completionChar = context.getCompletionChar();
-    final PsiFile file = context.getFile();
-
-    final TailType tailType = completionChar == '(' ? TailType.NONE :
-                              completionChar == ':' ? TailType.COND_EXPR_COLON :
-                              LookupItem.handleCompletionChar(context.getEditor(), item, completionChar);
-    final boolean hasTail = tailType != TailType.NONE && tailType != TailType.UNKNOWN;
-    final boolean smart = completionChar == Lookup.COMPLETE_STATEMENT_SELECT_CHAR;
-
-    if (completionChar == '(' || completionChar == '.' || completionChar == ',' || completionChar == ';' || completionChar == ':' || completionChar == ' ') {
-      context.setAddCompletionChar(false);
-    }
-
-    if (hasTail) {
-      hasParams = ThreeState.NO;
-    }
-    final boolean needRightParenth = forceClosingParenthesis ||
-                                     !smart && (CodeInsightSettings.getInstance().AUTOINSERT_PAIR_BRACKET ||
-                                                hasParams == ThreeState.NO && completionChar != '(');
-
-    context.commitDocument();
-
-    final CommonCodeStyleSettings styleSettings = CompletionStyleUtil.getCodeStyleSettings(context);
-    final PsiElement elementAt = file.findElementAt(context.getStartOffset());
-    if (elementAt == null || !(elementAt.getParent() instanceof PsiMethodReferenceExpression)) {
-      ThreeState hasParameters = hasParams;
-      boolean spaceBetweenParentheses = hasParams == ThreeState.YES && styleSettings.SPACE_WITHIN_METHOD_CALL_PARENTHESES ||
-                                        hasParams == ThreeState.UNSURE && styleSettings.SPACE_WITHIN_EMPTY_METHOD_CALL_PARENTHESES;
-      new ParenthesesInsertHandler<>(styleSettings.SPACE_BEFORE_METHOD_CALL_PARENTHESES, spaceBetweenParentheses,
-                                     needRightParenth, styleSettings.METHOD_PARAMETERS_LPAREN_ON_NEXT_LINE) {
-        @Override
-        protected boolean placeCaretInsideParentheses(InsertionContext context1, LookupElement item1) {
-          return hasParameters != ThreeState.NO;
-        }
-
-        @Override
-        protected PsiElement findExistingLeftParenthesis(@NotNull InsertionContext context) {
-          PsiElement token = super.findExistingLeftParenthesis(context);
-          return isPartOfLambda(token) ? null : token;
-        }
-
-        private boolean isPartOfLambda(PsiElement token) {
-          return token != null && token.getParent() instanceof PsiExpressionList &&
-                 PsiUtilCore.getElementType(PsiTreeUtil.nextVisibleLeaf(token.getParent())) == JavaTokenType.ARROW;
-        }
-      }.handleInsert(context, item);
-    }
-
-    if (hasParams != ThreeState.NO) {
-      // Invoke parameters popup
-      AutoPopupController.getInstance(file.getProject()).autoPopupParameterInfo(editor, overloadsMatter ? null : (PsiElement)item.getObject());
-    }
-
-    if (smart || !needRightParenth || !insertTail(context, item, tailType, hasTail)) {
-      return;
-    }
-
-    if (completionChar == '.') {
-      AutoPopupController.getInstance(file.getProject()).autoPopupMemberLookup(context.getEditor(), null);
-    } else if (completionChar == ',') {
-      AutoPopupController.getInstance(file.getProject()).autoPopupParameterInfo(context.getEditor(), null);
-    }
-  }
-
-  private static boolean insertTail(InsertionContext context, LookupElement item, TailType tailType, boolean hasTail) {
-    TailType toInsert = tailType;
-    LookupItem<?> lookupItem = item.as(LookupItem.CLASS_CONDITION_KEY);
-    if (lookupItem == null || lookupItem.getAttribute(LookupItem.TAIL_TYPE_ATTR) != TailType.UNKNOWN) {
-      if (!hasTail && item.getObject() instanceof PsiMethod && PsiType.VOID.equals(((PsiMethod)item.getObject()).getReturnType())) {
-        PsiDocumentManager.getInstance(context.getProject()).commitAllDocuments();
-        if (psiElement().beforeLeaf(psiElement().withText(".")).accepts(context.getFile().findElementAt(context.getTailOffset() - 1))) {
-          return false;
-        }
-
-        boolean insertAdditionalSemicolon = true;
-        PsiElement leaf = context.getFile().findElementAt(context.getStartOffset());
-        PsiElement composite = leaf == null ? null : leaf.getParent();
-        if (composite instanceof PsiReferenceExpression) {
-          PsiElement parent = composite.getParent();
-          if (parent instanceof PsiMethodCallExpression) {
-            parent = parent.getParent();
-          }
-          if (parent instanceof PsiLambdaExpression && !LambdaHighlightingUtil.insertSemicolonAfter((PsiLambdaExpression)parent)) {
-            insertAdditionalSemicolon = false;
-          }
-        }
-        if (insertAdditionalSemicolon) {
-          toInsert = TailType.SEMICOLON;
-        }
-
-      }
-    }
-    Editor editor = context.getEditor();
-    int tailOffset = context.getTailOffset();
-    int afterTailOffset = toInsert.processTail(editor, tailOffset);
-    int caretOffset = editor.getCaretModel().getOffset();
-    if (afterTailOffset > tailOffset &&
-        tailOffset > caretOffset &&
-        TabOutScopesTracker.getInstance().removeScopeEndingAt(editor, caretOffset) > 0) {
-      TabOutScopesTracker.getInstance().registerEmptyScope(editor, caretOffset, afterTailOffset);
-    }
-    return true;
+    var isVoidMethod = item.getObject() instanceof PsiMethod && PsiTypes.voidType().equals(((PsiMethod)item.getObject()).getReturnType());
+    JavaFrontendCompletionUtil.insertParentheses(context, item, overloadsMatter, ThreeState.fromBoolean(hasParams), false, isVoidMethod);
   }
 
   //need to shorten references in type argument list
-  public static void shortenReference(final PsiFile file, final int offset) throws IncorrectOperationException {
+  public static void shortenReference(PsiFile file, int offset) throws IncorrectOperationException {
     Project project = file.getProject();
-    final PsiDocumentManager manager = PsiDocumentManager.getInstance(project);
-    Document document = manager.getDocument(file);
-    if (document == null) {
-      PsiUtilCore.ensureValid(file);
-      LOG.error("No document for " + file);
-      return;
-    }
-
+    PsiDocumentManager manager = PsiDocumentManager.getInstance(project);
+    Document document = file.getFileDocument();
     manager.commitDocument(document);
     PsiReference ref = file.findReferenceAt(offset);
     if (ref != null) {
@@ -868,13 +838,26 @@ public final class JavaCompletionUtil {
     }
   }
 
-  public static boolean inSomePackage(PsiElement context) {
+  /**
+   * @param context element from Java file
+   * @return true if the element is located not in the unnamed package
+   */
+  public static boolean inSomePackage(@NotNull PsiElement context) {
     PsiFile contextFile = context.getContainingFile();
-    return contextFile instanceof PsiClassOwner && StringUtil.isNotEmpty(((PsiClassOwner)contextFile).getPackageName());
+    return contextFile instanceof PsiClassOwner owner && StringUtil.isNotEmpty(owner.getPackageName());
   }
 
-  public static boolean isSourceLevelAccessible(PsiElement context, PsiClass psiClass, final boolean pkgContext) {
-    if (!JavaPsiFacade.getInstance(psiClass.getProject()).getResolveHelper().isAccessible(psiClass, context, psiClass.getContainingClass())) {
+  static boolean isSourceLevelAccessible(@NotNull PsiElement context,
+                                         @NotNull PsiClass psiClass,
+                                         boolean pkgContext) {
+    return isSourceLevelAccessible(context, psiClass, pkgContext, psiClass.getContainingClass());
+  }
+
+  public static boolean isSourceLevelAccessible(PsiElement context,
+                                                 @NotNull PsiClass psiClass,
+                                                 boolean pkgContext,
+                                                 @Nullable PsiClass qualifierClass) {
+    if (!JavaPsiFacade.getInstance(psiClass.getProject()).getResolveHelper().isAccessible(psiClass, context, qualifierClass)) {
       return false;
     }
 
@@ -882,9 +865,10 @@ public final class JavaCompletionUtil {
       PsiClass topLevel = PsiUtil.getTopLevelClass(psiClass);
       if (topLevel != null) {
         String fqName = topLevel.getQualifiedName();
-        if (fqName != null && StringUtil.isEmpty(StringUtil.getPackageName(fqName))) {
-          return false;
-        }
+        if (fqName == null || !StringUtil.isEmpty(StringUtil.getPackageName(fqName))) return true;
+        if (!(topLevel instanceof PsiImplicitClass)) return false;
+        PsiClass contextClass = PsiTreeUtil.getParentOfType(context, PsiClass.class);
+        return contextClass != null && fqName.equals(contextClass.getQualifiedName());
       }
     }
 
@@ -919,12 +903,28 @@ public final class JavaCompletionUtil {
     return true;
   }
 
-  private static int getTabOutOffset(@NotNull final InsertionContext context, final int offset) {
-    final PsiCall call = PsiTreeUtil.findElementOfClassAtOffset(context.getFile(), offset, PsiCall.class, false);
-    if (call != null && call.getArgumentList() != null) {
-      return call.getArgumentList().getTextRange().getEndOffset() - 1;
+  private static int getTabOutOffset(@NotNull InsertionContext context, int offset) {
+    int result = offset + 2;
+
+    PsiCall call = PsiTreeUtil.findElementOfClassAtOffset(context.getFile(), offset, PsiCall.class, false);
+    if (call == null || call.getArgumentList() == null) return result;
+
+    int argumentListEnd = call.getArgumentList().getTextRange().getEndOffset();
+
+    if (argumentListEnd <= result && isAnonymous(call)) return offset + 1;
+
+    return argumentListEnd - 1;
+  }
+
+  private static boolean isAnonymous(@NotNull PsiCall call) {
+    if (!(call instanceof PsiNewExpression newExpression)) {
+      return false;
     }
-    return offset + 2;
+
+    PsiImmediateClassType targetType = ObjectUtils.tryCast(newExpression.getType(), PsiImmediateClassType.class);
+    if (targetType == null) return false;
+
+    return targetType.resolve() instanceof PsiAnonymousClass;
   }
 
   public static FakePsiElement createContextWithXxxVariable(@NotNull PsiElement place, @NotNull PsiType varType) {
@@ -934,7 +934,7 @@ public final class JavaCompletionUtil {
                                          @NotNull ResolveState state,
                                          PsiElement lastParent,
                                          @NotNull PsiElement place) {
-        return processor.execute(new LightVariableBuilder("xxx", varType, place), ResolveState.initial());
+        return processor.execute(new LightVariableBuilder<>("xxx", varType, place), ResolveState.initial());
       }
 
       @Override
@@ -944,15 +944,15 @@ public final class JavaCompletionUtil {
     };
   }
 
-  @NotNull
-  public static String escapeXmlIfNeeded(InsertionContext context, @NotNull String generics) {
-    if (context.getFile().getViewProvider().getBaseLanguage() == StdLanguages.JSPX) {
+  public static @NotNull String escapeXmlIfNeeded(InsertionContext context, @NotNull String generics) {
+    if (context.getFile().getViewProvider().getBaseLanguage() instanceof JspxLanguage) {
       return StringUtil.escapeXmlEntities(generics);
     }
     return generics;
   }
 
   public static boolean isEffectivelyDeprecated(PsiDocCommentOwner member) {
+    if (DumbService.isDumb(member.getProject())) return false;
     if (member.isDeprecated()) {
       return true;
     }
@@ -967,13 +967,28 @@ public final class JavaCompletionUtil {
     return false;
   }
 
-  public static int findQualifiedNameStart(@NotNull InsertionContext context) {
-    int start = context.getTailOffset() - 1;
+  static int findQualifiedNameStart(@NotNull InsertionContext context) {
+    return findQualifiedNameStart(context.getTailOffset(), context.getDocument());
+  }
+
+  public static int findQualifiedNameStart(int end, Document document) {
+    int start = end - 1;
     while (start >= 0) {
-      char ch = context.getDocument().getCharsSequence().charAt(start);
+      char ch = document.getCharsSequence().charAt(start);
       if (!Character.isJavaIdentifierPart(ch) && ch != '.') break;
       start--;
     }
     return start + 1;
+  }
+
+  static @Nullable PsiExpression getInstanceOfOperand(PsiElement position) {
+    PsiElement parent = position.getParent();
+    while (parent instanceof PsiJavaCodeReferenceElement || parent instanceof PsiTypeElement) {
+      parent = parent.getParent();
+    }
+    if (parent instanceof PsiInstanceOfExpression) {
+      return ((PsiInstanceOfExpression)parent).getOperand();
+    }
+    return null;
   }
 }
