@@ -1,52 +1,70 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.codeInsight.intention.impl;
 
 import com.intellij.codeInsight.BlockUtils;
 import com.intellij.codeInsight.CodeInsightUtil;
-import com.intellij.codeInsight.intention.IntentionAction;
 import com.intellij.codeInspection.util.IntentionFamilyName;
-import com.intellij.codeInspection.util.IntentionName;
 import com.intellij.java.JavaBundle;
-import com.intellij.openapi.editor.Editor;
-import com.intellij.openapi.editor.SelectionModel;
-import com.intellij.openapi.project.Project;
-import com.intellij.psi.*;
+import com.intellij.modcommand.ActionContext;
+import com.intellij.modcommand.ModCommand;
+import com.intellij.modcommand.ModCommandAction;
+import com.intellij.modcommand.Presentation;
+import com.intellij.openapi.util.TextRange;
+import com.intellij.psi.JavaPsiFacade;
+import com.intellij.psi.PsiBlockStatement;
+import com.intellij.psi.PsiCodeBlock;
+import com.intellij.psi.PsiComment;
+import com.intellij.psi.PsiDeclarationStatement;
+import com.intellij.psi.PsiElement;
+import com.intellij.psi.PsiElementFactory;
+import com.intellij.psi.PsiFile;
+import com.intellij.psi.PsiIfStatement;
+import com.intellij.psi.PsiJavaCodeReferenceElement;
+import com.intellij.psi.PsiJavaFile;
+import com.intellij.psi.PsiJavaToken;
+import com.intellij.psi.PsiMember;
+import com.intellij.psi.PsiNamedElement;
+import com.intellij.psi.PsiStatement;
+import com.intellij.psi.PsiVariable;
+import com.intellij.psi.PsiWhiteSpace;
+import com.intellij.psi.SyntaxTraverser;
 import com.intellij.psi.util.PsiTreeUtil;
-import com.intellij.util.IncorrectOperationException;
 import com.intellij.util.containers.ContainerUtil;
 import com.siyeh.ig.psiutils.ControlFlowUtils;
 import com.siyeh.ig.psiutils.VariableAccessUtils;
 import one.util.streamex.MoreCollectors;
 import one.util.streamex.StreamEx;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
+import org.jetbrains.annotations.Unmodifiable;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+import java.util.Objects;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 import static com.intellij.util.ObjectUtils.tryCast;
 
-public class MoveIntoIfBranchesAction implements IntentionAction {
+public final class MoveIntoIfBranchesAction implements ModCommandAction {
   @Override
-  public @IntentionName @NotNull String getText() {
+  public @NotNull @IntentionFamilyName String getFamilyName() {
     return JavaBundle.message("intention.name.move.into.if.branches");
   }
 
-  @Override
-  public @NotNull @IntentionFamilyName String getFamilyName() {
-    return getText();
-  }
-
-  private static List<PsiStatement> extractStatements(Editor editor, PsiFile file) {
+  private static @Unmodifiable List<PsiStatement> extractStatements(@NotNull ActionContext context) {
+    PsiFile file = context.file();
     if (!(file instanceof PsiJavaFile)) return Collections.emptyList();
-    SelectionModel model = editor.getSelectionModel();
-    if (!model.hasSelection()) {
-      int offset = editor.getCaretModel().getOffset();
+    TextRange selection = context.selection();
+    if (selection.isEmpty()) {
+      int offset = context.offset();
       PsiElement pos = file.findElementAt(offset);
       PsiStatement statement = PsiTreeUtil.getParentOfType(pos, PsiStatement.class, false, PsiMember.class, PsiCodeBlock.class);
-      return statement == null ? Collections.emptyList() : Collections.singletonList(statement);
+      return ContainerUtil.createMaybeSingletonList(statement);
     }
-    int startOffset = model.getSelectionStart();
-    int endOffset = model.getSelectionEnd();
+    int startOffset = selection.getStartOffset();
+    int endOffset = selection.getEndOffset();
     PsiElement[] elements = CodeInsightUtil.findStatementsInRange(file, startOffset, endOffset);
     return StreamEx.of(elements)
       .map(e -> tryCast(e, PsiStatement.class))
@@ -55,7 +73,7 @@ public class MoveIntoIfBranchesAction implements IntentionAction {
   }
 
   private static boolean hasConflictingDeclarations(@NotNull PsiIfStatement ifStatement, @NotNull List<PsiStatement> statements) {
-    PsiStatement lastStatement = statements.get(statements.size() - 1);
+    PsiStatement lastStatement = statements.getLast();
     List<PsiElement> afterLast = new ArrayList<>();
     for (PsiElement e = lastStatement.getNextSibling(); e != null; e = e.getNextSibling()) {
       if (!(e instanceof PsiComment) && !(e instanceof PsiWhiteSpace)) {
@@ -82,20 +100,26 @@ public class MoveIntoIfBranchesAction implements IntentionAction {
   }
 
   @Override
-  public boolean isAvailable(@NotNull Project project, Editor editor, PsiFile file) {
-    List<PsiStatement> statements = extractStatements(editor, file);
-    if (statements.isEmpty()) return false;
-    PsiElement prev = PsiTreeUtil.skipWhitespacesAndCommentsBackward(statements.get(0));
-    return prev instanceof PsiIfStatement && !hasConflictingDeclarations((PsiIfStatement)prev, statements);
+  public @Nullable Presentation getPresentation(@NotNull ActionContext context) {
+    if (!BaseIntentionAction.canModify(context.file())) return null;
+    List<PsiStatement> statements = extractStatements(context);
+    if (statements.isEmpty()) return null;
+    PsiElement prev = PsiTreeUtil.skipWhitespacesAndCommentsBackward(statements.getFirst());
+    if (!(prev instanceof PsiIfStatement ifStatement) || hasConflictingDeclarations(ifStatement, statements)) return null;
+    return Presentation.of(getFamilyName());
   }
 
   @Override
-  public void invoke(@NotNull Project project, Editor editor, PsiFile file) throws IncorrectOperationException {
-    List<PsiStatement> statements = extractStatements(editor, file);
+  public @NotNull ModCommand perform(@NotNull ActionContext context) {
+    return ModCommand.psiUpdate(context.file(), f -> invoke(context.withFile(f)));
+  }
+  
+  private static void invoke(@NotNull ActionContext context) {
+    List<PsiStatement> statements = extractStatements(context);
     if (statements.isEmpty()) return;
-    PsiIfStatement ifStatement = tryCast(PsiTreeUtil.skipWhitespacesAndCommentsBackward(statements.get(0)), PsiIfStatement.class);
+    PsiIfStatement ifStatement = tryCast(PsiTreeUtil.skipWhitespacesAndCommentsBackward(statements.getFirst()), PsiIfStatement.class);
     if (ifStatement == null || hasConflictingDeclarations(ifStatement, statements)) return;
-    PsiElementFactory factory = JavaPsiFacade.getElementFactory(project);
+    PsiElementFactory factory = JavaPsiFacade.getElementFactory(context.project());
     PsiStatement thenBranch = ifStatement.getThenBranch();
     if (thenBranch == null) {
       ifStatement.setThenBranch(factory.createStatementFromText("{}", null));
@@ -117,13 +141,8 @@ public class MoveIntoIfBranchesAction implements IntentionAction {
     PsiJavaToken thenBrace = thenBlock.getRBrace();
     PsiJavaToken elseBrace = elseBlock.getRBrace();
     if (thenBrace == null || elseBrace == null) return;
-    thenBlock.addRangeBefore(statements.get(0), statements.get(statements.size() - 1), thenBrace);
-    elseBlock.addRangeBefore(statements.get(0), statements.get(statements.size() - 1), elseBrace);
-    ifStatement.getParent().deleteChildRange(statements.get(0), statements.get(statements.size() - 1));
-  }
-
-  @Override
-  public boolean startInWriteAction() {
-    return true;
+    thenBlock.addRangeBefore(statements.getFirst(), statements.getLast(), thenBrace);
+    elseBlock.addRangeBefore(statements.getFirst(), statements.getLast(), elseBrace);
+    ifStatement.getParent().deleteChildRange(statements.getFirst(), statements.getLast());
   }
 }
