@@ -1,44 +1,50 @@
-// Copyright 2000-2019 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.openapi.roots.ui.configuration;
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.intellij.openapi.project.ProjectBundle;
 import com.intellij.openapi.projectRoots.Sdk;
 import com.intellij.openapi.ui.ComboBoxPopupState;
 import com.intellij.openapi.util.NlsContexts;
-import com.intellij.util.Producer;
+import com.intellij.util.containers.ContainerUtil;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import javax.swing.*;
+import javax.swing.AbstractListModel;
 import java.util.List;
+import java.util.Map;
+import java.util.function.Supplier;
 
-import static com.intellij.openapi.roots.ui.configuration.SdkListItem.*;
+import static com.intellij.openapi.roots.ui.configuration.SdkListItem.ActionItem;
+import static com.intellij.openapi.roots.ui.configuration.SdkListItem.GroupItem;
+import static com.intellij.openapi.roots.ui.configuration.SdkListItem.NoneSdkItem;
+import static com.intellij.openapi.roots.ui.configuration.SdkListItem.ProjectSdkItem;
+import static com.intellij.openapi.roots.ui.configuration.SdkListItem.SdkItem;
+import static com.intellij.openapi.roots.ui.configuration.SdkListItem.SuggestedItem;
 
 public final class SdkListModel extends AbstractListModel<SdkListItem> implements ComboBoxPopupState<SdkListItem> {
   private final boolean myIsSearching;
-  private final ImmutableList<SdkListItem> myItems;
-  private final Producer<? extends Sdk> myGetProjectSdk;
-  private final ImmutableMap<SdkListItem, @NlsContexts.Separator String> mySeparators;
+  private final List<SdkListItem> myItems;
+  private final Supplier<? extends Sdk> myGetProjectSdk;
+  private final Map<SdkListItem, @NlsContexts.Separator String> mySeparators;
 
-  @NotNull
-  public static SdkListModel emptyModel() {
-    return new SdkListModel(false, ImmutableList.of(), () -> null);
+  public static @NotNull SdkListModel emptyModel() {
+    return new SdkListModel(false, List.of(), () -> null);
   }
 
   SdkListModel(boolean isSearching,
                @NotNull List<? extends SdkListItem> items,
-               @NotNull Producer<? extends Sdk> getProjectSdk) {
+               @NotNull Supplier<? extends Sdk> getProjectSdk) {
     myIsSearching = isSearching;
-    myItems = ImmutableList.copyOf(items);
+    myItems = List.copyOf(items);
     myGetProjectSdk = getProjectSdk;
 
     boolean myFirstSepSet = false;
     boolean mySuggestedSep = false;
     ImmutableMap.Builder<SdkListItem, String> sep = ImmutableMap.builder();
 
-    int lastSepIndex = 0; //putting 0 to avoid first separator
+    // putting 0 to avoid the first separator
+    int lastSepIndex = 0;
     for (int i = 0; i < myItems.size(); i++) {
       SdkListItem it = myItems.get(i);
 
@@ -61,24 +67,21 @@ public final class SdkListModel extends AbstractListModel<SdkListItem> implement
     mySeparators = sep.build();
   }
 
-  @Nullable
-  public SdkListItem findProjectSdkItem() {
+  public @Nullable SdkListItem findProjectSdkItem() {
     return findFirstItemOfType(ProjectSdkItem.class);
   }
 
-  @Nullable
-  public SdkListItem findNoneSdkItem() {
+  public @Nullable SdkListItem findNoneSdkItem() {
     return findFirstItemOfType(NoneSdkItem.class);
   }
 
-  @Nullable
-  private SdkListItem findFirstItemOfType(Class<? extends SdkListItem> itemClass) {
-    return getItems().stream().filter(itemClass::isInstance).findFirst().orElse(null);
+  private @Nullable SdkListItem findFirstItemOfType(Class<? extends SdkListItem> itemClass) {
+    return ContainerUtil.find(getItems(), itemClass::isInstance);
   }
 
   @Nullable
   Sdk resolveProjectSdk() {
-    return myGetProjectSdk.produce();
+    return myGetProjectSdk.get();
   }
 
   @Override
@@ -87,16 +90,14 @@ public final class SdkListModel extends AbstractListModel<SdkListItem> implement
   }
 
   @Override
-  @NotNull
-  public SdkListItem getElementAt(int index) {
+  public @NotNull SdkListItem getElementAt(int index) {
     return myItems.get(index);
   }
 
-  @Nullable
   @Override
-  public SdkListModel onChosen(SdkListItem selectedValue) {
+  public @Nullable SdkListModel onChosen(SdkListItem selectedValue) {
     if (!(selectedValue instanceof GroupItem)) return null;
-    return new SdkListModel(myIsSearching, ((GroupItem)selectedValue).mySubItems, myGetProjectSdk);
+    return new SdkListModel(myIsSearching, ((GroupItem)selectedValue).subItems, myGetProjectSdk);
   }
 
   @Override
@@ -108,22 +109,18 @@ public final class SdkListModel extends AbstractListModel<SdkListItem> implement
     return myIsSearching;
   }
 
-  @NotNull
-  public List<SdkListItem> getItems() {
+  public @NotNull List<SdkListItem> getItems() {
     return myItems;
   }
 
-  @Nullable
-  public @NlsContexts.Separator String getSeparatorTextAbove(@NotNull SdkListItem value) {
+  public @Nullable @NlsContexts.Separator String getSeparatorTextAbove(@NotNull SdkListItem value) {
     return mySeparators.get(value);
   }
 
-  @Nullable
-  public SdkItem findSdkItem(@Nullable Sdk value) {
+  public @Nullable SdkItem findSdkItem(@Nullable Sdk value) {
     if (value == null) return null;
     for (SdkListItem item : myItems) {
-      if (!(item instanceof SdkItem)) continue;
-      SdkItem sdkItem = (SdkItem)item;
+      if (!(item instanceof SdkItem sdkItem)) continue;
       if (sdkItem.hasSameSdk(value)) {
         return sdkItem;
       }
@@ -131,13 +128,11 @@ public final class SdkListModel extends AbstractListModel<SdkListItem> implement
     return null;
   }
 
-  @Nullable
-  public SdkItem findSdkItem(@Nullable String sdkName) {
+  public @Nullable SdkItem findSdkItem(@Nullable String sdkName) {
     if (sdkName == null) return null;
     for (SdkListItem item : myItems) {
-      if (!(item instanceof SdkItem)) continue;
-      SdkItem sdkItem = (SdkItem)item;
-      Sdk sdk = sdkItem.getSdk();
+      if (!(item instanceof SdkItem sdkItem)) continue;
+      Sdk sdk = sdkItem.sdk;
       if (sdkName.equals(sdk.getName())) {
         return sdkItem;
       }
