@@ -1,18 +1,4 @@
-/*
- * Copyright 2000-2009 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.util.ui;
 
 import com.intellij.openapi.project.Project;
@@ -21,8 +7,13 @@ import com.intellij.openapi.util.NlsActions.ActionText;
 import com.intellij.openapi.util.NlsContexts;
 import org.jetbrains.annotations.NotNull;
 
-import javax.swing.*;
-import java.awt.*;
+import javax.swing.Action;
+import javax.swing.Icon;
+import javax.swing.JComponent;
+import javax.swing.JLabel;
+import javax.swing.JPanel;
+import java.awt.BorderLayout;
+import java.awt.Container;
 
 public abstract class OptionsMessageDialog extends OptionsDialog{
   private final @NlsContexts.Label String myMessage;
@@ -36,13 +27,10 @@ public abstract class OptionsMessageDialog extends OptionsDialog{
     myMessage = message;
     myIcon = icon;
     setTitle(title);
-    setButtonsAlignment(SwingUtilities.CENTER);
   }
 
-  @ActionText
-  protected abstract String getOkActionName();
-  @ActionText
-  protected abstract String getCancelActionName();
+  protected abstract @ActionText String getOkActionName();
+  protected abstract @ActionText String getCancelActionName();
 
   @Override
   protected Action @NotNull [] createActions() {
@@ -60,14 +48,13 @@ public abstract class OptionsMessageDialog extends OptionsDialog{
     if (mnemoPos >= 0 && mnemoPos < option.length() - 2) {
       String mnemoChar = option.substring(mnemoPos + 1, mnemoPos + 2).trim();
       if (mnemoChar.length() == 1) {
-        action.putValue(Action.MNEMONIC_KEY, new Integer(mnemoChar.charAt(0)));
+        action.putValue(Action.MNEMONIC_KEY, Integer.valueOf(mnemoChar.charAt(0)));
       }
     }
   }
 
   @Override
-  @NotNull
-  protected JComponent createNorthPanel() {
+  protected @NotNull JComponent createNorthPanel() {
     JPanel panel = new JPanel(new BorderLayout(15, 0));
     if (myIcon != null) {
       JLabel iconLabel = new JLabel(myIcon);
