@@ -1,123 +1,166 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.ide.actions;
 
-import com.intellij.execution.configurations.GeneralCommandLine;
+import com.intellij.execution.configurations.PathEnvironmentVariableUtil;
 import com.intellij.execution.process.CapturingProcessHandler;
 import com.intellij.execution.process.ProcessIOExecutorService;
-import com.intellij.execution.util.ExecUtil;
 import com.intellij.ide.IdeBundle;
 import com.intellij.ide.lightEdit.LightEditCompatible;
 import com.intellij.idea.ActionsBundle;
 import com.intellij.jna.JnaLoader;
 import com.intellij.notification.Notification;
 import com.intellij.notification.NotificationListener;
+import com.intellij.notification.NotificationType;
 import com.intellij.openapi.actionSystem.ActionPlaces;
+import com.intellij.openapi.actionSystem.ActionUpdateThread;
 import com.intellij.openapi.actionSystem.AnActionEvent;
 import com.intellij.openapi.actionSystem.CommonDataKeys;
+import com.intellij.openapi.actionSystem.Presentation;
+import com.intellij.openapi.actionSystem.remoting.ActionRemoteBehaviorSpecification;
 import com.intellij.openapi.diagnostic.Logger;
-import com.intellij.openapi.editor.Editor;
+import com.intellij.openapi.editor.ex.util.EditorUtil;
 import com.intellij.openapi.project.DumbAwareAction;
-import com.intellij.openapi.project.Project;
-import com.intellij.openapi.ui.DialogWrapper;
-import com.intellij.openapi.ui.Messages;
 import com.intellij.openapi.util.NlsActions.ActionText;
-import com.intellij.openapi.util.NlsContexts;
-import com.intellij.openapi.util.SystemInfo;
-import com.intellij.openapi.util.text.StringUtil;
+import com.intellij.openapi.util.NlsSafe;
 import com.intellij.openapi.vfs.VirtualFile;
-import com.intellij.openapi.vfs.VirtualFileSystem;
 import com.intellij.openapi.vfs.newvfs.ArchiveFileSystem;
 import com.intellij.util.SystemProperties;
+import com.intellij.util.system.OS;
 import com.sun.jna.Native;
+import com.sun.jna.Pointer;
 import com.sun.jna.platform.win32.Kernel32;
+import com.sun.jna.platform.win32.Ole32;
+import com.sun.jna.platform.win32.Shell32;
 import com.sun.jna.platform.win32.WinDef;
-import org.jetbrains.annotations.NonNls;
+import com.sun.jna.platform.win32.WinError;
+import com.sun.jna.platform.win32.WinNT;
+import com.sun.jna.platform.win32.WinUser;
+import com.sun.jna.win32.StdCallLibrary;
+import com.sun.jna.win32.W32APIOptions;
+import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import javax.swing.event.HyperlinkEvent;
-import java.awt.*;
-import java.io.*;
+import java.io.IOException;
 import java.net.URISyntaxException;
-import java.net.URL;
-import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.InvalidPathException;
 import java.nio.file.Path;
 import java.util.Arrays;
-import java.util.Optional;
 import java.util.stream.Stream;
+
+import static java.util.Objects.requireNonNullElse;
+import static java.util.Objects.requireNonNullElseGet;
 
 /**
  * This helpful action opens a file or directory in a system file manager.
  *
  * @see ShowFilePathAction
  */
-public class RevealFileAction extends DumbAwareAction implements LightEditCompatible {
+public class RevealFileAction extends DumbAwareAction implements LightEditCompatible, ActionRemoteBehaviorSpecification.Disabled {
   private static final Logger LOG = Logger.getInstance(RevealFileAction.class);
 
   public static final NotificationListener FILE_SELECTING_LISTENER = new NotificationListener.Adapter() {
     @Override
     protected void hyperlinkActivated(@NotNull Notification notification, @NotNull HyperlinkEvent e) {
-      URL url = e.getURL();
+      var url = e.getURL();
       if (url != null) {
         try {
-          openFile(new File(url.toURI()));
+          openFile(Path.of(url.toURI()));
         }
-        catch (URISyntaxException ex) {
+        catch (InvalidPathException | URISyntaxException ex) {
           LOG.warn("invalid URL: " + url, ex);
         }
       }
-      notification.expire();
+      notification.hideBalloon();
     }
   };
 
   public RevealFileAction() {
-    getTemplatePresentation().setText(getActionName());
+    getTemplatePresentation().setText(getActionName(true));
   }
 
   @Override
   public void update(@NotNull AnActionEvent e) {
-    Editor editor = e.getData(CommonDataKeys.EDITOR);
-    e.getPresentation().setEnabledAndVisible(isSupported() && getFile(e) != null &&
-                                             (!ActionPlaces.isPopupPlace(e.getPlace()) || editor == null || !editor.getSelectionModel().hasSelection()));
-    e.getPresentation().setText(getActionName());
+    var editor = e.getData(CommonDataKeys.EDITOR);
+    e.getPresentation().setEnabledAndVisible(
+      isSupported() &&
+      getFile(e) != null &&
+      (!e.isFromContextMenu() ||
+       editor == null ||
+       !editor.getSelectionModel().hasSelection() ||
+       EditorUtil.contextMenuInvokedOutsideOfSelection(e)));
+    e.getPresentation().setText(getActionName(e.getPlace()));
+  }
+
+  @Override
+  public @NotNull ActionUpdateThread getActionUpdateThread() {
+    return ActionUpdateThread.BGT;
   }
 
   @Override
   public void actionPerformed(@NotNull AnActionEvent e) {
-    VirtualFile file = getFile(e);
+    var file = getFile(e);
     if (file != null) {
-      openFile(new File(file.getPresentableUrl()));
+      openFile(file.toNioPath());
     }
   }
 
-  @Nullable
-  private static VirtualFile getFile(@NotNull AnActionEvent e) {
+  private static @Nullable VirtualFile getFile(AnActionEvent e) {
     return findLocalFile(e.getData(CommonDataKeys.VIRTUAL_FILE));
   }
 
+  /** Whether a system is able to open a directory in a file manager and highlight a file in it. */
   public static boolean isSupported() {
-    return SystemInfo.isWindows || SystemInfo.isMac || SystemInfo.hasXdgOpen() ||
-           Desktop.isDesktopSupported() && Desktop.getDesktop().isSupported(Desktop.Action.OPEN);
+    return OS.CURRENT == OS.Windows || OS.CURRENT == OS.macOS || Holder.fileManagerApp != null;
   }
 
-  @ActionText
-  @NotNull
-  public static String getActionName() {
-    return SystemInfo.isMac ? ActionsBundle.message("action.RevealIn.name.mac") : ActionsBundle.message("action.RevealIn.name.other", getFileManagerName());
+  /** Whether a system is able to open a directory in a file manager. */
+  public static boolean isDirectoryOpenSupported() {
+    return OS.CURRENT == OS.Windows || OS.CURRENT == OS.macOS || Holder.fileManagerApp != null;
   }
 
-  @NotNull
-  public static String getFileManagerName() {
-    return Holder.fileManagerName;
+  public static @ActionText @NotNull String getActionName() {
+    return getActionName(null);
   }
 
-  @Nullable
-  public static VirtualFile findLocalFile(@Nullable VirtualFile file) {
+  public static @ActionText @NotNull String getActionName(@Nullable String place) {
+    var shortName = ActionPlaces.REVEAL_IN_POPUP.equals(place);
+    return shortName ? getFileManagerName() : getActionName(false);
+  }
+
+  private static @ActionText String getActionName(boolean skipDetection) {
+    return OS.CURRENT == OS.macOS ? ActionsBundle.message("action.RevealIn.name.mac") : ActionsBundle.message("action.RevealIn.name.other", getFileManagerName(skipDetection));
+  }
+
+  @Override
+  public void applyTextOverride(@NotNull String place, @NotNull Presentation presentation) {
+    if (ActionPlaces.REVEAL_IN_POPUP.equals(place)) {
+      presentation.setText(getActionName(place));
+    }
+    else {
+      super.applyTextOverride(place, presentation);
+    }
+  }
+
+  public static @NotNull @ActionText String getFileManagerName() {
+    return getFileManagerName(false);
+  }
+
+  public static @NotNull @ActionText String getFileManagerName(boolean skipDetection) {
+    return OS.CURRENT == OS.Windows ? IdeBundle.message("action.explorer.text") :
+           OS.CURRENT == OS.macOS ? IdeBundle.message("action.finder.text") :
+           skipDetection ? IdeBundle.message("action.file.manager.text") :
+           requireNonNullElseGet(Holder.fileManagerName, () -> IdeBundle.message("action.file.manager.text"));
+  }
+
+  public static @Nullable VirtualFile findLocalFile(@Nullable VirtualFile file) {
     if (file == null || file.isInLocalFileSystem()) {
       return file;
     }
 
-    VirtualFileSystem fs = file.getFileSystem();
+    var fs = file.getFileSystem();
     if (fs instanceof ArchiveFileSystem && file.getParent() == null) {
       return ((ArchiveFileSystem)fs).getLocalByEntry(file);
     }
@@ -125,28 +168,19 @@ public class RevealFileAction extends DumbAwareAction implements LightEditCompat
     return null;
   }
 
-  public static void showDialog(Project project, @NlsContexts.DialogMessage String message, @NlsContexts.DialogTitle String title, @NotNull File file, @Nullable DialogWrapper.DoNotAskOption option) {
-    String ok = getActionName();
-    String cancel = IdeBundle.message("action.close");
-    if (Messages.showOkCancelDialog(project, message, title, ok, cancel, Messages.getInformationIcon(), option) == Messages.OK) {
-      openFile(file);
-    }
-  }
-
-  /**
-   * Opens a system file manager with given file's parent directory open and the file highlighted in it
-   * (note that not all platforms support highlighting).
-   */
-  public static void openFile(@NotNull File file) {
+  /** Please use #openFile(Path) */
+  @ApiStatus.Obsolete
+  @SuppressWarnings({"UnnecessaryFullyQualifiedName", "IO_FILE_USAGE"})
+  public static void openFile(@NotNull java.io.File file) {
     openFile(file.toPath());
   }
 
   /**
-   * Opens a system file manager with given file's parent directory open and the file highlighted in it
-   * (note that not all platforms support highlighting).
+   * Opens a system file manager with the given file's parent directory loaded and the file highlighted in it
+   * (note that some platforms do not support the file highlighting).
    */
   public static void openFile(@NotNull Path file) {
-    Path parent = file.toAbsolutePath().getParent();
+    var parent = canonicalize(file).getParent();
     if (parent != null) {
       doOpen(parent, file);
     }
@@ -155,22 +189,34 @@ public class RevealFileAction extends DumbAwareAction implements LightEditCompat
     }
   }
 
-  /**
-   * Opens a system file manager with given directory open in it.
-   */
-  public static void openDirectory(@NotNull File directory) {
+  /** Please use #openDirectory(Path) */
+  @ApiStatus.Obsolete
+  @SuppressWarnings({"UnnecessaryFullyQualifiedName", "IO_FILE_USAGE"})
+  public static void openDirectory(@NotNull java.io.File directory) {
     doOpen(directory.toPath(), null);
   }
 
+  /**
+   * Opens a system file manager with the given directory loaded in it.
+   */
+  public static void openDirectory(@NotNull Path directory) {
+    doOpen(directory, null);
+  }
+
   private static void doOpen(@NotNull Path _dir, @Nullable Path _toSelect) {
-    String dir = _dir.toAbsolutePath().normalize().toString();
-    String toSelect = _toSelect != null ? _toSelect.toAbsolutePath().normalize().toString() : null;
+    var dir = canonicalize(_dir).normalize().toString();
+    var toSelect = _toSelect != null ? canonicalize(_toSelect).normalize().toString() : null;
     String fmApp;
 
-    if (SystemInfo.isWindows) {
-      spawn(toSelect != null ? "explorer /select,\"" + shortPath(toSelect) + '"' : "explorer /root,\"" + shortPath(dir) + '"');
+    if (OS.CURRENT == OS.Windows) {
+      if (JnaLoader.isLoaded()) {
+        openViaShellApi(dir, toSelect);
+      }
+      else {
+        openViaExplorerCall(dir, toSelect);
+      }
     }
-    else if (SystemInfo.isMac) {
+    else if (OS.CURRENT == OS.macOS) {
       if (toSelect != null) {
         spawn("open", "-R", toSelect);
       }
@@ -179,62 +225,89 @@ public class RevealFileAction extends DumbAwareAction implements LightEditCompat
       }
     }
     else if ((fmApp = Holder.fileManagerApp) != null) {
-      if (fmApp.endsWith("dolphin") && toSelect != null) {
+      if (toSelect != null && fmApp.endsWith("dolphin")) {
         spawn(fmApp, "--select", toSelect);
+      }
+      else if (toSelect != null && fmApp.endsWith("dde-file-manager")) {
+        spawn(fmApp, "--show-item", toSelect);
       }
       else {
         spawn(fmApp, toSelect != null ? toSelect : dir);
       }
     }
-    else if (SystemInfo.hasXdgOpen()) {
+    else if (toSelect == null && PathEnvironmentVariableUtil.isOnPath("xdg-open")) {
       spawn("xdg-open", dir);
     }
-    else if (Desktop.isDesktopSupported() && Desktop.getDesktop().isSupported(Desktop.Action.OPEN)) {
-      LOG.debug("opening " + dir + " via Desktop API");
-      ProcessIOExecutorService.INSTANCE.execute(() -> {
-        try {
-          Desktop.getDesktop().open(new File(dir));
-        }
-        catch (Exception e) {
-          LOG.warn(e);
-        }
-      });
-    }
     else {
-      Messages.showErrorDialog(IdeBundle.message("message.this.action.isn.t.supported.on.the.current.platform"),
-                               IdeBundle.message("dialog.title.cannot.open.file"));
+      var message = IdeBundle.message("reveal.unsupported.message", requireNonNullElse(toSelect, dir));
+      new Notification("System Messages", message, NotificationType.WARNING)
+        .notify(null);
     }
   }
 
-  private static String shortPath(String path) {
-    if (path.contains("  ") && JnaLoader.isLoaded()) {
-      // On the way from Runtime.exec() to CreateProcess(), a command line goes through couple rounds of merging and splitting
-      // which breaks paths containing a sequence of two or more spaces.
-      // Conversion to a short format is an ugly hack allowing to open such paths in Explorer.
-      char[] result = new char[WinDef.MAX_PATH];
-      if (Kernel32.INSTANCE.GetShortPathName(path, result, result.length) <= result.length) {
-        return Native.toString(result);
+  private static void openViaShellApi(String dir, @Nullable String toSelect) {
+    if (LOG.isDebugEnabled()) LOG.debug("shell open: dir=" + dir + " toSelect=" + toSelect);
+
+    ProcessIOExecutorService.INSTANCE.execute(() -> {
+      Ole32.INSTANCE.CoInitializeEx(null, Ole32.COINIT_APARTMENTTHREADED);
+
+      if (toSelect == null) {
+        var res = Shell32.INSTANCE.ShellExecute(null, "explore", dir, null, null, WinUser.SW_NORMAL);
+        if (res.intValue() <= 32) {
+          LOG.warn("ShellExecute(" + dir + "): " + res.intValue() + " GetLastError=" + Kernel32.INSTANCE.GetLastError());
+          openViaExplorerCall(dir, null);
+        }
       }
-    }
-
-    return path;
+      else {
+        var pIdl = Shell32Ex.INSTANCE.ILCreateFromPath(dir);
+        var apIdl = new Pointer[]{Shell32Ex.INSTANCE.ILCreateFromPath(toSelect)};
+        var cIdl = new WinDef.UINT(apIdl.length);
+        try {
+          var res = Shell32Ex.INSTANCE.SHOpenFolderAndSelectItems(pIdl, cIdl, apIdl, new WinDef.DWORD(0));
+          if (!WinError.S_OK.equals(res)) {
+            LOG.warn("SHOpenFolderAndSelectItems(" + dir + ',' + toSelect + "): 0x" + Integer.toHexString(res.intValue()));
+            openViaExplorerCall(dir, toSelect);
+          }
+        }
+        finally {
+          Shell32Ex.INSTANCE.ILFree(pIdl);
+          Shell32Ex.INSTANCE.ILFree(apIdl[0]);
+        }
+      }
+    });
   }
 
-  private static void spawn(@NonNls String... command) {
-    LOG.debug(Arrays.toString(command));
+  private static Path canonicalize(@NotNull Path path) {
+    try {
+      return path.toRealPath();
+    }
+    catch (IOException e) {
+      LOG.info("Could not convert " + path + " to canonical path", e);
+      return path.toAbsolutePath();
+    }
+  }
+
+  private static void openViaExplorerCall(String dir, @Nullable String toSelect) {
+    spawn(toSelect != null ? "explorer /select,\"" + toSelect + '"' : "explorer /root,\"" + dir + '"');
+  }
+
+  private interface Shell32Ex extends StdCallLibrary {
+    Shell32Ex INSTANCE = Native.load("shell32", Shell32Ex.class, W32APIOptions.DEFAULT_OPTIONS);
+
+    Pointer ILCreateFromPath(String path);
+    void ILFree(Pointer pIdl);
+    WinNT.HRESULT SHOpenFolderAndSelectItems(Pointer pIdlFolder, WinDef.UINT cIdl, Pointer[] apIdl, WinDef.DWORD dwFlags);
+  }
+
+  private static void spawn(String... command) {
+    if (LOG.isDebugEnabled()) LOG.debug(Arrays.toString(command));
 
     ProcessIOExecutorService.INSTANCE.execute(() -> {
       try {
-        CapturingProcessHandler handler;
-        if (SystemInfo.isWindows) {
-          assert command.length == 1;
-          Process process = Runtime.getRuntime().exec(command[0]);  // no quoting/escaping is needed
-          handler = new CapturingProcessHandler.Silent(process, null, command[0]);
-        }
-        else {
-          handler = new CapturingProcessHandler.Silent(new GeneralCommandLine(command));
-        }
-        handler.runProcess(10000, false).checkSuccess(LOG);
+        var process = OS.CURRENT == OS.Windows ? Runtime.getRuntime().exec(command[0]) : new ProcessBuilder(command).start();
+        new CapturingProcessHandler.Silent(process, null, command[0])
+          .runProcess(10000, false)
+          .checkSuccess(LOG);
       }
       catch (Exception e) {
         LOG.warn(e);
@@ -242,49 +315,54 @@ public class RevealFileAction extends DumbAwareAction implements LightEditCompat
     });
   }
 
-  private static class Holder {
-    @NonNls private static final String fileManagerApp =
-      readDesktopEntryKey("Exec")
-        .map(line -> line.split(" ")[0])
-        .filter(exec -> exec.endsWith("nautilus") || exec.endsWith("pantheon-files") || exec.endsWith("dolphin"))
-        .orElse(null);
+  private static final class Holder {
+    private static final @Nullable String fileManagerApp;
+    private static final @Nullable @NlsSafe String fileManagerName;
 
-    private static final String fileManagerName =
-      SystemInfo.isMac ? "Finder" :
-      SystemInfo.isWindows ? "Explorer" :
-      readDesktopEntryKey("Name").orElse("File Manager");
-
-    private static Optional<String> readDesktopEntryKey(@NonNls String key) {
-      if (SystemInfo.hasXdgMime()) {
-        String appName = ExecUtil.execAndReadLine(new GeneralCommandLine("xdg-mime", "query", "default", "inode/directory"));
-        if (appName != null && appName.endsWith(".desktop")) {
-          return Stream.of(getXdgDataDirectories().split(":"))
-            .map(dir -> new File(dir, "applications/" + appName))
-            .filter(File::exists)
-            .findFirst()
-            .map(file -> readDesktopEntryKey(file, key));
+    static {
+      String fmApp = null, fmName = null;
+      if (PathEnvironmentVariableUtil.isOnPath("xdg-mime")) {
+        try (var reader = new ProcessBuilder("xdg-mime", "query", "default", "inode/directory").start().inputReader()) {
+          var desktopEntryName = reader.readLine();
+          if (desktopEntryName != null && desktopEntryName.endsWith(".desktop")) {
+            var desktopFile = Stream.of(getXdgDataDirectories().split(":"))
+              .map(dir -> Path.of(dir, "applications", desktopEntryName))
+              .filter(Files::exists)
+              .findFirst();
+            if (desktopFile.isPresent()) {
+              var lines = Files.readAllLines(desktopFile.get());
+              fmApp = lines.stream()
+                .filter(line -> line.startsWith("Exec="))
+                .map(line -> getExecCommand(line.substring(5)))
+                .findFirst().orElse(null);
+              fmName = lines.stream()
+                .filter(line -> line.startsWith("Name="))
+                .map(line -> line.substring(5))
+                .findFirst().orElse(null);
+            }
+          }
+        }
+        catch (Exception e) {
+          LOG.info(e);
         }
       }
-
-      return Optional.empty();
+      fileManagerApp = fmApp;
+      fileManagerName = fmName;
     }
 
-    @NonNls
     private static String getXdgDataDirectories() {
-      return StringUtil.defaultIfEmpty(System.getenv("XDG_DATA_HOME"), SystemProperties.getUserHome() + "/.local/share") + ':' +
-             StringUtil.defaultIfEmpty(System.getenv("XDG_DATA_DIRS"), "/usr/local/share:/usr/share");
+      return requireNonNullElse(System.getenv("XDG_DATA_HOME"), SystemProperties.getUserHome() + "/.local/share") + ':' +
+             requireNonNullElse(System.getenv("XDG_DATA_DIRS"), "/usr/local/share:/usr/share");
     }
 
-    private static String readDesktopEntryKey(File file, String key) {
-      LOG.debug("looking for '" + key + "' in " + file);
-      String prefix = key + '=';
-      try (BufferedReader reader = new BufferedReader(new InputStreamReader(new FileInputStream(file), StandardCharsets.UTF_8))) {
-        return reader.lines().filter(l -> l.startsWith(prefix)).map(l -> l.substring(prefix.length())).findFirst().orElse(null);
+    private static String getExecCommand(String value) {
+      if (value.startsWith("\"")) {
+        int p = value.lastIndexOf('\"');
+        if (p > 1) {
+          return value.substring(1, p);
+        }
       }
-      catch (IOException | UncheckedIOException e) {
-        LOG.info("Cannot read: " + file, e);
-        return null;
-      }
+      return value.split(" ")[0];
     }
   }
 }
