@@ -1,50 +1,82 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.openapi.editor.impl;
 
 import com.intellij.diagnostic.Dumpable;
 import com.intellij.openapi.Disposable;
 import com.intellij.openapi.diagnostic.Attachment;
 import com.intellij.openapi.diagnostic.Logger;
-import com.intellij.openapi.editor.*;
+import com.intellij.openapi.editor.Document;
+import com.intellij.openapi.editor.EditorCustomElementRenderer;
+import com.intellij.openapi.editor.EditorThreading;
+import com.intellij.openapi.editor.Inlay;
+import com.intellij.openapi.editor.InlayModel;
+import com.intellij.openapi.editor.InlayProperties;
+import com.intellij.openapi.editor.VisualPosition;
 import com.intellij.openapi.editor.event.DocumentEvent;
 import com.intellij.openapi.editor.ex.DocumentEx;
+import com.intellij.openapi.editor.ex.InlayModelEx;
 import com.intellij.openapi.editor.ex.PrioritizedDocumentListener;
 import com.intellij.openapi.editor.ex.util.EditorUtil;
-import com.intellij.openapi.util.Getter;
+import com.intellij.openapi.editor.impl.view.EditorView;
+import com.intellij.openapi.util.Predicates;
+import com.intellij.openapi.util.Ref;
 import com.intellij.util.DocumentEventUtil;
 import com.intellij.util.DocumentUtil;
 import com.intellij.util.EventDispatcher;
 import com.intellij.util.Processor;
 import com.intellij.util.containers.ContainerUtil;
-import org.jetbrains.annotations.NonNls;
+import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.jetbrains.annotations.TestOnly;
 
-import java.awt.*;
+import java.awt.Insets;
+import java.awt.Point;
+import java.awt.Rectangle;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
-import java.util.*;
+import java.util.StringJoiner;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Predicate;
+import java.util.function.Supplier;
 
-public final class InlayModelImpl implements InlayModel, PrioritizedDocumentListener, Disposable, Dumpable {
+import static com.intellij.openapi.editor.impl.InlayKeys.OFFSET_BEFORE_DISPOSAL;
+
+//@ApiStatus.Internal
+public final class InlayModelImpl implements InlayModel, InlayModelEx, PrioritizedDocumentListener, Disposable, Dumpable {
   private static final Logger LOG = Logger.getInstance(InlayModelImpl.class);
-  private static final Comparator<Inlay> INLINE_ELEMENTS_COMPARATOR = Comparator.comparingInt((Inlay i) -> i.getOffset())
-    .thenComparing(i -> i.isRelatedToPrecedingText());
-  private static final Comparator<BlockInlayImpl> BLOCK_ELEMENTS_PRIORITY_COMPARATOR = Comparator.comparingInt(i -> -i.myPriority);
-  private static final Comparator<BlockInlayImpl> BLOCK_ELEMENTS_COMPARATOR = Comparator.comparing((BlockInlayImpl i) -> i.getPlacement())
+
+  private static final Comparator<InlineInlayImpl<?>> INLINE_ELEMENTS_COMPARATOR = Comparator
+    .comparingInt((InlineInlayImpl<?> i) -> i.getOffset())
+    .thenComparing(i -> i.isRelatedToPrecedingText())
+    .thenComparing(i -> -i.myPriority);
+  private static final Comparator<BlockInlayImpl<?>> BLOCK_ELEMENTS_PRIORITY_COMPARATOR = Comparator
+    .comparingInt(i -> -i.myPriority);
+  private static final Comparator<BlockInlayImpl<?>> BLOCK_ELEMENTS_COMPARATOR = Comparator
+    .comparing((BlockInlayImpl<?> i) -> i.getPlacement())
     .thenComparing(i -> i.getPlacement() == Inlay.Placement.ABOVE_LINE ? i.myPriority : -i.myPriority);
-  private static final Comparator<AfterLineEndInlayImpl> AFTER_LINE_END_ELEMENTS_OFFSET_COMPARATOR =
-    Comparator.comparingInt((AfterLineEndInlayImpl i) -> i.getOffset()).thenComparingInt(i -> i.myOrder);
-  private static final Comparator<AfterLineEndInlayImpl> AFTER_LINE_END_ELEMENTS_COMPARATOR = Comparator.comparingInt(i -> i.myOrder);
-  private static final Processor<InlayImpl> UPDATE_PROCESSOR = inlay -> {
+  private static final Comparator<AfterLineEndInlayImpl<?>> AFTER_LINE_END_ELEMENTS_OFFSET_COMPARATOR = Comparator
+    .comparingInt((AfterLineEndInlayImpl<?> i) -> i.getOffset())
+    .thenComparing(i -> !i.mySoftWrappable)
+    .thenComparingInt(i -> -i.myPriority)
+    .thenComparingInt(i -> i.myOrder);
+  private static final Comparator<AfterLineEndInlayImpl<?>> AFTER_LINE_END_ELEMENTS_COMPARATOR = Comparator
+    .comparing((AfterLineEndInlayImpl<?> i) -> !i.mySoftWrappable)
+    .thenComparingInt(i -> -i.myPriority)
+    .thenComparingInt(i -> i.myOrder);
+
+  private static final Processor<InlayImpl<?,?>> UPDATE_PROCESSOR = inlay -> {
     inlay.update();
     return true;
   };
 
   private final EditorImpl myEditor;
+  private final DocumentEx myDocument;
   private final EventDispatcher<Listener> myDispatcher = EventDispatcher.create(Listener.class);
 
-  private final List<InlayImpl> myInlaysInvalidatedOnMove = new ArrayList<>();
+  private final List<InlayImpl<?,?>> myInlaysInvalidatedOnMove = new ArrayList<>();
   final RangeMarkerTree<InlineInlayImpl<?>> myInlineElementsTree;
   final MarkerTreeWithPartialSums<BlockInlayImpl<?>> myBlockElementsTree;
   final RangeMarkerTree<AfterLineEndInlayImpl<?>> myAfterLineEndElementsTree;
@@ -57,10 +89,11 @@ public final class InlayModelImpl implements InlayModel, PrioritizedDocumentList
 
   InlayModelImpl(@NotNull EditorImpl editor) {
     myEditor = editor;
-    myInlineElementsTree = new InlineElementsTree(editor.getDocument());
-    myBlockElementsTree = new BlockElementsTree(editor.getDocument());
-    myAfterLineEndElementsTree = new AfterLineEndElementTree(editor.getDocument());
-    myEditor.getDocument().addDocumentListener(this, this);
+    myDocument = editor.getUiDocument();
+    myInlineElementsTree = new InlineElementsTree(myDocument);
+    myBlockElementsTree = new BlockElementsTree(myDocument);
+    myAfterLineEndElementsTree = new AfterLineEndElementTree(myDocument);
+    myDocument.addDocumentListener(this, this);
   }
 
   @Override
@@ -70,7 +103,7 @@ public final class InlayModelImpl implements InlayModel, PrioritizedDocumentList
 
   @Override
   public void beforeDocumentChange(@NotNull DocumentEvent event) {
-    if (myEditor.getDocument().isInBulkUpdate()) return;
+    if (myDocument.isInBulkUpdate()) return;
     if (myInBatchMode) LOG.error("Document shouldn't be changed during batch inlay operation");
     int offset = event.getOffset();
     if (myConsiderCaretPositionOnDocumentUpdates && event.getOldLength() == 0 && offset == myEditor.getCaretModel().getOffset()) {
@@ -114,23 +147,37 @@ public final class InlayModelImpl implements InlayModel, PrioritizedDocumentList
 
   @Override
   public void dispose() {
-    myInlineElementsTree.dispose(myEditor.getDocument());
-    myBlockElementsTree.dispose(myEditor.getDocument());
-    myAfterLineEndElementsTree.dispose(myEditor.getDocument());
+    myInlineElementsTree.dispose(myDocument);
+    myBlockElementsTree.dispose(myDocument);
+    myAfterLineEndElementsTree.dispose(myDocument);
   }
 
-  @Nullable
   @Override
-  public <T extends EditorCustomElementRenderer> Inlay<T> addInlineElement(int offset,
-                                                                           boolean relatesToPrecedingText,
-                                                                           @NotNull T renderer) {
+  public @Nullable <T extends EditorCustomElementRenderer> Inlay<T> addInlineElement(int offset,
+                                                                                     boolean relatesToPrecedingText,
+                                                                                     @NotNull T renderer) {
+    return addInlineElement(offset, relatesToPrecedingText, 0, renderer);
+  }
+
+  @Override
+  public @Nullable <T extends EditorCustomElementRenderer> Inlay<T> addInlineElement(int offset,
+                                                                                     boolean relatesToPrecedingText,
+                                                                                     int priority,
+                                                                                     @NotNull T renderer) {
     EditorImpl.assertIsDispatchThread();
-    Document document = myEditor.getDocument();
+    Document document = myDocument;
     if (DocumentUtil.isInsideSurrogatePair(document, offset)) return null;
     offset = Math.max(0, Math.min(document.getTextLength(), offset));
-    InlineInlayImpl<T> inlay = new InlineInlayImpl<>(myEditor, offset, relatesToPrecedingText, renderer);
+    InlineInlayImpl<T> inlay = new InlineInlayImpl<>(myEditor, offset, relatesToPrecedingText, priority, renderer);
     notifyAdded(inlay);
     return inlay;
+  }
+
+  @Override
+  public @Nullable <T extends EditorCustomElementRenderer> Inlay<T> addInlineElement(int offset,
+                                                                                     @NotNull InlayProperties properties,
+                                                                                     @NotNull T renderer) {
+    return addInlineElement(offset, properties.isRelatedToPrecedingText(), properties.getPriority(), renderer);
   }
 
   @Override
@@ -139,64 +186,102 @@ public final class InlayModelImpl implements InlayModel, PrioritizedDocumentList
                                                                                    boolean showAbove,
                                                                                    int priority,
                                                                                    @NotNull T renderer) {
+    return addBlockElement(offset, relatesToPrecedingText, showAbove, false, priority, renderer);
+  }
+
+  @Override
+  public <T extends EditorCustomElementRenderer> Inlay<T> addBlockElement(int offset,
+                                                                          @NotNull InlayProperties properties,
+                                                                          @NotNull T renderer) {
+    return addBlockElement(offset,
+                           properties.isRelatedToPrecedingText(),
+                           properties.isShownAbove(),
+                           properties.isShownWhenFolded(),
+                           properties.getPriority(),
+                           renderer);
+  }
+
+  private <T extends EditorCustomElementRenderer> Inlay<T> addBlockElement(int offset,
+                                                                           boolean relatesToPrecedingText,
+                                                                           boolean showAbove,
+                                                                           boolean showWhenFolded,
+                                                                           int priority,
+                                                                           @NotNull T renderer) {
     EditorImpl.assertIsDispatchThread();
-    offset = Math.max(0, Math.min(myEditor.getDocument().getTextLength(), offset));
-    BlockInlayImpl<T> inlay = new BlockInlayImpl<>(myEditor, offset, relatesToPrecedingText, showAbove, priority, renderer);
+    offset = Math.max(0, Math.min(myDocument.getTextLength(), offset));
+    BlockInlayImpl<T> inlay = new BlockInlayImpl<>(myEditor, offset, relatesToPrecedingText, showAbove, showWhenFolded, priority, renderer);
     notifyAdded(inlay);
     return inlay;
   }
 
   @Override
-  public <T extends EditorCustomElementRenderer> @NotNull Inlay<T> addAfterLineEndElement(int offset,
-                                                                                          boolean relatesToPrecedingText,
-                                                                                          @NotNull T renderer) {
+  public <T extends EditorCustomElementRenderer> @NotNull Inlay<@NotNull T> addAfterLineEndElement(int offset,
+                                                                                                   boolean relatesToPrecedingText,
+                                                                                                   @NotNull T renderer) {
+    return addAfterLineEndElement(offset, relatesToPrecedingText, true, 0, renderer);
+  }
+
+  @Override
+  public <T extends EditorCustomElementRenderer> Inlay<T> addAfterLineEndElement(int offset,
+                                                                                 @NotNull InlayProperties properties,
+                                                                                 @NotNull T renderer) {
+    return addAfterLineEndElement(offset, properties.isRelatedToPrecedingText(), !properties.isSoftWrappingDisabled(),
+                                  properties.getPriority(), renderer);
+  }
+
+
+  private @NotNull <T extends EditorCustomElementRenderer> Inlay<T> addAfterLineEndElement(int offset,
+                                                                                           boolean relatesToPrecedingText,
+                                                                                           boolean softWrappable,
+                                                                                           int priority,
+                                                                                           @NotNull T renderer) {
     EditorImpl.assertIsDispatchThread();
-    Document document = myEditor.getDocument();
+    Document document = myDocument;
     offset = Math.max(0, Math.min(document.getTextLength(), offset));
-    AfterLineEndInlayImpl<T> inlay = new AfterLineEndInlayImpl<>(myEditor, offset, relatesToPrecedingText, renderer);
+    AfterLineEndInlayImpl<T> inlay = new AfterLineEndInlayImpl<>(myEditor, offset, relatesToPrecedingText, softWrappable, priority,
+                                                                 renderer);
     notifyAdded(inlay);
     return inlay;
   }
 
-  @NotNull
   @Override
-  public List<Inlay<?>> getInlineElementsInRange(int startOffset, int endOffset) {
-    return getElementsInRange(myInlineElementsTree, startOffset, endOffset, inlay -> true, INLINE_ELEMENTS_COMPARATOR);
-  }
-
-  @NotNull
-  @Override
-  public <T> List<Inlay<? extends T>> getInlineElementsInRange(int startOffset, int endOffset, @NotNull Class<T> type) {
-    List<InlineInlayImpl<?>> range =
-      getElementsInRange(myInlineElementsTree, startOffset, endOffset, inlay -> type.isInstance(inlay.myRenderer),
-                         INLINE_ELEMENTS_COMPARATOR);
-    //noinspection unchecked
+  public @NotNull List<Inlay<?>> getInlineElementsInRange(int startOffset, int endOffset) {
+    List<InlineInlayImpl<?>> range = getElementsInRange(myInlineElementsTree, startOffset, endOffset, Predicates.alwaysTrue(),
+                                                        INLINE_ELEMENTS_COMPARATOR);
+    //noinspection unchecked,rawtypes
     return (List)range;
   }
 
-  @NotNull
   @Override
-  public List<Inlay<?>> getBlockElementsInRange(int startOffset, int endOffset) {
+  public @NotNull <T> List<Inlay<? extends T>> getInlineElementsInRange(int startOffset, int endOffset, @NotNull Class<T> type) {
+    List<InlineInlayImpl<?>> range = getElementsInRange(myInlineElementsTree, startOffset, endOffset,
+                                                        inlay -> type.isInstance(inlay.myRenderer),
+                                                        INLINE_ELEMENTS_COMPARATOR);
+    //noinspection unchecked,rawtypes
+    return (List)range;
+  }
+
+  @Override
+  public @NotNull List<Inlay<?>> getBlockElementsInRange(int startOffset, int endOffset) {
     List<BlockInlayImpl<?>> range =
-      getElementsInRange(myBlockElementsTree, startOffset, endOffset, inlay -> true, BLOCK_ELEMENTS_PRIORITY_COMPARATOR);
-    //noinspection unchecked
+      getElementsInRange(myBlockElementsTree, startOffset, endOffset, Predicates.alwaysTrue(), BLOCK_ELEMENTS_PRIORITY_COMPARATOR);
+    //noinspection unchecked,rawtypes
     return (List)range;
   }
 
-  @NotNull
   @Override
-  public <T> List<Inlay<? extends T>> getBlockElementsInRange(int startOffset, int endOffset, @NotNull Class<T> type) {
-    List<BlockInlayImpl<?>> range = getElementsInRange(myBlockElementsTree, startOffset, endOffset, inlay -> type.isInstance(inlay.myRenderer),
-                                                    BLOCK_ELEMENTS_PRIORITY_COMPARATOR);
-    //noinspection unchecked
+  public @NotNull <T> List<Inlay<? extends T>> getBlockElementsInRange(int startOffset, int endOffset, @NotNull Class<T> type) {
+    List<BlockInlayImpl<?>> range = getElementsInRange(myBlockElementsTree, startOffset, endOffset,
+                                                       inlay -> type.isInstance(inlay.myRenderer), BLOCK_ELEMENTS_PRIORITY_COMPARATOR);
+    //noinspection unchecked,rawtypes
     return (List)range;
   }
 
-  private static <T extends Inlay<?>> List<T> getElementsInRange(@NotNull IntervalTreeImpl<? extends T> tree,
+  private static <T extends Inlay<?>> List<T> getElementsInRange(@NotNull IntervalTree<? extends T> tree,
                                                                  int startOffset,
                                                                  int endOffset,
-                                                                 Predicate<? super T> predicate,
-                                                                 Comparator<? super T> comparator) {
+                                                                 @NotNull Predicate<? super T> predicate,
+                                                                 @NotNull Comparator<? super T> comparator) {
     List<T> result = new ArrayList<>();
     tree.processOverlappingWith(startOffset, endOffset, inlay -> {
       if (predicate.test(inlay)) result.add(inlay);
@@ -206,14 +291,13 @@ public final class InlayModelImpl implements InlayModel, PrioritizedDocumentList
     return result;
   }
 
-  @NotNull
   @Override
-  public List<Inlay<?>> getBlockElementsForVisualLine(int visualLine, boolean above) {
+  public @NotNull List<Inlay<?>> getBlockElementsForVisualLine(int visualLine, boolean above) {
     int visibleLineCount = myEditor.getVisibleLineCount();
     if (visualLine < 0 || visualLine >= visibleLineCount || myBlockElementsTree.size() == 0) return Collections.emptyList();
-    List<BlockInlayImpl> result = new ArrayList<>();
+    List<BlockInlayImpl<?>> result = new ArrayList<>();
     int startOffset = myEditor.visualLineStartOffset(visualLine);
-    int endOffset = visualLine == visibleLineCount - 1 ? myEditor.getDocument().getTextLength()
+    int endOffset = visualLine == visibleLineCount - 1 ? myDocument.getTextLength()
                                                        : myEditor.visualLineStartOffset(visualLine + 1) - 1;
     myBlockElementsTree.processOverlappingWith(startOffset, endOffset, inlay -> {
       if (inlay.myShowAbove == above && !EditorUtil.isInlayFolded(inlay)) {
@@ -221,13 +305,18 @@ public final class InlayModelImpl implements InlayModel, PrioritizedDocumentList
       }
       return true;
     });
-    if (above) Collections.reverse(result); // matters for inlays with equal priority
+    if (above) {
+      // matters for inlays with equal priority
+      Collections.reverse(result);
+    }
     result.sort(BLOCK_ELEMENTS_COMPARATOR);
-    //noinspection unchecked
+    //noinspection unchecked,rawtypes
     return (List)result;
   }
 
-  public int getHeightOfBlockElementsBeforeVisualLine(int visualLine) {
+  @ApiStatus.Internal
+  @Override
+  public int getHeightOfBlockElementsBeforeVisualLine(int visualLine, int startOffset, int prevFoldRegionIndex) {
     if (visualLine < 0 || !hasBlockElements()) return 0;
     int visibleLineCount = myEditor.getVisibleLineCount();
     if (visualLine >= visibleLineCount) {
@@ -235,12 +324,11 @@ public final class InlayModelImpl implements InlayModel, PrioritizedDocumentList
              myEditor.getFoldingModel().getTotalHeightOfFoldedBlockInlays();
     }
     int[] result = {0};
-    int startOffset = myEditor.visualLineStartOffset(visualLine);
-    int endOffset = visualLine >= visibleLineCount - 1 ? myEditor.getDocument().getTextLength()
+    int endOffset = visualLine >= visibleLineCount - 1 ? myDocument.getTextLength()
                                                        : myEditor.visualLineStartOffset(visualLine + 1) - 1;
     if (visualLine > 0) {
       result[0] += myBlockElementsTree.getSumOfValuesUpToOffset(startOffset - 1) -
-                   myEditor.getFoldingModel().getHeightOfFoldedBlockInlaysBefore(startOffset);
+                   myEditor.getFoldingModel().getHeightOfFoldedBlockInlaysBefore(prevFoldRegionIndex);
     }
     myBlockElementsTree.processOverlappingWith(startOffset, endOffset, inlay -> {
       if (inlay.myShowAbove && !EditorUtil.isInlayFolded(inlay)) {
@@ -249,6 +337,26 @@ public final class InlayModelImpl implements InlayModel, PrioritizedDocumentList
       return true;
     });
     return result[0];
+  }
+
+  /**
+   * Optimized method making {@link EditorView#getPreferredSize()} faster.
+   * Unlike {@link #getElementsInRange}, this method does not allocate and sort an array
+   */
+  @ApiStatus.Internal
+  @Override
+  public @Nullable Inlay<?> getWidestVisibleBlockInlay() {
+    AtomicInteger maxWidth = new AtomicInteger(-1);
+    Ref<Inlay<?>> inlayRef = new Ref<>(null);
+    myBlockElementsTree.processAll(inlay -> {
+      int width = inlay.getWidthInPixels();
+      if (width > maxWidth.get() && !EditorUtil.isInlayFolded(inlay)) {
+        maxWidth.set(width);
+        inlayRef.set(inlay);
+      }
+      return true;
+    });
+    return inlayRef.get();
   }
 
   @Override
@@ -281,9 +389,8 @@ public final class InlayModelImpl implements InlayModel, PrioritizedDocumentList
            visualPosition.column >= inlayStartPosition.column && visualPosition.column < inlayStartPosition.column + inlayCount;
   }
 
-  @Nullable
   @Override
-  public Inlay getInlineElementAt(@NotNull VisualPosition visualPosition) {
+  public @Nullable Inlay<?> getInlineElementAt(@NotNull VisualPosition visualPosition) {
     int offset = myEditor.visualPositionToOffset(visualPosition);
     List<Inlay<?>> inlays = getInlineElementsInRange(offset, offset);
     if (inlays.isEmpty()) return null;
@@ -293,89 +400,92 @@ public final class InlayModelImpl implements InlayModel, PrioritizedDocumentList
     return inlayIndex >= 0 && inlayIndex < inlays.size() ? inlays.get(inlayIndex) : null;
   }
 
-  @Nullable
   @Override
-  public Inlay getElementAt(@NotNull Point point) {
+  public @Nullable Inlay<?> getElementAt(@NotNull Point point) {
     return getElementAt(new EditorLocation(myEditor, point), false);
   }
 
-  Inlay getElementAt(@NotNull EditorLocation location, boolean ignoreBlockElementWidth) {
-    Insets insets = myEditor.getContentComponent().getInsets();
-    Point point = location.getPoint();
-    if (point.y < insets.top) return null; // can happen for mouse drag events
-    int relX = point.x - insets.left;
-    if (relX < 0) return null;
+  Inlay<?> getElementAt(@NotNull EditorLocation location, boolean ignoreBlockElementWidth) {
+    return EditorThreading.compute(() -> {
+      Insets insets = myEditor.getContentComponent().getInsets();
+      Point point = location.getPoint();
+      if (point.y < insets.top) return null; // can happen for mouse drag events
+      int relX = point.x - insets.left;
+      if (relX < 0) return null;
 
-    boolean hasInlineElements = hasInlineElements();
-    boolean hasBlockElements = hasBlockElements();
-    boolean hasAfterLineEndElements = hasAfterLineEndElements();
-    if (!hasInlineElements && !hasBlockElements && !hasAfterLineEndElements) return null;
+      boolean hasInlineElements = hasInlineElements();
+      boolean hasBlockElements = hasBlockElements();
+      boolean hasAfterLineEndElements = hasAfterLineEndElements();
+      if (!hasInlineElements && !hasBlockElements && !hasAfterLineEndElements) return null;
 
-    VisualPosition visualPosition = location.getVisualPosition();
-    if (hasBlockElements) {
-      int visualLine = visualPosition.line;
-      int baseY = location.getVisualLineBaseY();
-      if (point.y < baseY) {
-        List<Inlay<?>> inlays = getBlockElementsForVisualLine(visualLine, true);
-        int yDiff = baseY - point.y;
-        for (int i = inlays.size() - 1; i >= 0; i--) {
-          Inlay inlay = inlays.get(i);
-          yDiff -= inlay.getHeightInPixels();
-          if (yDiff <= 0) {
-            return ignoreBlockElementWidth || relX < inlay.getWidthInPixels() ? inlay : null;
-          }
-        }
-        LOG.error("Inconsistent state: " + point + ", " + visualPosition + ", baseY=" + baseY + ", " + inlays,
-                  new Attachment("editorState.txt", myEditor.dumpState()));
-        return null;
-      }
-      else {
-        int lineBottom = baseY + myEditor.getLineHeight();
-        if (point.y >= lineBottom) {
-          List<Inlay<?>> inlays = getBlockElementsForVisualLine(visualLine, false);
-          int yDiff = point.y - lineBottom;
-          for (Inlay inlay : inlays) {
+      VisualPosition visualPosition = location.getVisualPosition();
+      if (hasBlockElements) {
+        int visualLine = visualPosition.line;
+        int baseY = location.getVisualLineStartY();
+        if (point.y < baseY) {
+          List<Inlay<?>> inlays = getBlockElementsForVisualLine(visualLine, true);
+          int yDiff = baseY - point.y;
+          for (int i = inlays.size() - 1; i >= 0; i--) {
+            Inlay<?> inlay = inlays.get(i);
             yDiff -= inlay.getHeightInPixels();
-            if (yDiff < 0) {
-              return relX < inlay.getWidthInPixels() ? inlay : null;
+            if (yDiff <= 0) {
+              return ignoreBlockElementWidth || relX < inlay.getWidthInPixels() ? inlay : null;
             }
           }
-          LOG.error("Inconsistent state: " + point + ", " + visualPosition + ", lineBottom=" + lineBottom + ", " + inlays,
+          LOG.error("Inconsistent state: " + point + ", " + visualPosition + ", baseY=" + baseY + ", " + inlays,
                     new Attachment("editorState.txt", myEditor.dumpState()));
           return null;
         }
-      }
-    }
-    if (hasInlineElements) {
-      int offset = location.getOffset();
-      List<Inlay<?>> inlays = getInlineElementsInRange(offset, offset);
-      if (!inlays.isEmpty()) {
-        VisualPosition startVisualPosition = myEditor.offsetToVisualPosition(offset);
-        Point inlayPoint = myEditor.visualPositionToXY(startVisualPosition);
-        if (point.y < inlayPoint.y || point.y >= inlayPoint.y + myEditor.getLineHeight()) return null;
-        Inlay<?> inlay = findInlay(inlays, point.x, inlayPoint.x);
-        if (inlay != null) return inlay;
-      }
-    }
-    if (hasAfterLineEndElements) {
-      int offset = location.getOffset();
-      int logicalLine = myEditor.getDocument().getLineNumber(offset);
-      if (offset == myEditor.getDocument().getLineEndOffset(logicalLine) && !myEditor.getFoldingModel().isOffsetCollapsed(offset)) {
-        List<Inlay<?>> inlays = myEditor.getInlayModel().getAfterLineEndElementsForLogicalLine(logicalLine);
-        if (!inlays.isEmpty()) {
-          Rectangle bounds = inlays.get(0).getBounds();
-          assert bounds != null;
-          if (point.y < bounds.y || point.y >= bounds.y + bounds.height) return null;
-          Inlay<?> inlay = findInlay(inlays, point.x, bounds.x);
-          if (inlay != null) return inlay;
+        else {
+          int lineBottom = location.getVisualLineEndY();
+          if (point.y >= lineBottom) {
+            List<Inlay<?>> inlays = getBlockElementsForVisualLine(visualLine, false);
+            int yDiff = point.y - lineBottom;
+            for (Inlay<?> inlay : inlays) {
+              yDiff -= inlay.getHeightInPixels();
+              if (yDiff < 0) {
+                return relX < inlay.getWidthInPixels() ? inlay : null;
+              }
+            }
+            LOG.error("Inconsistent state: " + point + ", " + visualPosition + ", lineBottom=" + lineBottom + ", " + inlays,
+                      new Attachment("editorState.txt", myEditor.dumpState()));
+            return null;
+          }
         }
       }
-    }
-    return null;
+      if (hasInlineElements) {
+        if (location.getCollapsedRegion() == null) {
+          int offset = location.getOffset();
+          List<Inlay<?>> inlays = getInlineElementsInRange(offset, offset);
+          if (!inlays.isEmpty()) {
+            VisualPosition startVisualPosition = myEditor.offsetToVisualPosition(offset);
+            Point inlayPoint = myEditor.visualPositionToXY(startVisualPosition);
+            if (point.y < inlayPoint.y || point.y >= inlayPoint.y + myEditor.getLineHeight()) return null;
+            Inlay<?> inlay = findInlay(inlays, point.x, inlayPoint.x);
+            if (inlay != null) return inlay;
+          }
+        }
+      }
+      if (hasAfterLineEndElements) {
+        int offset = location.getOffset();
+        int logicalLine = myDocument.getLineNumber(offset);
+        if (offset == myDocument.getLineEndOffset(logicalLine) && location.getCollapsedRegion() == null) {
+          List<Inlay<?>> inlays = myEditor.getInlayModel().getAfterLineEndElementsForLogicalLine(logicalLine);
+          if (!inlays.isEmpty()) {
+            Rectangle bounds = inlays.get(0).getBounds();
+            assert bounds != null;
+            if (point.y < bounds.y || point.y >= bounds.y + bounds.height) return null;
+            Inlay<?> inlay = findInlay(inlays, point.x, bounds.x);
+            if (inlay != null) return inlay;
+          }
+        }
+      }
+      return null;
+    });
   }
 
-  private static Inlay<?> findInlay(List<Inlay<?>> inlays, int x, int startX) {
-    for (Inlay inlay : inlays) {
+  private static Inlay<?> findInlay(List<? extends Inlay<?>> inlays, int x, int startX) {
+    for (Inlay<?> inlay : inlays) {
       int endX = startX + inlay.getWidthInPixels();
       if (x >= startX && x < endX) return inlay;
       startX = endX;
@@ -383,35 +493,37 @@ public final class InlayModelImpl implements InlayModel, PrioritizedDocumentList
     return null;
   }
 
-  @NotNull
   @Override
-  public List<Inlay<?>> getAfterLineEndElementsInRange(int startOffset, int endOffset) {
-    if (!hasAfterLineEndElements()) return Collections.emptyList();
+  public @NotNull List<Inlay<?>> getAfterLineEndElementsInRange(int startOffset, int endOffset) {
+    if (!hasAfterLineEndElements()) {
+      return List.of();
+    }
     List<AfterLineEndInlayImpl<?>> range =
-      getElementsInRange(myAfterLineEndElementsTree, startOffset, endOffset, inlay -> true, AFTER_LINE_END_ELEMENTS_OFFSET_COMPARATOR);
-    //noinspection unchecked
+      getElementsInRange(myAfterLineEndElementsTree, startOffset, endOffset, Predicates.alwaysTrue(), AFTER_LINE_END_ELEMENTS_OFFSET_COMPARATOR);
+    //noinspection unchecked,rawtypes
     return (List)range;
   }
 
-  @NotNull
   @Override
-  public <T> List<Inlay<? extends T>> getAfterLineEndElementsInRange(int startOffset, int endOffset, @NotNull Class<T> type) {
-    if (!hasAfterLineEndElements()) return Collections.emptyList();
-    List<AfterLineEndInlayImpl> range =
+  public @NotNull <T> List<Inlay<? extends T>> getAfterLineEndElementsInRange(int startOffset, int endOffset, @NotNull Class<T> type) {
+    if (!hasAfterLineEndElements()) {
+      return List.of();
+    }
+
+    List<AfterLineEndInlayImpl<?>> range =
       getElementsInRange(myAfterLineEndElementsTree, startOffset, endOffset, inlay -> type.isInstance(inlay.myRenderer),
                          AFTER_LINE_END_ELEMENTS_OFFSET_COMPARATOR);
-    //noinspection unchecked
+    //noinspection unchecked,rawtypes
     return (List)range;
   }
 
-  @NotNull
   @Override
-  public List<Inlay<?>> getAfterLineEndElementsForLogicalLine(int logicalLine) {
-    DocumentEx document = myEditor.getDocument();
+  public @NotNull List<Inlay<?>> getAfterLineEndElementsForLogicalLine(int logicalLine) {
+    DocumentEx document = myDocument;
     if (!hasAfterLineEndElements() || logicalLine < 0 || logicalLine > 0 && logicalLine >= document.getLineCount()) {
       return Collections.emptyList();
     }
-    List<AfterLineEndInlayImpl> result = new ArrayList<>();
+    List<AfterLineEndInlayImpl<?>> result = new ArrayList<>();
     int startOffset = document.getLineStartOffset(logicalLine);
     int endOffset = document.getLineEndOffset(logicalLine);
     myAfterLineEndElementsTree.processOverlappingWith(startOffset, endOffset, inlay -> {
@@ -419,10 +531,11 @@ public final class InlayModelImpl implements InlayModel, PrioritizedDocumentList
       return true;
     });
     result.sort(AFTER_LINE_END_ELEMENTS_COMPARATOR);
-    //noinspection unchecked
+    //noinspection unchecked,rawtypes
     return (List)result;
   }
 
+  @Override
   public boolean hasAfterLineEndElements() {
     return myAfterLineEndElementsTree.size() > 0;
   }
@@ -462,15 +575,15 @@ public final class InlayModelImpl implements InlayModel, PrioritizedDocumentList
     myDispatcher.addListener(listener, disposable);
   }
 
-  private void notifyAdded(InlayImpl inlay) {
+  private void notifyAdded(InlayImpl<?, ?> inlay) {
     myDispatcher.getMulticaster().onAdded(inlay);
   }
 
-  void notifyChanged(InlayImpl inlay, int changeFlags) {
+  void notifyChanged(InlayImpl<?, ?> inlay, int changeFlags) {
     myDispatcher.getMulticaster().onUpdated(inlay, changeFlags);
   }
 
-  void notifyRemoved(InlayImpl inlay) {
+  void notifyRemoved(InlayImpl<?,?> inlay) {
     myDispatcher.getMulticaster().onRemoved(inlay);
   }
 
@@ -487,21 +600,20 @@ public final class InlayModelImpl implements InlayModel, PrioritizedDocumentList
 
   @TestOnly
   public void validateState() {
-    for (Inlay inlay : getInlineElementsInRange(0, myEditor.getDocument().getTextLength())) {
-      LOG.assertTrue(!DocumentUtil.isInsideSurrogatePair(myEditor.getDocument(), inlay.getOffset()));
+    for (Inlay<?> inlay : getInlineElementsInRange(0, myDocument.getTextLength())) {
+      LOG.assertTrue(!DocumentUtil.isInsideSurrogatePair(myDocument, inlay.getOffset()));
     }
   }
 
-  @NotNull
   @Override
-  public String dumpState() {
+  public @NotNull String dumpState() {
     return "Inline elements: " + dumpInlays(myInlineElementsTree)
            + ", after-line-end elements: " + dumpInlays(myAfterLineEndElementsTree)
            + ", block elements: " + dumpInlays(myBlockElementsTree);
   }
 
 
-  private static String dumpInlays(RangeMarkerTree<? extends InlayImpl> tree) {
+  private static String dumpInlays(RangeMarkerTree<? extends InlayImpl<?,?>> tree) {
     StringJoiner joiner = new StringJoiner(",", "[", "]");
     tree.processAll(o -> {
       joiner.add(Integer.toString(o.getOffset()));
@@ -510,22 +622,26 @@ public final class InlayModelImpl implements InlayModel, PrioritizedDocumentList
     return joiner.toString();
   }
 
-  private class InlineElementsTree extends HardReferencingRangeMarkerTree<InlineInlayImpl<?>> {
+  public static boolean showWhenFolded(@NotNull Inlay<?> inlay) {
+    return inlay instanceof BlockInlayImpl && ((BlockInlayImpl<?>)inlay).myShowWhenFolded;
+  }
+
+  private final class InlineElementsTree extends HardReferencingRangeMarkerTree<InlineInlayImpl<?>> {
     InlineElementsTree(@NotNull Document document) {
       super(document);
     }
 
-    @NotNull
     @Override
-    protected RMNode<InlineInlayImpl<?>> createNewNode(@NotNull InlineInlayImpl key, int start, int end,
-                                                  boolean greedyToLeft, boolean greedyToRight, boolean stickingToRight, int layer) {
-      return new RMNode<InlineInlayImpl<?>>(this, key, start, end, greedyToLeft, greedyToRight, stickingToRight) {
+    protected @NotNull RMNode<InlineInlayImpl<?>> createNewNode(@NotNull InlineInlayImpl<?> key, int start, int end,
+                                                                boolean greedyToLeft, boolean greedyToRight, boolean stickingToRight, int layer) {
+      return new RMNode<>(this, key, start, end, greedyToLeft, greedyToRight, stickingToRight) {
         @Override
-        void addIntervalsFrom(@NotNull IntervalNode<InlineInlayImpl<?>> otherNode) {
+        protected void addIntervalsFrom(@NotNull IntervalNode<InlineInlayImpl<?>> otherNode) {
           super.addIntervalsFrom(otherNode);
           if (myPutMergedIntervalsAtBeginning) {
-            List<Getter<InlineInlayImpl<?>>> added = ContainerUtil.subList(intervals, intervals.size() - otherNode.intervals.size());
-            List<Getter<InlineInlayImpl<?>>> addedCopy = new ArrayList<>(added);
+            List<Supplier<? extends InlineInlayImpl<?>>> added =
+              ContainerUtil.subList(intervals, intervals.size() - otherNode.intervals.size());
+            List<Supplier<? extends InlineInlayImpl<?>>> addedCopy = new ArrayList<>(added);
             added.clear();
             intervals.addAll(0, addedCopy);
           }
@@ -534,8 +650,8 @@ public final class InlayModelImpl implements InlayModel, PrioritizedDocumentList
     }
 
     @Override
-    void fireBeforeRemoved(@NotNull InlineInlayImpl inlay, @NotNull @NonNls Object reason) {
-      if (inlay.getUserData(InlayImpl.OFFSET_BEFORE_DISPOSAL) == null) {
+    protected void fireBeforeRemoved(@NotNull InlineInlayImpl<?> inlay) {
+      if (inlay.getUserData(OFFSET_BEFORE_DISPOSAL) == null) {
         if (myMoveInProgress) {
           // delay notification about invalidated inlay - folding model is not consistent at this point
           // (FoldingModelImpl.moveTextHappened hasn't been called yet at this point)
@@ -554,21 +670,21 @@ public final class InlayModelImpl implements InlayModel, PrioritizedDocumentList
     }
 
     @Override
-    void fireBeforeRemoved(@NotNull BlockInlayImpl inlay, @NotNull @NonNls Object reason) {
-      if (inlay.getUserData(InlayImpl.OFFSET_BEFORE_DISPOSAL) == null) {
+    protected void fireBeforeRemoved(@NotNull BlockInlayImpl<?> inlay) {
+      if (inlay.getUserData(OFFSET_BEFORE_DISPOSAL) == null) {
         notifyRemoved(inlay);
       }
     }
   }
 
-  private class AfterLineEndElementTree extends HardReferencingRangeMarkerTree<AfterLineEndInlayImpl<?>> {
+  private final class AfterLineEndElementTree extends HardReferencingRangeMarkerTree<AfterLineEndInlayImpl<?>> {
     AfterLineEndElementTree(@NotNull Document document) {
       super(document);
     }
 
     @Override
-    void fireBeforeRemoved(@NotNull AfterLineEndInlayImpl inlay, @NotNull @NonNls Object reason) {
-      if (inlay.getUserData(InlayImpl.OFFSET_BEFORE_DISPOSAL) == null) {
+    protected void fireBeforeRemoved(@NotNull AfterLineEndInlayImpl<?> inlay) {
+      if (inlay.getUserData(OFFSET_BEFORE_DISPOSAL) == null) {
         notifyRemoved(inlay);
       }
     }
