@@ -1,28 +1,32 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.execution.configurations;
 
-import com.intellij.openapi.util.SystemInfo;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.util.EnvironmentUtil;
 import com.intellij.util.SmartList;
 import com.intellij.util.containers.ContainerUtil;
+import com.intellij.util.system.OS;
 import org.jetbrains.annotations.Contract;
-import org.jetbrains.annotations.NonNls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
+import org.jetbrains.annotations.Unmodifiable;
 
 import java.io.File;
 import java.io.FileFilter;
-import java.util.Collection;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Locale;
+import java.util.Map;
 
 /**
  * A collection of utility methods for working with PATH environment variable.
  */
+@SuppressWarnings("IO_FILE_USAGE")
 public final class PathEnvironmentVariableUtil {
-
-  private static final String PATH = "PATH";
+  private static final Map<String, Boolean> ourOnPathCache = Collections.synchronizedMap(new HashMap<>());
 
   private PathEnvironmentVariableUtil() { }
 
@@ -33,8 +37,7 @@ public final class PathEnvironmentVariableUtil {
    * @param fileBaseName file base name
    * @return {@link File} instance or null if not found
    */
-  @Nullable
-  public static File findInPath(@NotNull @NonNls String fileBaseName) {
+  public static @Nullable File findInPath(@NotNull String fileBaseName) {
     return findInPath(fileBaseName, null);
   }
 
@@ -46,24 +49,22 @@ public final class PathEnvironmentVariableUtil {
    * @param filter       exe file filter
    * @return {@link File} instance or null if not found
    */
-  @Nullable
-  public static File findInPath(@NotNull String fileBaseName, @Nullable FileFilter filter) {
+  public static @Nullable File findInPath(@NotNull String fileBaseName, @Nullable FileFilter filter) {
     return findInPath(fileBaseName, getPathVariableValue(), filter);
   }
 
   /**
    * Finds an executable file with the specified base name, that is located in a directory
-   * listed in the passed PATH environment variable value and is accepted by filter.
+   * listed in the given PATH environment variable value and is accepted by filter.
    *
    * @param fileBaseName      file base name
    * @param pathVariableValue value of PATH environment variable
    * @param filter            exe file filter
    * @return {@link File} instance or null if not found
    */
-  @Nullable
-  public static File findInPath(@NotNull String fileBaseName, @Nullable String pathVariableValue, @Nullable FileFilter filter) {
-    List<File> exeFiles = findExeFilesInPath(true, filter, pathVariableValue, fileBaseName);
-    return ContainerUtil.getFirstItem(exeFiles);
+  public static @Nullable File findInPath(@NotNull String fileBaseName, @Nullable String pathVariableValue, @Nullable FileFilter filter) {
+    var exeFiles = findExeFilesInPath(true, filter, pathVariableValue, fileBaseName);
+    return !exeFiles.isEmpty() ? exeFiles.get(0) : null;
   }
 
   /**
@@ -73,31 +74,30 @@ public final class PathEnvironmentVariableUtil {
    * @param fileBaseName file base name
    * @return file list
    */
-  @NotNull
-  public static List<File> findAllExeFilesInPath(@NotNull String fileBaseName) {
+  public static @NotNull List<File> findAllExeFilesInPath(@NotNull String fileBaseName) {
     return findAllExeFilesInPath(fileBaseName, null);
   }
 
-  @NotNull
-  public static List<File> findAllExeFilesInPath(@NotNull String fileBaseName, @Nullable FileFilter filter) {
+  public static @NotNull List<File> findAllExeFilesInPath(@NotNull String fileBaseName, @Nullable FileFilter filter) {
     return findExeFilesInPath(false, filter, getPathVariableValue(), fileBaseName);
   }
 
-  @NotNull
-  private static List<File> findExeFilesInPath(boolean stopAfterFirstMatch,
-                                               @Nullable FileFilter filter,
-                                               @Nullable String pathEnvVarValue,
-                                               String @NotNull ... fileBaseNames) {
+  private static @NotNull List<File> findExeFilesInPath(
+    boolean stopAfterFirstMatch,
+    @Nullable FileFilter filter,
+    @Nullable String pathEnvVarValue,
+    String @NotNull ... fileBaseNames
+  ) {
     if (pathEnvVarValue == null) {
-      return Collections.emptyList();
+      return List.of();
     }
-    List<File> result = new SmartList<>();
-    List<String> dirPaths = getPathDirs(pathEnvVarValue);
-    for (String dirPath : dirPaths) {
-      File dir = new File(dirPath);
+    var result = new SmartList<File>();
+    var dirPaths = getPathDirs(pathEnvVarValue);
+    for (var dirPath : dirPaths) {
+      var dir = new File(dirPath);
       if (dir.isAbsolute() && dir.isDirectory()) {
-        for (String fileBaseName : fileBaseNames) {
-          File exeFile = new File(dir, fileBaseName);
+        for (var fileBaseName : fileBaseNames) {
+          var exeFile = new File(dir, fileBaseName);
           if (exeFile.isFile() && exeFile.canExecute()) {
             if (filter == null || filter.accept(exeFile)) {
               result.add(exeFile);
@@ -112,40 +112,35 @@ public final class PathEnvironmentVariableUtil {
     return result;
   }
 
-  @NotNull
-  public static List<String> getPathDirs(@NotNull String pathEnvVarValue) {
+  public static @NotNull @Unmodifiable List<String> getPathDirs(@NotNull String pathEnvVarValue) {
     return StringUtil.split(pathEnvVarValue, File.pathSeparator, true, true);
   }
 
-  @NotNull
-  public static List<String> getWindowsExecutableFileExtensions() {
-    if (SystemInfo.isWindows) {
-      String allExtensions = System.getenv("PATHEXT");
+  public static @NotNull @Unmodifiable List<String> getWindowsExecutableFileExtensions() {
+    if (OS.CURRENT == OS.Windows) {
+      @SuppressWarnings("SpellCheckingInspection") var allExtensions = System.getenv("PATHEXT");
       if (allExtensions != null) {
-        Collection<String> extensions = StringUtil.split(allExtensions, ";", true, true);
-        extensions = ContainerUtil.filter(extensions, s -> !StringUtil.isEmpty(s) && s.startsWith("."));
-        return ContainerUtil.map2List(extensions, s -> StringUtil.toLowerCase(s));
+        return StringUtil.split(allExtensions, ";", true, true).stream()
+          .filter(ext -> ext.startsWith("."))
+          .map(ext -> ext.toLowerCase(Locale.ROOT))
+          .toList();
       }
     }
-    return Collections.emptyList();
+    return List.of();
   }
 
-  @NotNull
-  public static String findExecutableInWindowsPath(@NotNull String exePath) {
-    return findExecutableInWindowsPath(exePath, exePath);
+  public static @NotNull String findExecutableInWindowsPath(@NotNull String baseName) {
+    return findExecutableInWindowsPath(baseName, baseName);
   }
 
   @Contract("_, !null -> !null")
-  public static String findExecutableInWindowsPath(@NotNull String exePath, @Nullable String defaultPath) {
-    if (SystemInfo.isWindows) {
-      if (!StringUtil.containsChar(exePath, '/') && !StringUtil.containsChar(exePath, '\\')) {
-        List<String> executableFileExtensions = getWindowsExecutableFileExtensions();
-
-        String[] baseNames = ContainerUtil.map2Array(executableFileExtensions, String.class, s -> exePath+s);
-        List<File> exeFiles = findExeFilesInPath(true, null, getPathVariableValue(), baseNames);
-        File foundFile = ContainerUtil.getFirstItem(exeFiles);
-        if(foundFile != null){
-          return foundFile.getAbsolutePath();
+  public static String findExecutableInWindowsPath(@NotNull String baseName, @Nullable String defaultPath) {
+    if (OS.CURRENT == OS.Windows) {
+      if (!StringUtil.containsChar(baseName, '/') && !StringUtil.containsChar(baseName, '\\')) {
+        var fileNames = ContainerUtil.map2Array(getWindowsExecutableFileExtensions(), String.class, ext -> baseName + ext);
+        var exeFiles = findExeFilesInPath(true, null, getPathVariableValue(), fileNames);
+        if (!exeFiles.isEmpty()) {
+          return exeFiles.get(0).getAbsolutePath();
         }
       }
     }
@@ -155,8 +150,43 @@ public final class PathEnvironmentVariableUtil {
   /**
    * Retrieves the value of PATH environment variable
    */
-  @Nullable
-  public static String getPathVariableValue() {
-    return EnvironmentUtil.getValue(PATH);
+  public static @Nullable String getPathVariableValue() {
+    return EnvironmentUtil.getValue("PATH");
+  }
+
+  public static @Nullable File findExecutableInPathOnAnyOS(@NotNull String baseName) {
+    if (OS.CURRENT == OS.Windows) {
+      var fileNames = ContainerUtil.map2Array(getWindowsExecutableFileExtensions(), String.class, ext -> baseName + ext);
+      var exeFiles = findExeFilesInPath(true, null, getPathVariableValue(), fileNames);
+      return !exeFiles.isEmpty() ? exeFiles.get(0) : null;
+    }
+    else {
+      return findInPath(baseName);
+    }
+  }
+
+  /**
+   * Checks whether the given file is in one of the directories listed in the PATH environment variable.
+   * The first call might be slow, but the result is cached.
+   *
+   * @since 2025.3
+   */
+  public static boolean isOnPath(@NotNull String name) {
+    if (name.indexOf('\\') >= 0 || name.indexOf('/') >= 0) throw new IllegalArgumentException(name);
+    var result = ourOnPathCache.get(name);
+    if (result == null) {
+      result = Boolean.FALSE;
+      var path = getPathVariableValue();
+      if (path != null) {
+        for (var dir : StringUtil.tokenize(path, File.pathSeparator)) {
+          if (Files.isExecutable(Path.of(dir, name))) {
+            result = Boolean.TRUE;
+            break;
+          }
+        }
+      }
+      ourOnPathCache.put(name, result);
+    }
+    return result;
   }
 }
