@@ -1,12 +1,11 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.remoteServer.impl.runtime;
 
 import com.intellij.execution.ExecutionException;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.project.Project;
-import com.intellij.openapi.project.ProjectManager;
-import com.intellij.openapi.project.ProjectManagerListener;
+import com.intellij.openapi.project.ProjectCloseListener;
 import com.intellij.openapi.util.EmptyRunnable;
 import com.intellij.remoteServer.CloudBundle;
 import com.intellij.remoteServer.configuration.RemoteServer;
@@ -20,7 +19,11 @@ import com.intellij.remoteServer.runtime.ConnectionStatus;
 import com.intellij.remoteServer.runtime.Deployment;
 import com.intellij.remoteServer.runtime.ServerConnection;
 import com.intellij.remoteServer.runtime.ServerConnector;
-import com.intellij.remoteServer.runtime.deployment.*;
+import com.intellij.remoteServer.runtime.deployment.DeploymentLogManager;
+import com.intellij.remoteServer.runtime.deployment.DeploymentRuntime;
+import com.intellij.remoteServer.runtime.deployment.DeploymentStatus;
+import com.intellij.remoteServer.runtime.deployment.DeploymentTask;
+import com.intellij.remoteServer.runtime.deployment.ServerRuntimeInstance;
 import com.intellij.remoteServer.runtime.deployment.debug.DebugConnectionData;
 import com.intellij.remoteServer.runtime.deployment.debug.DebugConnectionDataNotAvailableException;
 import com.intellij.remoteServer.runtime.deployment.debug.DebugConnector;
@@ -30,9 +33,21 @@ import org.jetbrains.annotations.Nls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.HashMap;
+import java.util.IdentityHashMap;
+import java.util.Iterator;
+import java.util.LinkedHashSet;
+import java.util.LinkedList;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Set;
+import java.util.TreeMap;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 
 public class ServerConnectionImpl<D extends DeploymentConfiguration> implements ServerConnection<D> {
   private static final Logger LOG = Logger.getInstance(ServerConnectionImpl.class);
@@ -70,15 +85,14 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
   }
 
   @Override
-  @Nls
-  public @NotNull String getStatusText() {
+  public @Nls @NotNull String getStatusText() {
     return myStatusText != null ? myStatusText : myStatus.getPresentableText();
   }
 
   @Override
   public void connect(final @NotNull Runnable onFinished) {
     doDisconnect();
-    connectIfNeeded(new ServerConnector.ConnectionCallback<D>() {
+    connectIfNeeded(new ServerConnector.ConnectionCallback<>() {
       @Override
       public void connected(@NotNull ServerRuntimeInstance<D> serverRuntimeInstance) {
         onFinished.run();
@@ -119,7 +133,7 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
   @Override
   public void deploy(final @NotNull DeploymentTask<D> task,
                      final java.util.function.@NotNull Consumer<? super String> onDeploymentStarted) {
-    connectIfNeeded(new ConnectionCallbackBase<D>() {
+    connectIfNeeded(new ConnectionCallbackBase<>() {
       @Override
       public void connected(@NotNull ServerRuntimeInstance<D> instance) {
         LocalDeploymentImpl<?> deployment = new LocalDeploymentImpl<>(instance,
@@ -157,7 +171,7 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
 
   @Override
   public void computeDeployments(final @NotNull Runnable onFinished) {
-    connectIfNeeded(new ConnectionCallbackBase<D>() {
+    connectIfNeeded(new ConnectionCallbackBase<>() {
       @Override
       public void connected(@NotNull ServerRuntimeInstance<D> instance) {
         computeDeployments(instance, onFinished);
@@ -167,7 +181,7 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
 
   private void computeDeployments(ServerRuntimeInstance<D> instance, final Runnable onFinished) {
     instance.computeDeployments(new ServerRuntimeInstance.ComputeDeploymentsCallback() {
-      private final List<DeploymentImpl> myCollectedDeployments = Collections.synchronizedList(new ArrayList<>());
+      private final List<DeploymentImpl<?>> myCollectedDeployments = Collections.synchronizedList(new ArrayList<>());
 
       @Override
       public void addDeployment(@NotNull String deploymentName) {
@@ -187,7 +201,7 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
         if (status == null) {
           status = DeploymentStatus.DEPLOYED;
         }
-        DeploymentImpl result = myAllDeployments.updateRemoteState(name, runtime, status, statusText);
+        DeploymentImpl<?> result = myAllDeployments.updateRemoteState(name, runtime, status, statusText);
         if (result == null) {
           result = new DeploymentImpl<>(ServerConnectionImpl.this,
                                         name,
@@ -233,7 +247,7 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
       .map(nextForProject -> nextForProject.findManager(deployment))
       .filter(Objects::nonNull)
       .map(DeploymentLogManagerImpl::getMainLoggingHandler)
-      .collect(Collectors.toList());
+      .toList();
 
     final Consumer<String> logConsumer = message -> {
       if (handlers.isEmpty()) {
@@ -301,7 +315,7 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
   private void setupProjectListener() {
     if (myMessageBusConnection == null) {
       myMessageBusConnection = ApplicationManager.getApplication().getMessageBus().connect();
-      myMessageBusConnection.subscribe(ProjectManager.TOPIC, new ProjectManagerListener() {
+      myMessageBusConnection.subscribe(ProjectCloseListener.TOPIC, new ProjectCloseListener() {
         @Override
         public void projectClosed(@NotNull Project project) {
           onProjectClosed(project);
@@ -319,7 +333,7 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
     }
 
     setStatus(ConnectionStatus.CONNECTING);
-    myConnector.connect(new ServerConnector.ConnectionCallback<D>() {
+    myConnector.connect(new ServerConnector.ConnectionCallback<>() {
       @Override
       public void connected(@NotNull ServerRuntimeInstance<D> instance) {
         setStatus(ConnectionStatus.CONNECTED);
@@ -409,16 +423,21 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
     private final String myDeploymentName;
     private final DeploymentTaskImpl<D> myDeploymentTask;
     private final LoggingHandlerImpl myLoggingHandler;
-    private final DeploymentImpl myDeployment;
+    private final DeploymentImpl<?> myDeployment;
 
     DeploymentOperationCallbackImpl(String deploymentName,
                                     DeploymentTaskImpl<D> deploymentTask,
                                     LoggingHandlerImpl handler,
-                                    DeploymentImpl deployment) {
+                                    DeploymentImpl<?> deployment) {
       myDeploymentName = deploymentName;
       myDeploymentTask = deploymentTask;
       myLoggingHandler = handler;
       myDeployment = deployment;
+    }
+
+    @Override
+    public void started(@NotNull DeploymentRuntime deploymentRuntime) {
+      myDeployment.changeState(myDeployment.getStatus(), DeploymentStatus.DEPLOYING, null, deploymentRuntime);
     }
 
     @Override
@@ -460,6 +479,14 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
                                       DeploymentStatus.DEPLOYING, DeploymentStatus.NOT_DEPLOYED, errorMessage);
       myEventDispatcher.queueDeploymentsChanged(ServerConnectionImpl.this);
     }
+
+    @Override
+    public void errorOccurred(@NotNull @Nls String errorMessage,
+                              @NotNull DeploymentRuntime failedDeployment) {
+      myLoggingHandler.printlnSystemMessage("Failed to deploy '" + myDeploymentName + "': " + errorMessage);
+      myDeployment.changeState(DeploymentStatus.DEPLOYING, DeploymentStatus.NOT_DEPLOYED, errorMessage, failedDeployment);
+      myEventDispatcher.queueDeploymentsChanged(ServerConnectionImpl.this);
+    }
   }
 
   private class ChangeListener implements Runnable {
@@ -473,8 +500,8 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
   private static class MyDeployments {
     private final Object myLock = new Object();
 
-    private final Map<String, DeploymentImpl> myRemoteDeployments = new HashMap<>();
-    private final Map<String, LocalDeploymentImpl> myLocalDeployments = new HashMap<>();
+    private final Map<String, DeploymentImpl<?>> myRemoteDeployments = new HashMap<>();
+    private final Map<String, LocalDeploymentImpl<?>> myLocalDeployments = new HashMap<>();
     private List<Deployment> myCachedAllDeployments;
     private final Comparator<? super Deployment> myDeploymentComparator;
 
@@ -489,11 +516,11 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
       }
     }
 
-    public void replaceRemotesWith(@NotNull Collection<DeploymentImpl> newDeployments) {
+    public void replaceRemotesWith(@NotNull Collection<? extends DeploymentImpl> newDeployments) {
       synchronized (myLock) {
         myRemoteDeployments.clear();
         myCachedAllDeployments = null;
-        for (DeploymentImpl deployment : newDeployments) {
+        for (DeploymentImpl<?> deployment : newDeployments) {
           myRemoteDeployments.put(deployment.getName(), deployment);
         }
       }
@@ -505,7 +532,7 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
                                                       @Nullable @Nls String deploymentStatusText) {
 
       synchronized (myLock) {
-        DeploymentImpl result = myRemoteDeployments.get(deploymentName);
+        DeploymentImpl<?> result = myRemoteDeployments.get(deploymentName);
         if (result != null && !result.getStatus().isTransition()) {
           result.changeState(result.getStatus(), deploymentStatus, deploymentStatusText, deploymentRuntime);
         }
@@ -536,10 +563,10 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
 
     private Collection<Deployment> doListDeployments() {
       //assumed myLock
-      Map<Deployment, DeploymentImpl> orderedDeployments = new TreeMap<>(myDeploymentComparator);
-      List<LocalDeploymentImpl> matchedLocalsBefore = new LinkedList<>();
+      Map<Deployment, DeploymentImpl<?>> orderedDeployments = new TreeMap<>(myDeploymentComparator);
+      List<LocalDeploymentImpl<?>> matchedLocalsBefore = new ArrayList<>();
 
-      for (LocalDeploymentImpl localDeployment : myLocalDeployments.values()) {
+      for (LocalDeploymentImpl<?> localDeployment : myLocalDeployments.values()) {
         if (localDeployment.hasRemoteDeloyment()) {
           matchedLocalsBefore.add(localDeployment);
         }
@@ -549,11 +576,11 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
 
       Set<Deployment> result = new LinkedHashSet<>(orderedDeployments.keySet());
 
-      for (DeploymentImpl remoteDeployment : myRemoteDeployments.values()) {
-        DeploymentImpl deployment = orderedDeployments.get(remoteDeployment);
+      for (DeploymentImpl<?> remoteDeployment : myRemoteDeployments.values()) {
+        DeploymentImpl<?> deployment = orderedDeployments.get(remoteDeployment);
         if (deployment != null) {
           if (deployment instanceof LocalDeploymentImpl) {
-            ((LocalDeploymentImpl)deployment).setRemoteDeployment(remoteDeployment);
+            ((LocalDeploymentImpl<?>)deployment).setRemoteDeployment(remoteDeployment);
           }
         }
         else {
@@ -562,7 +589,7 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
       }
 
       final DeploymentStatus finishedExternally = DeploymentStatus.NOT_DEPLOYED;
-      for (LocalDeploymentImpl nextLocal : matchedLocalsBefore) {
+      for (LocalDeploymentImpl<?> nextLocal : matchedLocalsBefore) {
         if (!nextLocal.hasRemoteDeloyment()) {
           nextLocal.changeState(nextLocal.getStatus(), finishedExternally, null, null);
         }
@@ -575,9 +602,9 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
     public boolean removeAllLocalForProject(@NotNull Project project) {
       synchronized (myLock) {
         boolean hasChanged = false;
-        for (Iterator<LocalDeploymentImpl> it = myLocalDeployments.values().iterator(); it.hasNext(); ) {
-          LocalDeploymentImpl nextLocal = it.next();
-          if (nextLocal.getDeploymentTask() != null && nextLocal.getDeploymentTask().getProject() == project) {
+        for (Iterator<LocalDeploymentImpl<?>> it = myLocalDeployments.values().iterator(); it.hasNext(); ) {
+          LocalDeploymentImpl<?> nextLocal = it.next();
+          if (nextLocal.getDeploymentTask().getProject() == project) {
             it.remove();
             hasChanged = true;
           }
@@ -591,7 +618,7 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
 
     public @Nullable UndeployTransition startUndeploy(@NotNull String deploymentName) {
       synchronized (myLock) {
-        DeploymentImpl deployment = myLocalDeployments.get(deploymentName);
+        DeploymentImpl<?> deployment = myLocalDeployments.get(deploymentName);
         if (deployment == null) {
           deployment = myRemoteDeployments.get(deploymentName);
         }
@@ -602,10 +629,10 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
     private @NotNull List<Deployment> collectDeepChildren(@NotNull Deployment root) {
       DeepChildrenCollector collector = new DeepChildrenCollector(root.getRuntime());
       synchronized (myLock) {
-        for (LocalDeploymentImpl nextLocal : myLocalDeployments.values()) {
+        for (LocalDeploymentImpl<?> nextLocal : myLocalDeployments.values()) {
           collector.visitDeployment(nextLocal);
         }
-        for (DeploymentImpl nextRemote : myRemoteDeployments.values()) {
+        for (DeploymentImpl<?> nextRemote : myRemoteDeployments.values()) {
           collector.visitDeployment(nextRemote);
         }
       }
@@ -613,10 +640,10 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
     }
 
     private class UndeployTransition {
-      private final DeploymentImpl myDeployment;
+      private final DeploymentImpl<?> myDeployment;
       private final List<Deployment> mySubDeployments;
 
-      UndeployTransition(@NotNull DeploymentImpl deployment, @NotNull List<Deployment> subDeployments) {
+      UndeployTransition(@NotNull DeploymentImpl<?> deployment, @NotNull List<Deployment> subDeployments) {
         myDeployment = deployment;
         mySubDeployments = new ArrayList<>(subDeployments);
 
