@@ -1,58 +1,58 @@
-// Copyright 2000-2019 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.openapi.ui;
 
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.util.SystemInfo;
-import com.intellij.openapi.wm.FocusWatcher;
 import com.intellij.util.MathUtil;
-import com.intellij.util.ui.EmptyIcon;
-import com.intellij.util.ui.JBUI;
+import com.intellij.util.ObjectUtils;
+import com.intellij.util.ui.JBSwingUtilities;
 import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NonNls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import javax.swing.*;
-import java.awt.*;
+import javax.swing.JComponent;
+import javax.swing.JPanel;
+import javax.swing.JScrollPane;
+import javax.swing.JViewport;
+import javax.swing.SwingUtilities;
+import java.awt.AWTEvent;
+import java.awt.Component;
+import java.awt.Cursor;
+import java.awt.Dimension;
+import java.awt.Graphics;
+import java.awt.GridBagLayout;
+import java.awt.Point;
+import java.awt.Rectangle;
 import java.awt.event.MouseEvent;
 
-/**
- * @author Vladimir Kondratyev
- */
+import static java.lang.Math.abs;
+
 public class Splitter extends JPanel implements Splittable {
-  private static final Icon SplitGlueH = EmptyIcon.create(6, 17);
-  private static final Icon SplitGlueV = EmptyIcon.create(17, 6);
-  private static final Logger LOG = Logger.getInstance("#com.intellij.openapi.ui.Splitter");
-  @NonNls public static final String PROP_PROPORTION = "proportion";
-  @NonNls public static final String PROP_ORIENTATION = "orientation";
+  private static final Logger LOG = Logger.getInstance(Splitter.class);
+  public static final @NonNls String PROP_PROPORTION = "proportion";
+  public static final @NonNls String PROP_ORIENTATION = "orientation";
 
   private int myDividerWidth;
   /**
-   * /------/
-   * |  1   |
-   * This is vertical split |------|
-   * |  2   |
-   * /------/
-   * <p/>
-   * /-------/
-   * |   |   |
-   * This is horizontal split | 1 | 2 |
-   * |   |   |
-   * /-------/
+   * If {@code true}, the components are displayed above one another.<br>
+   * If {@code false}, the components are displayed side by side.
    */
   private boolean myVerticalSplit;
   private boolean myHonorMinimumSize;
   private boolean myHonorPreferredSize;
+  private boolean myUseViewportViewSizes;
   private final float myMinProp;
   private final float myMaxProp;
 
 
+  @ApiStatus.Internal
   protected float myProportion;// first size divided by (first + second)
+  private Float myLagProportion;
 
   protected final Divider myDivider;
   private JComponent mySecondComponent;
   private JComponent myFirstComponent;
-  private final FocusWatcher myFocusWatcher;
   private boolean myShowDividerIcon;
   private boolean myShowDividerControls;
   private boolean mySkipNextLayout;
@@ -63,44 +63,56 @@ public class Splitter extends JPanel implements Splittable {
     HONOR_THE_FIRST_MIN_SIZE,
     HONOR_THE_SECOND_MIN_SIZE
   }
-  @NotNull
-  private LackOfSpaceStrategy myLackOfSpaceStrategy = LackOfSpaceStrategy.SIMPLE_RATIO;
+  private @NotNull LackOfSpaceStrategy myLackOfSpaceStrategy = LackOfSpaceStrategy.SIMPLE_RATIO;
 
   public enum DividerPositionStrategy {
     KEEP_PROPORTION, //default
     KEEP_FIRST_SIZE,
-    KEEP_SECOND_SIZE
+    KEEP_SECOND_SIZE,
+    DISTRIBUTE
   }
-  @NotNull
-  private DividerPositionStrategy myDividerPositionStrategy = DividerPositionStrategy.KEEP_PROPORTION;
+  private @NotNull DividerPositionStrategy myDividerPositionStrategy = DividerPositionStrategy.KEEP_PROPORTION;
 
 
   /**
-   * Creates horizontal split (with components which are side by side) with proportion equals to .5f
+   * Creates a horizontal split (with components that are side by side),
+   * both components get the same proportion of the available space.
    */
   public Splitter() {
     this(false);
   }
 
   /**
-   * Creates split with specified orientation and proportion equals to .5f
+   * Creates a split with the specified orientation,
+   * both components get the same proportion of the available space.
+   * The proportion may later be changed arbitrarily between 0.0 and 1.0.
    *
-   * @param vertical If true, components are displayed above one another. If false, components are displayed side by side.
+   * @param vertical If {@code true}, the components are displayed above one another.
+   *                 If {@code false}, the components are displayed side by side.
    */
   public Splitter(boolean vertical) {
-    this(vertical, .5f);
+    this(vertical, 0.5f);
   }
 
   /**
-   * Creates split with specified orientation and proportion.
+   * Creates a split with the specified orientation and initial proportion.
+   * The proportion may later be changed arbitrarily between 0.0 and 1.0.
    *
-   * @param vertical If true, components are displayed above one another. If false, components are displayed side by side.
-   * @param proportion The initial proportion of the splitter (between 0.0f and 1.0f).
+   * @param vertical If {@code true}, the components are displayed above one another.
+   *                 If {@code false}, the components are displayed side by side.
+   * @param proportion The initial proportion of the splitter, between 0.0 and 1.0.
    */
   public Splitter(boolean vertical, float proportion) {
     this(vertical, proportion, 0.0f, 1.0f);
   }
 
+  /**
+   * Creates a split with the specified orientation and proportion.
+   *
+   * @param vertical If {@code true}, the components are displayed above one another.
+   *                 If {@code false}, the components are displayed side by side.
+   * @param proportion The initial proportion of the splitter, between 0.0 and 1.0.
+   */
   public Splitter(boolean vertical, float proportion, float minProp, float maxProp) {
     myMinProp = minProp;
     myMaxProp = maxProp;
@@ -116,8 +128,6 @@ public class Splitter extends JPanel implements Splittable {
     setProportion(proportion);
     myDividerWidth = 7;
     super.add(myDivider);
-    myFocusWatcher = new FocusWatcher();
-    myFocusWatcher.install(this);
     setOpaque(false);
   }
 
@@ -159,6 +169,14 @@ public class Splitter extends JPanel implements Splittable {
     return myHonorPreferredSize;
   }
 
+  public boolean isUseViewportViewSizes() {
+    return myUseViewportViewSizes;
+  }
+
+  public void setUseViewportViewSizes(boolean useViewportViewSizes) {
+    myUseViewportViewSizes = useViewportViewSizes;
+  }
+
   public void setHonorComponentsPreferredSize(boolean honorPreferredSize) {
     myHonorPreferredSize = honorPreferredSize;
   }
@@ -166,16 +184,14 @@ public class Splitter extends JPanel implements Splittable {
   public void setLackOfSpaceStrategy(@NotNull LackOfSpaceStrategy strategy) {
     myLackOfSpaceStrategy = strategy;
   }
-  @NotNull
-  public LackOfSpaceStrategy getLackOfSpaceStrategy() {
+  public @NotNull LackOfSpaceStrategy getLackOfSpaceStrategy() {
     return myLackOfSpaceStrategy;
   }
   public void setDividerPositionStrategy(@NotNull DividerPositionStrategy dividerPositionStrategy) {
     myDividerPositionStrategy = dividerPositionStrategy;
   }
 
-  @NotNull
-  public DividerPositionStrategy getDividerPositionStrategy() {
+  public @NotNull DividerPositionStrategy getDividerPositionStrategy() {
     return myDividerPositionStrategy;
   }
 
@@ -190,9 +206,8 @@ public class Splitter extends JPanel implements Splittable {
     final int childCount = getComponentCount();
     LOG.assertTrue(childCount >= 1);
     if (childCount > 3) {
-      throw new IllegalStateException("" + childCount);
+      throw new IllegalStateException(String.valueOf(childCount));
     }
-    LOG.assertTrue(childCount <= 3);
     if (childCount == 1) {
       setFirstComponent((JComponent)comp);
     }
@@ -203,7 +218,6 @@ public class Splitter extends JPanel implements Splittable {
   }
 
   public void dispose() {
-    myFocusWatcher.deinstall(this);
   }
 
   protected Divider createDivider() {
@@ -218,6 +232,8 @@ public class Splitter extends JPanel implements Splittable {
 
   @Override
   public Dimension getMinimumSize() {
+    if (isMinimumSizeSet()) return super.getMinimumSize(); // do not violate Swing's contract
+
     final int dividerWidth = getDividerWidth();
     if (myFirstComponent != null && myFirstComponent.isVisible() && mySecondComponent != null && mySecondComponent.isVisible()) {
       final Dimension firstMinSize = myFirstComponent.getMinimumSize();
@@ -240,10 +256,20 @@ public class Splitter extends JPanel implements Splittable {
 
   @Override
   public Dimension getPreferredSize() {
+    if (isPreferredSizeSet()) return super.getPreferredSize(); // do not violate Swing's contract
+
     final int dividerWidth = getDividerWidth();
     if (myFirstComponent != null && myFirstComponent.isVisible() && mySecondComponent != null && mySecondComponent.isVisible()) {
-      final Dimension firstPrefSize = myFirstComponent.getPreferredSize();
-      final Dimension secondPrefSize = mySecondComponent.getPreferredSize();
+      final Dimension firstPrefSize = unwrap(myFirstComponent).getPreferredSize();
+      final Dimension secondPrefSize = unwrap(mySecondComponent).getPreferredSize();
+      if (myDividerPositionStrategy == DividerPositionStrategy.DISTRIBUTE) {
+        Dimension firstMinSize = unwrap(myFirstComponent).getMinimumSize();
+        Dimension secondMinSize = unwrap(mySecondComponent).getMinimumSize();
+        firstPrefSize.width = Math.max(firstMinSize.width, firstPrefSize.width);
+        firstPrefSize.height = Math.max(firstMinSize.height, firstPrefSize.height);
+        secondPrefSize.width = Math.max(secondMinSize.width, secondPrefSize.width);
+        secondPrefSize.height = Math.max(secondMinSize.height, secondPrefSize.height);
+      }
       return isVertical()
              ? new Dimension(Math.max(firstPrefSize.width, secondPrefSize.width),
                              firstPrefSize.height + dividerWidth + secondPrefSize.height)
@@ -267,20 +293,108 @@ public class Splitter extends JPanel implements Splittable {
 
   @Override
   public void reshape(int x, int y, int w, int h) {
-    if (myDividerPositionStrategy != DividerPositionStrategy.KEEP_PROPORTION
-        && !isNull(myFirstComponent) && myFirstComponent.isVisible()
-        && !isNull(mySecondComponent) && mySecondComponent.isVisible()
-        && ((myVerticalSplit && h > 2 * getDividerWidth()) || (!myVerticalSplit && w > 2 * getDividerWidth()))
-      && ((myVerticalSplit && h != getHeight()) || (!myVerticalSplit && w != getWidth()))) {
-      int total = myVerticalSplit ? h : w;
+    int total = myVerticalSplit ? h : w;
+    if (w > 0 && h > 0 && myDividerPositionStrategy != DividerPositionStrategy.KEEP_PROPORTION
+        && isComponentVisible(myFirstComponent) && isComponentVisible(mySecondComponent)
+        && total > 2 * getDividerWidth() && total != getDimension(getSize())) {
       if (myDividerPositionStrategy == DividerPositionStrategy.KEEP_FIRST_SIZE) {
-        myProportion = getProportionForFirstSize(myVerticalSplit ? myFirstComponent.getHeight() : myFirstComponent.getWidth(), total);
+        myProportion = getProportionForFirstSize((int)getDimension(myFirstComponent.getSize()), total);
       }
       else if (myDividerPositionStrategy == DividerPositionStrategy.KEEP_SECOND_SIZE) {
-        myProportion = getProportionForSecondSize(myVerticalSplit ? mySecondComponent.getHeight() : mySecondComponent.getWidth(), total);
+        myProportion = getProportionForSecondSize((int)getDimension(mySecondComponent.getSize()), total);
+      }
+      else if (myDividerPositionStrategy == DividerPositionStrategy.DISTRIBUTE) {
+        if (myLagProportion == null) myLagProportion = myProportion;
+        Component first = unwrap(myFirstComponent);
+        Component second = unwrap(mySecondComponent);
+        myProportion = getDistributeSizeChange(
+          (int)getDimension(myFirstComponent.getSize()),
+          (int)getDimension(first.getMinimumSize()),
+          (int)getDimension(first.getPreferredSize()),
+          (int)getDimension(first.getMaximumSize()),
+          (int)getDimension(mySecondComponent.getSize()),
+          (int)getDimension(second.getMinimumSize()),
+          (int)getDimension(second.getPreferredSize()),
+          (int)getDimension(second.getMaximumSize()),
+          total - getDividerWidth(),
+          myLagProportion,
+          myLackOfSpaceStrategy == LackOfSpaceStrategy.SIMPLE_RATIO ? null :
+          myLackOfSpaceStrategy == LackOfSpaceStrategy.HONOR_THE_SECOND_MIN_SIZE);
       }
     }
     super.reshape(x, y, w, h);
+  }
+
+  private static boolean isComponentVisible(JComponent component) {
+    return !NullableComponent.Check.isNull(component) && component.isVisible() && !component.getBounds().isEmpty();
+  }
+
+  private static float getDistributeSizeChange(int size1, int mSize1, int pSize1, int mxSize1,
+                                               int size2, int mSize2, int pSize2, int mxSize2,
+                                               int totalSize, float oldProportion,
+                                               @Nullable Boolean stretchFirst) {
+    //clamp
+    mSize1 = Math.min(mSize1, mxSize1);
+    mSize2 = Math.min(mSize2, mxSize2);
+    pSize1 = MathUtil.clamp(pSize1, mSize1, mxSize1);
+    pSize2 = MathUtil.clamp(pSize2, mSize2, mxSize2);
+    int delta = totalSize - (size1 + size2);
+
+    int[] size = {size1, size2};
+    if (delta >= 0) {
+      delta = stretchTo(size, mSize1, mSize2, delta, oldProportion);
+      delta = stretchTo(size, pSize1, pSize2, delta, oldProportion);
+      delta = stretchTo(size, mxSize1, mxSize2, delta, oldProportion);
+    }
+    else {
+      delta = stretchTo(size, mxSize1, mxSize2, delta, oldProportion);
+      delta = stretchTo(size, pSize1, pSize2, delta, oldProportion);
+      delta = stretchTo(size, mSize1, mSize2, delta, oldProportion);
+    }
+    if (delta != 0) {
+      if (stretchFirst == null) {
+        int p0 = computePortion(size, delta, oldProportion);
+        size[0] += p0;
+        size[1] += delta - p0;
+      }
+      else {
+        size[stretchFirst ? 0 : 1] += delta;
+      }
+    }
+    return (float)size[0] / totalSize;
+  }
+
+  private static int stretchTo(int[] size, int tgt0, int tgt1, int delta, double oldProportion) {
+    int d0 = tgt0 - size[0];
+    if ((d0 >= 0) != (delta >= 0)) d0 = 0;
+    int d1 = tgt1 - size[1];
+    if ((d1 >= 0) != (delta >= 0)) d1 = 0;
+    if (abs(d0 + d1) > abs(delta)) {
+      int p0 = computePortion(size, delta, oldProportion);
+      int p1 = delta - p0;
+      if (abs(p0) > abs(d0)) {
+        p0 = d0;
+        p1 = delta - d0;
+      }
+      else if (abs(p1) > abs(d1)) {
+        p0 = delta - d1;
+        p1 = d1;
+      }
+      size[0] += p0;
+      size[1] += p1;
+      return 0;
+    }
+    else {
+      size[0] += d0;
+      size[1] += d1;
+      return delta - (d0 + d1);
+    }
+  }
+
+  private static int computePortion(int[] size, int delta, double oldProportion) {
+    int offset = (int)Math.round((size[0] + size[1] + delta) * oldProportion - size[0]);
+    if ((offset < 0) != (delta < 0)) return 0;
+    return abs(offset) > abs(delta) ? delta : offset;
   }
 
   @ApiStatus.Internal
@@ -312,13 +426,14 @@ public class Splitter extends JPanel implements Splittable {
       mySkipNextLayout = false;
       return;
     }
-    int width = getWidth();
-    int height = getHeight();
+    var insets = getInsets();
+    int width = getWidth() - insets.left - insets.right;
+    int height = getHeight() - insets.top - insets.bottom;
 
     int total = isVertical() ? height : width;
     if (total <= 0) return;
 
-    if (!isNull(myFirstComponent) && myFirstComponent.isVisible() && !isNull(mySecondComponent) && mySecondComponent.isVisible()) {
+    if (!NullableComponent.Check.isNull(myFirstComponent) && myFirstComponent.isVisible() && !NullableComponent.Check.isNull(mySecondComponent) && mySecondComponent.isVisible()) {
       // both first and second components are visible
       Rectangle firstRect = new Rectangle();
       Rectangle dividerRect = new Rectangle();
@@ -332,58 +447,21 @@ public class Splitter extends JPanel implements Splittable {
         d = total;
       }
       else {
-        size1 = myProportion * (total - d);
-        double size2 = total - size1 - d;
-
-        if (isHonorMinimumSize()) {
-
-          double mSize1 = isVertical() ? myFirstComponent.getMinimumSize().getHeight() : myFirstComponent.getMinimumSize().getWidth();
-          double mSize2 = isVertical() ? mySecondComponent.getMinimumSize().getHeight() : mySecondComponent.getMinimumSize().getWidth();
-          double pSize1 = isVertical() ? myFirstComponent.getPreferredSize().getHeight() : myFirstComponent.getPreferredSize().getWidth();
-          double pSize2 = isVertical() ? mySecondComponent.getPreferredSize().getHeight() : mySecondComponent.getPreferredSize().getWidth();
-          if (myHonorPreferredSize && size1 + size2 > pSize1 + pSize2) {
-            mSize1 = pSize1;
-            mSize2 = pSize2;
-          }
-
-          if (size1 + size2 < mSize1 + mSize2) {
-            switch (myLackOfSpaceStrategy) {
-              case SIMPLE_RATIO:
-                double proportion = mSize1 / (mSize1 + mSize2);
-                size1 = proportion * total;
-                break;
-              case HONOR_THE_FIRST_MIN_SIZE:
-                size1 = mSize1;
-                break;
-              case HONOR_THE_SECOND_MIN_SIZE:
-                size1 = total - mSize2 - d;
-                break;
-            }
-          }
-          else {
-            if (size1 < mSize1) {
-              size1 = mSize1;
-            }
-            else if (size2 < mSize2) {
-              size2 = mSize2;
-              size1 = total - size2 - d;
-            }
-          }
-        }
+        size1 = computeFirstComponentSize(total - d);
       }
 
       int iSize1 = Math.max(0, (int)Math.round(size1));
       int iSize2 = Math.max(0, total - iSize1 - d);
 
       if (isVertical()) {
-        firstRect.setBounds(0, 0, width, iSize1);
-        dividerRect.setBounds(0, iSize1, width, d);
-        secondRect.setBounds(0, iSize1 + d, width, iSize2);
+        firstRect.setBounds(insets.left, insets.top, width, iSize1);
+        dividerRect.setBounds(insets.left, insets.top + iSize1, width, d);
+        secondRect.setBounds(insets.left, insets.top + iSize1 + d, width, iSize2);
       }
       else {
-        firstRect.setBounds(0, 0, iSize1, height);
-        dividerRect.setBounds(iSize1, 0, d, height);
-        secondRect.setBounds((iSize1 + d), 0, iSize2, height);
+        firstRect.setBounds(insets.left, insets.top, iSize1, height);
+        dividerRect.setBounds(insets.left + iSize1, insets.top, d, height);
+        secondRect.setBounds((insets.left + iSize1 + d), insets.top, iSize2, height);
       }
       myDivider.setVisible(true);
       myFirstComponent.setBounds(firstRect);
@@ -392,29 +470,29 @@ public class Splitter extends JPanel implements Splittable {
       //myFirstComponent.revalidate();
       //mySecondComponent.revalidate();
     }
-    else if (!isNull(myFirstComponent) && myFirstComponent.isVisible()) { // only first component is visible
+    else if (!NullableComponent.Check.isNull(myFirstComponent) && myFirstComponent.isVisible()) { // only first component is visible
       hideNull(mySecondComponent);
       myDivider.setVisible(false);
-      myFirstComponent.setBounds(0, 0, width, height);
+      myFirstComponent.setBounds(insets.left, insets.top, width, height);
       //myFirstComponent.revalidate();
     }
-    else if (!isNull(mySecondComponent) && mySecondComponent.isVisible()) { // only second component is visible
+    else if (!NullableComponent.Check.isNull(mySecondComponent) && mySecondComponent.isVisible()) { // only second component is visible
       hideNull(myFirstComponent);
       myDivider.setVisible(false);
-      mySecondComponent.setBounds(0, 0, width, height);
+      mySecondComponent.setBounds(insets.left, insets.top, width, height);
       //mySecondComponent.revalidate();
     }
     else { // both components are null or invisible
       myDivider.setVisible(false);
       if (myFirstComponent != null) {
-        myFirstComponent.setBounds(0, 0, 0, 0);
+        myFirstComponent.setBounds(insets.left, insets.top, 0, 0);
         //myFirstComponent.revalidate();
       }
       else {
         hideNull(myFirstComponent);
       }
       if (mySecondComponent != null) {
-        mySecondComponent.setBounds(0, 0, 0, 0);
+        mySecondComponent.setBounds(insets.left, insets.top, 0, 0);
         //mySecondComponent.revalidate();
       }
       else {
@@ -424,11 +502,48 @@ public class Splitter extends JPanel implements Splittable {
     //myDivider.revalidate();
   }
 
-  static boolean isNull(Component component) {
-    return NullableComponent.Check.isNull(component);
+  private double computeFirstComponentSize(int total) {
+    double size1 = myProportion * total;
+    double size2 = total - size1;
+
+    if (!isHonorMinimumSize()) {
+      return size1;
+    }
+    double mSize1 = getDimension(myFirstComponent.getMinimumSize());
+    double mSize2 = getDimension(mySecondComponent.getMinimumSize());
+    if (myHonorPreferredSize && size1 > mSize1 && size2 > mSize2) {
+      mSize1 = getDimension(myFirstComponent.getPreferredSize());
+      mSize2 = getDimension(mySecondComponent.getPreferredSize());
+    }
+
+    if (total < mSize1 + mSize2) {
+      size1 = switch (myLackOfSpaceStrategy) {
+        case SIMPLE_RATIO -> {
+          double proportion = mSize1 / (mSize1 + mSize2);
+          yield proportion * total;
+        }
+        case HONOR_THE_FIRST_MIN_SIZE -> mSize1;
+        case HONOR_THE_SECOND_MIN_SIZE -> total - mSize2;
+      };
+    }
+    else {
+      if (size1 < mSize1) {
+        size1 = mSize1;
+      }
+      else if (size2 < mSize2) {
+        size2 = mSize2;
+        size1 = total - size2;
+      }
+    }
+    return size1;
   }
 
-  static void hideNull(Component component) {
+  private double getDimension(Dimension size) {
+    return isVertical() ? size.getHeight() : size.getWidth();
+  }
+
+  @ApiStatus.Internal
+  public static void hideNull(Component component) {
     if (component instanceof NullableComponent) {
       if (!component.getBounds().equals(myNullBounds)) {
         component.setBounds(myNullBounds);
@@ -456,26 +571,41 @@ public class Splitter extends JPanel implements Splittable {
     return myProportion;
   }
 
+  public float getMinimumProportion() {
+    return myMinProp;
+  }
+
+  public float getMaximumProportion() {
+    return myMaxProp;
+  }
+
+  public void setDefaultProportion() {
+    Component first = unwrap(myFirstComponent);
+    Component second = unwrap(mySecondComponent);
+    if (first != null && second != null) {
+      double p1 = Math.max(getDimension(first.getPreferredSize()), getDimension(first.getMinimumSize()));
+      double p2 = Math.max(getDimension(second.getPreferredSize()), getDimension(second.getMinimumSize()));
+      setProportion((float)(p1 / (p1 + p2)));
+    }
+  }
+
   @Override
   public void setProportion(float proportion) {
+    myLagProportion = null;
     if (myProportion == proportion) {
       return;
     }
     if (proportion < .0f || proportion > 1.0f) {
-      throw new IllegalArgumentException("Wrong proportion: " + proportion);
+      LOG.warn("Wrong proportion: " + proportion);
     }
-    if (proportion < myMinProp) proportion = myMinProp;
-    if (proportion > myMaxProp) proportion = myMaxProp;
+    proportion = MathUtil.clamp(proportion, myMinProp, myMaxProp);
     float oldProportion = myProportion;
     myProportion = proportion;
-    firePropertyChange(PROP_PROPORTION, new Float(oldProportion), new Float(myProportion));
+    firePropertyChange(PROP_PROPORTION, Float.valueOf(oldProportion), Float.valueOf(myProportion));
     revalidate();
     repaint();
   }
 
-  /**
-   * Swaps components.
-   */
   public void swapComponents() {
     JComponent tmp = myFirstComponent;
     myFirstComponent = mySecondComponent;
@@ -485,7 +615,8 @@ public class Splitter extends JPanel implements Splittable {
   }
 
   /**
-   * @return {@code true} if splitter has vertical orientation, {@code false} otherwise
+   * @return {@code true} if the components are displayed above one another,
+   * {@code false} if the components are displayed side by side
    */
   @Override
   public boolean getOrientation() {
@@ -493,14 +624,16 @@ public class Splitter extends JPanel implements Splittable {
   }
 
   /**
-   * @return true if |-|
+   * @return {@code true} if the components are displayed above one another,
+   * {@code false} if the components are displayed side by side
    */
   public boolean isVertical() {
     return myVerticalSplit;
   }
 
   /**
-   * @param verticalSplit {@code true} means that splitter will have vertical split
+   * @param verticalSplit if {@code true}, the components are displayed above one another;
+   *                      if {@code false}, the components are displayed side by side.
    */
   @Override
   public void setOrientation(boolean verticalSplit) {
@@ -517,8 +650,8 @@ public class Splitter extends JPanel implements Splittable {
   }
 
   /**
-   * Sets component which is located as the "first" split area. The method doesn't validate and
-   * repaint the splitter if there is one already.
+   * Sets the component which is located as the "first" split area.
+   * If the given component is the current one, the method neither validates nor repaints the splitter.
    */
   public void setFirstComponent(@Nullable JComponent component) {
     if (myFirstComponent != component) {
@@ -546,8 +679,8 @@ public class Splitter extends JPanel implements Splittable {
   }
 
   /**
-   * Sets component which is located as the "second" split area. The method doesn't validate and
-   * repaint the splitter.
+   * Sets the component which is located as the "second" split area.
+   * If the given component is the current one, the method neither validates nor repaints the splitter.
    */
   public void setSecondComponent(@Nullable JComponent component) {
     if (mySecondComponent != component) {
@@ -565,24 +698,36 @@ public class Splitter extends JPanel implements Splittable {
 
   @Override
   public float getMinProportion(boolean first) {
-    JComponent component = first? myFirstComponent : mySecondComponent;
+    Component component = first ? myFirstComponent : mySecondComponent;
+    Component other = first ? mySecondComponent : myFirstComponent;
     if (isHonorMinimumSize()) {
-      if (component != null && myFirstComponent != null && myFirstComponent.isVisible() && mySecondComponent != null &&
-          mySecondComponent.isVisible()) {
-        if (isVertical()) {
-          return (float)component.getMinimumSize().height / (float)(getHeight() - getDividerWidth());
-        }
-        else {
-          return (float)component.getMinimumSize().width / (float)(getWidth() - getDividerWidth());
-        }
+      boolean bothVisible = component != null && component.isVisible()
+                            && other != null && other.isVisible();
+      if (bothVisible) {
+        double size = getDimension(component.getSize());
+        component = unwrap(component);
+        other = unwrap(other);
+        double min = getDimension(component.getMinimumSize());
+        double oMax = getDimension(other.getMaximumSize());
+        double total = getDimension(getSize()) - getDividerWidth();
+        double oMaxP = (total - oMax) / total;
+        double minP = size < min ? 0 : min / total;
+        return (float)Math.max(oMaxP, minP);
       }
     }
     return 0.0f;
   }
 
-  @NotNull
+  private Component unwrap(Component c) {
+    if (!myUseViewportViewSizes) return c;
+    JScrollPane scrollPane = ObjectUtils.tryCast(c, JScrollPane.class);
+    JViewport viewport = scrollPane == null ? null : scrollPane.getViewport();
+    Component view = viewport == null ? null : viewport.getView();
+    return view == null ? c : view;
+  }
+
   @Override
-  public Component asComponent() {
+  public @NotNull Component asComponent() {
     return this;
   }
 
@@ -605,7 +750,7 @@ public class Splitter extends JPanel implements Splittable {
       myResizeEnabled = true;
       mySwitchOrientationEnabled = false;
       setFocusable(false);
-      enableEvents(MouseEvent.MOUSE_EVENT_MASK | MouseEvent.MOUSE_MOTION_EVENT_MASK);
+      enableEvents(AWTEvent.MOUSE_EVENT_MASK | AWTEvent.MOUSE_MOTION_EVENT_MASK);
       //setOpaque(false);
       setOrientation(myVerticalSplit);
     }
@@ -621,10 +766,6 @@ public class Splitter extends JPanel implements Splittable {
       if (!myShowDividerControls && !myShowDividerIcon) {
         return;
       }
-
-      Icon glueIcon = isVerticalSplit ? SplitGlueV : SplitGlueH;
-      add(new JLabel(glueIcon), new GridBagConstraints(0, 0, 1, 1, 0, 0, GridBagConstraints.CENTER, GridBagConstraints.NONE,
-                                                       JBUI.emptyInsets(), 0, 0));
 
       revalidate();
       repaint();
@@ -687,6 +828,11 @@ public class Splitter extends JPanel implements Splittable {
     @Override
     public void setSwitchOrientationEnabled(boolean switchOrientationEnabled) {
       mySwitchOrientationEnabled = switchOrientationEnabled;
+    }
+
+    @Override
+    protected Graphics getComponentGraphics(Graphics g) {
+      return JBSwingUtilities.runGlobalCGTransform(this, super.getComponentGraphics(g));
     }
   }
 }
