@@ -1,18 +1,4 @@
-/*
- * Copyright 2000-2014 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.lang.ant.dom;
 
 import com.intellij.codeInsight.lookup.AutoCompletionPolicy;
@@ -33,6 +19,7 @@ import com.intellij.refactoring.rename.BindablePsiReference;
 import com.intellij.util.ArrayUtil;
 import com.intellij.util.IncorrectOperationException;
 import com.intellij.util.containers.ArrayListSet;
+import com.intellij.util.containers.ContainerUtil;
 import com.intellij.util.text.StringTokenizer;
 import com.intellij.util.xml.DomElement;
 import com.intellij.util.xml.DomTarget;
@@ -40,7 +27,11 @@ import com.intellij.util.xml.DomUtil;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 
 /**
 * @author Eugene Zhuravlev
@@ -117,8 +108,7 @@ class AntDomTargetReference extends AntDomReferenceBase implements BindablePsiRe
     return getElement();
   }
 
-  @Nullable
-  private AntDomElement getHostingAntDomElement() {
+  private @Nullable AntDomElement getHostingAntDomElement() {
     final DomElement selfElement = DomUtil.getDomElement(getElement());
     if (selfElement == null) {
       return null;
@@ -146,8 +136,7 @@ class AntDomTargetReference extends AntDomReferenceBase implements BindablePsiRe
     return ArrayUtil.toObjectArray(resVariants);
   }
 
-  @Nullable
-  private TargetResolver.Result doResolve(@Nullable final String referenceText) {
+  private @Nullable TargetResolver.Result doResolve(final @Nullable String referenceText) {
     final AntDomElement hostingElement = getHostingAntDomElement();
     if (hostingElement == null) {
       return null;
@@ -166,7 +155,7 @@ class AntDomTargetReference extends AntDomReferenceBase implements BindablePsiRe
     if (projectToSearchFrom == null) {
       return null;
     }
-    return TargetResolver.resolve(projectToSearchFrom, contextTarget, referenceText == null ? Collections.emptyList() : Collections.singletonList(referenceText));
+    return TargetResolver.resolve(projectToSearchFrom, contextTarget, ContainerUtil.createMaybeSingletonList(referenceText));
   }
 
   private Set<String> getExistingNames() {
@@ -229,7 +218,7 @@ class AntDomTargetReference extends AntDomReferenceBase implements BindablePsiRe
         else if (r.equals(ref)) {
           final TextRange range = r.getRangeInElement();
           final int oldLength = range.getLength();
-          lengthDelta = new Integer(newText.length() - oldLength);
+          lengthDelta = Integer.valueOf(newText.length() - oldLength);
           r.setRangeInElement(range.grown(lengthDelta));
         }
       }
