@@ -1,4 +1,4 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package org.jetbrains.idea.devkit.dom.impl;
 
 import com.intellij.codeInsight.completion.CompletionConfidenceEP;
@@ -12,17 +12,25 @@ import com.intellij.openapi.project.Project;
 import com.intellij.openapi.util.NlsSafe;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.openapi.vfs.VirtualFile;
-import com.intellij.psi.*;
-import com.intellij.psi.search.*;
+import com.intellij.psi.JavaPsiFacade;
+import com.intellij.psi.PsiAnonymousClass;
+import com.intellij.psi.PsiClass;
+import com.intellij.psi.PsiMethod;
+import com.intellij.psi.PsiModifier;
+import com.intellij.psi.search.GlobalSearchScope;
+import com.intellij.psi.search.GlobalSearchScopesCore;
+import com.intellij.psi.search.ProjectScope;
+import com.intellij.psi.search.PsiSearchScopeUtil;
+import com.intellij.psi.search.SearchScope;
 import com.intellij.psi.search.searches.ClassInheritorsSearch;
 import com.intellij.psi.util.CachedValueProvider.Result;
 import com.intellij.psi.util.CachedValuesManager;
 import com.intellij.psi.util.ProjectIconsAccessor;
-import com.intellij.psi.util.PsiModificationTracker;
 import com.intellij.psi.util.PsiTypesUtil;
+import com.intellij.uast.UastModificationTracker;
 import com.intellij.ui.IconManager;
-import com.intellij.util.NullableFunction;
 import com.intellij.util.ObjectUtils;
+import com.intellij.util.Processor;
 import com.intellij.util.SmartList;
 import com.intellij.util.containers.ContainerUtil;
 import com.intellij.util.ui.EmptyIcon;
@@ -31,18 +39,33 @@ import com.intellij.util.xml.DomJavaUtil;
 import com.intellij.util.xml.GenericAttributeValue;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
+import org.jetbrains.annotations.Unmodifiable;
 import org.jetbrains.idea.devkit.DevKitBundle;
 import org.jetbrains.idea.devkit.dom.Extension;
 import org.jetbrains.idea.devkit.dom.ExtensionPoint;
 import org.jetbrains.idea.devkit.util.PsiUtil;
-import org.jetbrains.uast.*;
+import org.jetbrains.uast.UAnonymousClass;
+import org.jetbrains.uast.UBlockExpression;
+import org.jetbrains.uast.UCallExpression;
+import org.jetbrains.uast.UClass;
+import org.jetbrains.uast.UExpression;
+import org.jetbrains.uast.UMethod;
+import org.jetbrains.uast.UObjectLiteralExpression;
+import org.jetbrains.uast.UastContextKt;
+import org.jetbrains.uast.UastUtils;
 
-import javax.swing.*;
-import java.util.*;
-import java.util.function.Function;
+import javax.swing.Icon;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Objects;
+import java.util.Set;
 import java.util.function.Supplier;
+import java.util.stream.StreamSupport;
 
-final class LanguageResolvingUtil {
+public final class LanguageResolvingUtil {
   private static final String ANY_LANGUAGE_DEFAULT_ID = Language.ANY.getID();
 
   static Collection<LanguageDefinition> getAllLanguageDefinitions(ConvertContext context) {
@@ -51,12 +74,55 @@ final class LanguageResolvingUtil {
     return languageDefinitions;
   }
 
-  private static List<LanguageDefinition> collectLanguageDefinitions(final ConvertContext context) {
-    final Project project = context.getProject();
-    final Collection<PsiClass> allLanguages =
+  static boolean processAllLanguageDefinitions(ConvertContext context, Processor<? super LanguageDefinition> processor) {
+    if (!processLanguageDefinitions(context, processor)) {
+      return false;
+    }
+    LanguageDefinition any = createAnyLanguageDefinition(context);
+    return any != null && processor.process(any);
+  }
+
+  private static boolean processLanguageDefinitions(ConvertContext context, Processor<? super LanguageDefinition> processor) {
+    Project project = context.getProject();
+    GlobalSearchScope projectProductionScope = GlobalSearchScopesCore.projectProductionScope(project);
+    GlobalSearchScope librariesScope = ProjectScope.getLibrariesScope(project);
+
+    // force finding inside IDEA project first
+    PsiClass languageClass = JavaPsiFacade.getInstance(project).findClass(Language.class.getName(), projectProductionScope);
+    if (languageClass == null) {
+      languageClass = JavaPsiFacade.getInstance(project).findClass(Language.class.getName(), librariesScope);
+    }
+    Iterable<PsiClass> allLanguages;
+    List<LanguageDefinition> libraryDefinitions;
+    if (languageClass == null) {
+      allLanguages = Collections.emptyList();
+      libraryDefinitions = Collections.emptyList();
+    }
+    else {
+      GlobalSearchScope allScope = projectProductionScope.union(librariesScope);
+      allLanguages = ClassInheritorsSearch.search(languageClass, allScope, true).asIterable();
+      libraryDefinitions = collectLibraryLanguages(context, allScope);
+    }
+
+    if (!ContainerUtil.process(libraryDefinitions, processor)) {
+      return false;
+    }
+    return
+      StreamSupport.stream(allLanguages.spliterator(), false)
+        .filter(aClass -> PsiSearchScopeUtil.isInScope(projectProductionScope, aClass))
+        .map(language -> getDefinition(language, libraryDefinitions))
+        .filter(Objects::nonNull)
+        .allMatch(processor::process);
+  }
+
+  private static List<LanguageDefinition> collectLanguageDefinitions(ConvertContext context) {
+    Project project = context.getProject();
+    Collection<PsiClass> allLanguages =
       CachedValuesManager.getManager(project).getCachedValue(project, () -> {
-        final GlobalSearchScope projectProductionScope = GlobalSearchScopesCore.projectProductionScope(project);
-        final GlobalSearchScope librariesScope = ProjectScope.getLibrariesScope(project);
+
+        GlobalSearchScope projectProductionScope = GlobalSearchScopesCore.projectProductionScope(project);
+        GlobalSearchScope librariesScope = ProjectScope.getLibrariesScope(project);
+        GlobalSearchScope allScope = projectProductionScope.union(librariesScope);
 
         // force finding inside IDEA project first
         PsiClass languageClass = JavaPsiFacade.getInstance(project).findClass(Language.class.getName(), projectProductionScope);
@@ -64,82 +130,88 @@ final class LanguageResolvingUtil {
           languageClass = JavaPsiFacade.getInstance(project).findClass(Language.class.getName(), librariesScope);
         }
         if (languageClass == null) {
-          return Result.create(Collections.emptyList(), PsiModificationTracker.MODIFICATION_COUNT);
+          return Result.create(Collections.emptyList(), UastModificationTracker.getInstance(project));
         }
 
-        GlobalSearchScope allScope = projectProductionScope.union(ProjectScope.getLibrariesScope(project));
         Collection<PsiClass> allInheritors = new HashSet<>(ClassInheritorsSearch.search(languageClass, allScope, true).findAll());
-        return Result.create(allInheritors, PsiModificationTracker.MODIFICATION_COUNT);
+        return Result.create(allInheritors, UastModificationTracker.getInstance(project));
       });
     if (allLanguages.isEmpty()) {
       return new SmartList<>();
     }
 
-    final List<LanguageDefinition> libraryDefinitions = collectLibraryLanguages(context, allLanguages);
+    GlobalSearchScope projectProductionScope = GlobalSearchScopesCore.projectProductionScope(project);
+    GlobalSearchScope librariesScope = ProjectScope.getLibrariesScope(project);
+    GlobalSearchScope allScope = projectProductionScope.union(librariesScope);
 
-    final GlobalSearchScope projectProductionScope = GlobalSearchScopesCore.projectProductionScope(project);
-    final Collection<PsiClass> projectLanguages =
+    List<LanguageDefinition> libraryDefinitions = collectLibraryLanguages(context, allScope);
+
+    Collection<PsiClass> projectLanguages =
       ContainerUtil.filter(allLanguages, aClass -> PsiSearchScopeUtil.isInScope(projectProductionScope, aClass));
-    final List<LanguageDefinition> projectDefinitions = collectProjectLanguages(projectLanguages, libraryDefinitions);
+    List<LanguageDefinition> projectDefinitions = mapToProjectDefinitions(projectLanguages, libraryDefinitions);
 
-    final List<LanguageDefinition> all = new ArrayList<>(libraryDefinitions);
+    List<LanguageDefinition> all = new ArrayList<>(libraryDefinitions);
     all.addAll(projectDefinitions);
     return all;
   }
 
-  private static List<LanguageDefinition> collectLibraryLanguages(final ConvertContext context,
-                                                                  final Collection<PsiClass> allLanguages) {
-    return ContainerUtil.mapNotNull(Language.getRegisteredLanguages(), (NullableFunction<Language, LanguageDefinition>)language -> {
-      if (language.getID().isEmpty()) {
-        return null;
+  private static @Unmodifiable List<LanguageDefinition> collectLibraryLanguages(ConvertContext context, GlobalSearchScope scope) {
+    return ContainerUtil.mapNotNull(Language.getRegisteredLanguages(), language -> getLibraryDefinition(context, language, scope));
+  }
+
+  private static @Nullable LanguageDefinition getLibraryDefinition(ConvertContext context,
+                                                                   Language language,
+                                                                   @NotNull GlobalSearchScope scope) {
+    if (language.getID().isEmpty()) {
+      return null;
+    }
+    PsiClass psiClass = DomJavaUtil.findClass(language.getClass().getName(), context.getInvocationElement(), true);
+    if (psiClass == null || !PsiSearchScopeUtil.isInScope(scope, psiClass)) {
+      return null;
+    }
+
+    return new LanguageDefinition(language.getID(), psiClass, () -> {
+      LanguageFileType type = language.getAssociatedFileType();
+      return type == null ? null : type.getIcon();
+    }, () -> language.getDisplayName());
+  }
+
+  private static @Unmodifiable List<LanguageDefinition> mapToProjectDefinitions(Collection<? extends PsiClass> projectLanguages,
+                                                                                List<? extends LanguageDefinition> libraryDefinitions) {
+    return ContainerUtil.mapNotNull(projectLanguages, language -> getDefinition(language, libraryDefinitions));
+  }
+
+  private static LanguageDefinition getDefinition(@NotNull PsiClass language, List<? extends LanguageDefinition> libraryLanguages) {
+    if (language.hasModifierProperty(PsiModifier.ABSTRACT)) {
+      return null;
+    }
+
+    if (ContainerUtil.exists(libraryLanguages, definition -> definition.clazz.equals(language))) {
+      return null;
+    }
+
+    return CachedValuesManager.getCachedValue(language, () -> {
+      String languageId = computeConstantSuperCtorCallParameter(language, 0);
+      if (languageId == null) {
+        languageId = computeConstantSuperCtorCallParameter(language, 1);
       }
-      final PsiClass psiClass = DomJavaUtil.findClass(language.getClass().getName(), context.getInvocationElement(), true);
-      if (psiClass == null || !allLanguages.contains(psiClass)) {
-        return null;
+      if (languageId == null) {
+        languageId = computeConstantReturnValue(language, "getID");
+      }
+      if (StringUtil.isEmpty(languageId)) {
+        return Result.create(null, language);
       }
 
-      return new LanguageDefinition(language.getID(), psiClass, () -> {
-        final LanguageFileType type = language.getAssociatedFileType();
-        return type == null ? null : type.getIcon();
-      }, () -> language.getDisplayName());
+      LanguageDefinition definition =
+        new LanguageDefinition(languageId, language,
+                               () -> computeIconForProjectLanguage(language),
+                               () -> computeConstantReturnValue(language, "getDisplayName"));
+
+      return Result.createSingleDependency(definition, language);
     });
   }
 
-  private static List<LanguageDefinition> collectProjectLanguages(final Collection<PsiClass> projectLanguages,
-                                                                  final List<LanguageDefinition> libraryLanguages) {
-    return ContainerUtil.mapNotNull(projectLanguages, (NullableFunction<PsiClass, LanguageDefinition>)language -> {
-      if (language.hasModifierProperty(PsiModifier.ABSTRACT)) {
-        return null;
-      }
-
-      if (ContainerUtil.exists(libraryLanguages, definition -> definition.clazz.equals(language))) {
-        return null;
-      }
-
-      return CachedValuesManager.getCachedValue(language, () -> {
-        String languageId = computeConstantSuperCtorCallParameter(language, 0);
-        if (languageId == null) {
-          languageId = computeConstantSuperCtorCallParameter(language, 1);
-        }
-        if (languageId == null) {
-          languageId = computeConstantReturnValue(language, "getID");
-        }
-        if (StringUtil.isEmpty(languageId)) {
-          return Result.create(null, language);
-        }
-
-        final LanguageDefinition definition =
-          new LanguageDefinition(languageId, language,
-                                 () -> computeIconForProjectLanguage(language),
-                                 () -> computeConstantReturnValue(language, "getDisplayName"));
-
-        return Result.createSingleDependency(definition, language);
-      });
-    });
-  }
-
-  @Nullable
-  private static Icon computeIconForProjectLanguage(PsiClass language) {
+  private static @Nullable Icon computeIconForProjectLanguage(PsiClass language) {
     final Module module = ModuleUtilCore.findModuleForPsiElement(language);
     if (module == null) return null;
 
@@ -163,8 +235,7 @@ final class LanguageResolvingUtil {
    * - matching LFT in current module
    * - matching LFT in resolve scope
    */
-  @Nullable
-  private static PsiClass findLanguageFileType(PsiClass language, Module module, PsiClass languageFileType) {
+  private static @Nullable PsiClass findLanguageFileType(PsiClass language, Module module, PsiClass languageFileType) {
     final UExpression associatedFileTypeExpression = getReturnExpression(language, "getAssociatedFileType");
     if (associatedFileTypeExpression != null) {
       return PsiTypesUtil.getPsiClass(associatedFileTypeExpression.getExpressionType());
@@ -177,10 +248,9 @@ final class LanguageResolvingUtil {
     return findMatchingFileType(languageFileType, language, language.getUseScope());
   }
 
-  @Nullable
-  private static PsiClass findMatchingFileType(PsiClass languageFileType,
-                                               PsiClass language,
-                                               SearchScope scope) {
+  private static @Nullable PsiClass findMatchingFileType(PsiClass languageFileType,
+                                                         PsiClass language,
+                                                         SearchScope scope) {
     return ClassInheritorsSearch.search(languageFileType, scope, true).filtering(psiClass -> {
       UClass uClass = UastContextKt.toUElement(psiClass, UClass.class);
       if (uClass == null) return false;
@@ -196,17 +266,15 @@ final class LanguageResolvingUtil {
     }).findFirst();
   }
 
-  @Nullable
-  private static String computeConstantReturnValue(PsiClass psiClass,
-                                                   String methodName) {
+  private static @Nullable String computeConstantReturnValue(PsiClass psiClass,
+                                                             String methodName) {
     final UExpression expression = getReturnExpression(psiClass, methodName);
     if (expression == null) return null;
 
     return UastUtils.evaluateString(expression);
   }
 
-  @Nullable
-  private static UExpression getReturnExpression(PsiClass psiClass, String methodName) {
+  private static @Nullable UExpression getReturnExpression(PsiClass psiClass, String methodName) {
     final PsiMethod[] methods = psiClass.findMethodsByName(methodName, false);
     if (methods.length != 1) {
       return null;
@@ -226,8 +294,7 @@ final class LanguageResolvingUtil {
     return getStringConstantExpression(methodCallExpression, index);
   }
 
-  @Nullable
-  private static UCallExpression getSuperConstructorParameterExpression(UClass languageClass) {
+  private static @Nullable UCallExpression getSuperConstructorParameterExpression(UClass languageClass) {
     UMethod defaultConstructor = ContainerUtil.find(languageClass.getMethods(),
                                                     method -> method.isConstructor() && method.getUastParameters().isEmpty());
     if (defaultConstructor == null) {
@@ -245,8 +312,7 @@ final class LanguageResolvingUtil {
     return ObjectUtils.tryCast(expression, UCallExpression.class);
   }
 
-  @Nullable
-  private static String getStringConstantExpression(@Nullable UCallExpression callExpression, int index) {
+  private static @Nullable String getStringConstantExpression(@Nullable UCallExpression callExpression, int index) {
     if (callExpression == null) {
       return null;
     }
@@ -257,8 +323,7 @@ final class LanguageResolvingUtil {
     return UastUtils.evaluateString(argument);
   }
 
-  @Nullable
-  private static LanguageDefinition createAnyLanguageDefinition(ConvertContext context) {
+  private static @Nullable LanguageDefinition createAnyLanguageDefinition(ConvertContext context) {
     final PsiClass languageClass = DomJavaUtil.findClass(Language.class.getName(), context.getInvocationElement());
     if (languageClass == null) return null;
 
@@ -268,8 +333,7 @@ final class LanguageResolvingUtil {
                                   () -> DevKitBundle.message("plugin.xml.convert.language.id.any.language.display.name"));
   }
 
-  private static final Set<String> EP_WITH_ANY_LANGUAGE_ID = Collections
-    .unmodifiableSet(new HashSet<>(Arrays.asList(CompletionContributorEP.class.getName(), CompletionConfidenceEP.class.getName())));
+  private static final Set<String> EP_WITH_ANY_LANGUAGE_ID = Set.of(CompletionContributorEP.class.getName(), CompletionConfidenceEP.class.getName());
 
   private static @NlsSafe String calculateAnyLanguageId(@NotNull ConvertContext context) {
     final Extension extension = context.getInvocationElement().getParentOfType(Extension.class, true);
@@ -281,8 +345,16 @@ final class LanguageResolvingUtil {
       return ANY_LANGUAGE_DEFAULT_ID;
     }
 
+    return getAnyLanguageValue(extensionPoint);
+  }
+
+  /**
+   * @return value for "any language" for given EP {@code language} declaration, with few exceptions it's always {@link Language#ANY} ID.
+   */
+  public static @NotNull String getAnyLanguageValue(ExtensionPoint extensionPoint) {
     final GenericAttributeValue<PsiClass> epBeanClass = extensionPoint.getBeanClass();
-    if (EP_WITH_ANY_LANGUAGE_ID.contains(epBeanClass.getStringValue())) {
+    String value = epBeanClass.getStringValue();
+    if (value != null && EP_WITH_ANY_LANGUAGE_ID.contains(value)) {
       return "any";
     }
 
@@ -304,8 +376,7 @@ final class LanguageResolvingUtil {
       this.type = clazz instanceof PsiAnonymousClass
                   ? ((PsiAnonymousClass)clazz).getBaseClassReference().getQualifiedName()
                   : clazz.getQualifiedName();
-      this.icon = IconManager.getInstance().createDeferredIcon(EmptyIcon.ICON_16, iconSupplier,
-                                                               (Function<Supplier<? extends Icon>, Icon>)supplier -> supplier.get());
+      this.icon = IconManager.getInstance().createDeferredIcon(EmptyIcon.ICON_16, iconSupplier, supplier -> supplier.get());
       this.displayName = displayName;
     }
 
