@@ -1,105 +1,204 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package org.jetbrains.plugins.gradle.service.execution;
 
+import com.intellij.build.events.MessageEvent;
+import com.intellij.build.events.impl.BuildIssueEventImpl;
 import com.intellij.execution.configurations.GeneralCommandLine;
+import com.intellij.execution.process.ProcessOutputType;
 import com.intellij.openapi.application.Application;
+import com.intellij.openapi.application.ApplicationInfo;
 import com.intellij.openapi.application.ApplicationManager;
-import com.intellij.openapi.application.PathManager;
 import com.intellij.openapi.application.ex.ApplicationInfoEx;
 import com.intellij.openapi.application.impl.ApplicationInfoImpl;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.externalSystem.model.ExternalSystemException;
 import com.intellij.openapi.externalSystem.model.task.ExternalSystemTaskId;
 import com.intellij.openapi.externalSystem.model.task.ExternalSystemTaskNotificationListener;
+import com.intellij.openapi.externalSystem.model.task.event.ExternalSystemBuildEvent;
+import com.intellij.openapi.externalSystem.service.execution.ExternalSystemExecutionAware;
+import com.intellij.openapi.externalSystem.service.execution.ExternalSystemJdkUtil;
 import com.intellij.openapi.externalSystem.service.execution.ExternalSystemRunConfiguration;
+import com.intellij.openapi.externalSystem.util.ExternalSystemTelemetryUtil;
 import com.intellij.openapi.externalSystem.util.OutputWrapper;
 import com.intellij.openapi.progress.ProcessCanceledException;
-import com.intellij.openapi.util.Couple;
-import com.intellij.openapi.util.io.FileUtil;
-import com.intellij.openapi.util.io.FileUtilRt;
-import com.intellij.openapi.util.io.StreamUtil;
+import com.intellij.openapi.util.Key;
 import com.intellij.openapi.util.text.StringUtil;
-import com.intellij.util.*;
+import com.intellij.util.ArrayUtil;
+import com.intellij.util.ArrayUtilRt;
+import com.intellij.util.ExceptionUtil;
+import com.intellij.util.Function;
+import com.intellij.util.ObjectUtils;
 import com.intellij.util.containers.ContainerUtil;
-import com.intellij.util.containers.MultiMap;
-import org.gradle.initialization.BuildLayoutParameters;
-import org.gradle.internal.nativeintegration.services.NativeServices;
-import org.gradle.process.internal.JvmOptions;
-import org.gradle.tooling.*;
+import com.intellij.util.lang.JavaVersion;
+import io.opentelemetry.api.trace.Span;
+import io.opentelemetry.api.trace.StatusCode;
+import io.opentelemetry.context.Scope;
+import org.gradle.tooling.BuildLauncher;
+import org.gradle.tooling.CancellationToken;
+import org.gradle.tooling.GradleConnector;
+import org.gradle.tooling.LongRunningOperation;
+import org.gradle.tooling.ModelBuilder;
+import org.gradle.tooling.ProgressListener;
+import org.gradle.tooling.ProjectConnection;
+import org.gradle.tooling.TestLauncher;
 import org.gradle.tooling.events.OperationType;
-import org.gradle.tooling.model.BuildIdentifier;
-import org.gradle.tooling.model.UnsupportedMethodException;
 import org.gradle.tooling.model.build.BuildEnvironment;
 import org.gradle.util.GradleVersion;
 import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
-import org.jetbrains.plugins.gradle.service.project.ProjectResolverContext;
-import org.jetbrains.plugins.gradle.settings.DistributionType;
+import org.jetbrains.annotations.VisibleForTesting;
+import org.jetbrains.plugins.gradle.connection.GradleConnectorService;
+import org.jetbrains.plugins.gradle.issue.DeprecatedGradleVersionIssue;
+import org.jetbrains.plugins.gradle.jvmcompat.GradleJvmSupportMatrix;
+import org.jetbrains.plugins.gradle.properties.GradlePropertiesFile;
+import org.jetbrains.plugins.gradle.service.execution.cmd.GradleCommandLineOptionsProvider;
+import org.jetbrains.plugins.gradle.service.project.GradleExecutionHelperExtension;
+import org.jetbrains.plugins.gradle.service.project.GradleProjectResolver;
 import org.jetbrains.plugins.gradle.settings.GradleExecutionSettings;
-import org.jetbrains.plugins.gradle.tooling.internal.init.Init;
+import org.jetbrains.plugins.gradle.util.GradleBundle;
 import org.jetbrains.plugins.gradle.util.GradleConstants;
-import org.jetbrains.plugins.gradle.util.GradleEnvironment;
-import org.jetbrains.plugins.gradle.util.GradleUtil;
+import org.jetbrains.plugins.gradle.util.cmd.node.GradleCommandLine;
+import org.jetbrains.plugins.gradle.util.cmd.node.GradleCommandLineTask;
 
-import java.io.*;
-import java.nio.charset.StandardCharsets;
-import java.util.*;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
-
-import static org.jetbrains.plugins.gradle.GradleConnectorService.withGradleConnection;
+import java.io.File;
+import java.io.InputStream;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
+import java.util.concurrent.CancellationException;
 
 /**
- * @author Denis Zhdanov
+ * This is the low-level Gradle execution API that connects and interacts with the Gradle daemon using the Gradle tooling API.
+ * <p>
+ * Consider using the high-level Gradle execution APIs instead:
+ * <ul>
+ * <li>{@link com.intellij.openapi.externalSystem.util.ExternalSystemUtil#runTask}</li>
+ * <li>{@link com.intellij.openapi.externalSystem.util.task.TaskExecutionUtil#runTask}</li>
+ * </ul>
+ *
+ * @see <a href="https://docs.gradle.org/current/userguide/tooling_api.html">Gradle tooling API</a>
  */
-public class GradleExecutionHelper {
+@ApiStatus.Internal
+public final class GradleExecutionHelper {
+
+  /**
+   * @deprecated Use helper methods without object instantiation.
+   * All methods in this class are static.
+   */
+  @Deprecated
+  public GradleExecutionHelper() { }
 
   private static final Logger LOG = Logger.getInstance(GradleExecutionHelper.class);
 
-  @NotNull
-  public <T> ModelBuilder<T> getModelBuilder(@NotNull Class<T> modelType,
-                                             @NotNull final ExternalSystemTaskId id,
-                                             @Nullable GradleExecutionSettings settings,
-                                             @NotNull ProjectConnection connection,
-                                             @NotNull ExternalSystemTaskNotificationListener listener) {
-    ModelBuilder<T> result = connection.model(modelType);
-    if (settings != null) {
-      prepare(result, id, settings, listener, connection);
-    }
-    return result;
+  // do not use
+  // this flag is used only for the situation where is not possible to execute a Gradle task in an appropriate way and we have to use
+  // the bundled JDK for the execution
+  public static final Key<Boolean> AUTO_JAVA_HOME = Key.create("AUTO_JAVA_HOME");
+
+  /**
+   * @deprecated use the {@link GradleExecutionHelper#execute} function with {@link GradleExecutionContext} instead.
+   * The {@link BuildEnvironment} model will be automatically provided to {@link GradleExecutionContext}.
+   */
+  @Deprecated
+  public static @NotNull BuildEnvironment getBuildEnvironment(
+    @NotNull ProjectConnection connection,
+    @NotNull ExternalSystemTaskId taskId,
+    @NotNull ExternalSystemTaskNotificationListener listener,
+    @Nullable CancellationToken cancellationToken,
+    @Nullable GradleExecutionSettings settings
+  ) {
+    GradleExecutionSettings effectiveSettings = ObjectUtils.notNull(settings, () ->
+      new GradleExecutionSettings()
+    );
+    CancellationToken effectiveCancellationToken = ObjectUtils.notNull(cancellationToken, () ->
+      GradleConnector.newCancellationTokenSource().token()
+    );
+    GradleExecutionContextImpl context = new GradleExecutionContextImpl(
+      "", taskId, effectiveSettings, listener, effectiveCancellationToken
+    );
+    return getBuildEnvironment(connection, context);
   }
 
-  @NotNull
-  public BuildLauncher getBuildLauncher(@NotNull final ExternalSystemTaskId id,
-                                        @NotNull ProjectConnection connection,
-                                        @Nullable GradleExecutionSettings settings,
-                                        @NotNull ExternalSystemTaskNotificationListener listener) {
-    BuildLauncher result = connection.newBuild();
-    if (settings != null) {
-      prepare(result, id, settings, listener, connection);
+  public static <Model> @NotNull Model getModel(
+    @NotNull ProjectConnection connection,
+    @NotNull GradleExecutionContext context,
+    @NotNull Class<Model> modelClass
+  ) {
+    Span span = ExternalSystemTelemetryUtil.getTracer(GradleConstants.SYSTEM_ID)
+      .spanBuilder("GetModel")
+      .setAttribute("modelClass", modelClass.getName())
+      .startSpan();
+    try (Scope ignore = span.makeCurrent()) {
+      ExternalSystemTaskId taskId = context.getTaskId();
+      ExternalSystemTaskNotificationListener listener = context.getListener();
+
+      ModelBuilder<Model> modelBuilder = connection.model(modelClass);
+
+      modelBuilder.withCancellationToken(context.getCancellationToken());
+
+      setupJavaHome(modelBuilder, context.getSettings(), taskId, listener, null);
+
+      // do not use connection.getModel methods since it doesn't allow to handle progress events
+      // and we can miss gradle tooling client side events like distribution download.
+      GradleProgressListener gradleProgressListener = new GradleProgressListener(listener, taskId, context.getProjectPath());
+      modelBuilder.addProgressListener((ProgressListener)gradleProgressListener);
+      modelBuilder.addProgressListener((org.gradle.tooling.events.ProgressListener)gradleProgressListener);
+      modelBuilder.setStandardOutput(new OutputWrapper(listener, taskId, true));
+      modelBuilder.setStandardError(new OutputWrapper(listener, taskId, false));
+
+      return modelBuilder.get();
     }
-    return result;
+    catch (CancellationException ce) {
+      throw ce;
+    }
+    catch (Exception ex) {
+      span.recordException(ex);
+      span.setStatus(StatusCode.ERROR);
+      throw new RuntimeException(String.format("Failed to obtain model %s from Gradle daemon.", modelClass.getSimpleName()), ex);
+    }
+    finally {
+      span.end();
+    }
   }
 
-  public <T> T execute(@NotNull String projectPath,
-                       @Nullable GradleExecutionSettings settings,
-                       @NotNull Function<? super ProjectConnection, ? extends T> f) {
+  /**
+   * @deprecated use the {@link GradleExecutionHelper#execute} function with {@link GradleExecutionContext} instead
+   */
+  @Deprecated
+  public <T> T execute(
+    @NotNull String projectPath,
+    @Nullable GradleExecutionSettings settings,
+    @NotNull Function<? super ProjectConnection, ? extends T> f
+  ) {
     return execute(projectPath, settings, null, null, null, f);
   }
 
-  public <T> T execute(@NotNull String projectPath,
-                       @Nullable GradleExecutionSettings settings,
-                       @Nullable ExternalSystemTaskId taskId,
-                       @Nullable ExternalSystemTaskNotificationListener listener,
-                       @Nullable CancellationTokenSource cancellationTokenSource,
-                       @NotNull Function<? super ProjectConnection, ? extends T> f) {
+  /**
+   * @deprecated use the {@link GradleExecutionHelper#execute} function with {@link GradleExecutionContext} instead
+   */
+  @Deprecated
+  public static <T> T execute(
+    @NotNull String projectPath,
+    @Nullable GradleExecutionSettings settings,
+    @Nullable ExternalSystemTaskId taskId,
+    @Nullable ExternalSystemTaskNotificationListener listener,
+    @Nullable CancellationToken cancellationToken,
+    @NotNull Function<? super ProjectConnection, ? extends T> f
+  ) {
     String projectDir;
+    //noinspection IO_FILE_USAGE
     File projectPathFile = new File(projectPath);
-    if (projectPathFile.isFile() && projectPath.endsWith(GradleConstants.EXTENSION) && projectPathFile.getParent() != null) {
+    if (Files.isRegularFile(Path.of(projectPath)) &&
+        projectPath.endsWith(GradleConstants.EXTENSION) &&
+        projectPathFile.getParent() != null) {
       projectDir = projectPathFile.getParent();
       if (settings != null) {
         List<String> arguments = settings.getArguments();
+        // Setting the custom build file location is deprecated since Gradle 7.6, see IDEA-359161 for more details.
         if (!arguments.contains("-b") && !arguments.contains("--build-file")) {
           settings.withArguments("-b", projectPath);
         }
@@ -108,265 +207,318 @@ public class GradleExecutionHelper {
     else {
       projectDir = projectPath;
     }
-    CancellationToken cancellationToken = cancellationTokenSource != null ? cancellationTokenSource.token() : null;
-    return withGradleConnection(
-      projectDir, taskId, settings, listener, cancellationToken,
-      connection -> {
-        String userDir = null;
-        if (!GradleEnvironment.ADJUST_USER_DIR) {
-          try {
-            userDir = System.getProperty("user.dir");
-            if (userDir != null) System.setProperty("user.dir", projectDir);
-          }
-          catch (Exception ignore) {
-          }
-        }
+    GradleConnectorService connectorService = GradleConnectorService.getInstance(projectDir, taskId);
+    return connectorService.withGradleConnection(projectDir, taskId, settings, listener, cancellationToken, connection -> {
+      try {
+        return SystemPropertiesAdjuster.executeAdjusted(projectDir, () -> f.fun(connection));
+      }
+      catch (ExternalSystemException | ProcessCanceledException e) {
+        throw e;
+      }
+      catch (Throwable e) {
+        LOG.warn("Gradle execution error", e);
+        Throwable rootCause = ExceptionUtil.getRootCause(e);
+        ExternalSystemException externalSystemException = new ExternalSystemException(ExceptionUtil.getMessage(rootCause), e);
+        externalSystemException.initCause(e);
+        throw externalSystemException;
+      }
+    });
+  }
 
+  public static <T> T execute(
+    @NotNull GradleExecutionContextImpl context,
+    @NotNull java.util.function.Function<? super ProjectConnection, ? extends T> action
+  ) {
+    return execute(
+      context.getProjectPath(), context.getSettings(), context.getTaskId(), context.getListener(), context.getCancellationToken(),
+      connection -> {
+        BuildEnvironment buildEnvironment = null;
         try {
-          return f.fun(connection);
+          buildEnvironment = getBuildEnvironment(connection, context);
+          context.setBuildEnvironment(buildEnvironment);
+          return action.apply(connection);
         }
-        catch (ExternalSystemException e) {
+        catch (CancellationException | ExternalSystemException e) {
           throw e;
         }
-        catch (ProcessCanceledException e) {
-          throw e;
-        }
-        catch (Throwable e) {
-          LOG.warn("Gradle execution error", e);
-          Throwable rootCause = ExceptionUtil.getRootCause(e);
-          ExternalSystemException externalSystemException =
-            new ExternalSystemException(ExceptionUtil.getMessage(rootCause), e);
-          externalSystemException.initCause(e);
-          throw externalSystemException;
-        }
-        finally {
-          if (userDir != null) {
-            // restore original user.dir property
-            System.setProperty("user.dir", userDir);
-          }
+        catch (Exception ex) {
+          throw GradleProjectResolver.createProjectResolverChain()
+            .getUserFriendlyError(buildEnvironment, ex, context.getProjectPath(), null);
         }
       });
   }
 
-  public void ensureInstalledWrapper(@NotNull ExternalSystemTaskId id,
-                                     @NotNull String projectPath,
-                                     @NotNull GradleExecutionSettings settings,
-                                     @NotNull ExternalSystemTaskNotificationListener listener,
-                                     @NotNull CancellationToken cancellationToken) {
-    ensureInstalledWrapper(id, projectPath, settings, null, listener, cancellationToken);
+  public static void prepareForExecution(
+    @NotNull LongRunningOperation operation,
+    @NotNull GradleExecutionContextImpl context
+  ) {
+    var effectiveContext = new GradleExecutionContextImpl(context);
+
+    var id = effectiveContext.getTaskId();
+    var settings = effectiveContext.getSettings();
+    var listener = effectiveContext.getListener();
+    var buildEnvironment = effectiveContext.getBuildEnvironment();
+
+    applyIdeaParameters(settings);
+
+    setupLogging(settings, buildEnvironment);
+
+    GradleExecutionHelperExtension.EP_NAME.forEachExtensionSafe(proc -> {
+      proc.configureSettings(settings, effectiveContext);
+    });
+
+    clearSystemProperties(operation);
+
+    setupJvmArguments(operation, settings);
+
+    setupArguments(operation, settings);
+
+    setupEnvironment(operation, settings);
+
+    setupJavaHome(operation, settings, id, listener, buildEnvironment);
+
+    setupProgressListeners(operation, settings, id, listener, buildEnvironment);
+
+    setupStandardIO(operation, settings, id, listener);
+
+    operation.withCancellationToken(effectiveContext.getCancellationToken());
+
+    GradleExecutionHelperExtension.EP_NAME.forEachExtensionSafe(proc -> {
+      proc.configureOperation(operation, effectiveContext);
+    });
   }
 
-  public void ensureInstalledWrapper(@NotNull ExternalSystemTaskId id,
-                                     @NotNull String projectPath,
-                                     @NotNull GradleExecutionSettings settings,
-                                     @Nullable GradleVersion gradleVersion,
-                                     @NotNull ExternalSystemTaskNotificationListener listener,
-                                     @NotNull CancellationToken cancellationToken) {
-
-    if (!settings.getDistributionType().isWrapped()) return;
-
-    if (settings.getDistributionType() == DistributionType.DEFAULT_WRAPPED &&
-        GradleUtil.findDefaultWrapperPropertiesFile(projectPath) != null) {
-      return;
-    }
-
-    withGradleConnection(
-      projectPath, id, settings, listener, cancellationToken,
-      connection -> {
-        long ttlInMs = settings.getRemoteProcessIdleTtlInMs();
-        try {
-          settings.setRemoteProcessIdleTtlInMs(100);
-          try {
-            final File wrapperFilesLocation = FileUtil.createTempDirectory("wrap", "loc");
-            final String fileName = "gradle-wrapper";
-            final File jarFile = new File(wrapperFilesLocation, fileName + ".jar");
-            final File scriptFile = new File(wrapperFilesLocation, "gradlew");
-            final File pathToProperties = new File(wrapperFilesLocation, "path.tmp");
-
-            Runtime.getRuntime().addShutdownHook(new Thread(() -> FileUtil.delete(wrapperFilesLocation), "GradleExecutionHelper cleanup"));
-
-            StringJoiner lines = new StringJoiner(SystemProperties.getLineSeparator());
-            lines.add("");
-            lines.add("gradle.projectsEvaluated { gr ->");
-            lines.add("  def wrapper = gr.rootProject.tasks[\"wrapper\"]");
-            lines.add("  if (wrapper != null) {");
-            lines.add("    if (wrapper.jarFile.exists()) {");
-            lines.add("      wrapper.jarFile = new File('" + StringUtil.escapeBackSlashes(jarFile.getCanonicalPath()) + "')");
-            lines.add("      wrapper.scriptFile = new File('" + StringUtil.escapeBackSlashes(scriptFile.getCanonicalPath()) + "')");
-            lines.add("    }");
-            if (gradleVersion != null) {
-              lines.add("    wrapper.gradleVersion = '" + gradleVersion.getVersion() + "'");
-            }
-            lines.add("    wrapper.doLast {");
-            lines.add("      new File('" +
-                      StringUtil.escapeBackSlashes(pathToProperties.getCanonicalPath()) +
-                      "').write wrapper.propertiesFile.getCanonicalPath()");
-            lines.add("    }");
-            lines.add("  }");
-            lines.add("}");
-            lines.add("");
-            final File tempFile = writeToFileGradleInitScript(lines.toString(), "wrapper_init");
-            settings.withArguments(GradleConstants.INIT_SCRIPT_CMD_OPTION, tempFile.getAbsolutePath());
-            BuildLauncher launcher = getBuildLauncher(id, connection, settings, listener);
-            launcher.withCancellationToken(cancellationToken);
-            launcher.forTasks("wrapper");
-            launcher.run();
-            settings.setWrapperPropertyFile(FileUtil.loadFile(pathToProperties));
-          }
-          catch (IOException e) {
-            LOG.warn("Can't update wrapper", e);
-          }
-        }
-        catch (ProcessCanceledException e) {
-          throw e;
-        }
-        catch (Throwable e) {
-          LOG.warn("Can't update wrapper", e);
-          Throwable rootCause = ExceptionUtil.getRootCause(e);
-          ExternalSystemException externalSystemException = new ExternalSystemException(ExceptionUtil.getMessage(rootCause));
-          externalSystemException.initCause(e);
-          throw externalSystemException;
-        }
-        finally {
-          settings.setRemoteProcessIdleTtlInMs(ttlInMs);
-        }
-        return null;
-      }
-    );
+  private static void clearSystemProperties(LongRunningOperation operation) {
+    // for Gradle 7.6+ this will cancel implicit transfer of current System.properties to Gradle Daemon.
+    operation.withSystemProperties(Collections.emptyMap());
   }
 
-  @Nullable
-  public static BuildEnvironment getBuildEnvironment(ProjectResolverContext projectResolverContext) {
-    return getBuildEnvironment(projectResolverContext.getConnection(),
-                               projectResolverContext.getExternalSystemTaskId(),
-                               projectResolverContext.getListener(),
-                               projectResolverContext.getCancellationTokenSource());
-  }
-
-  public static void prepare(@NotNull LongRunningOperation operation,
-                             @NotNull final ExternalSystemTaskId id,
-                             @NotNull GradleExecutionSettings settings,
-                             @NotNull final ExternalSystemTaskNotificationListener listener,
-                             @NotNull ProjectConnection connection) {
-    prepare(operation, id, settings, listener, connection, new OutputWrapper(listener, id, true), new OutputWrapper(listener, id, false));
-  }
-
-  public static void prepare(@NotNull LongRunningOperation operation,
-                             @NotNull final ExternalSystemTaskId id,
-                             @NotNull GradleExecutionSettings settings,
-                             @NotNull final ExternalSystemTaskNotificationListener listener,
-                             @NotNull ProjectConnection connection,
-                             @NotNull final OutputStream standardOutput,
-                             @NotNull final OutputStream standardError) {
-    List<String> jvmArgs = settings.getJvmArguments();
-    BuildEnvironment buildEnvironment = getBuildEnvironment(connection, id, listener, (CancellationToken)null);
-
-    String gradleVersion = buildEnvironment != null ? buildEnvironment.getGradle().getGradleVersion() : null;
-    if (!jvmArgs.isEmpty()) {
-      // merge gradle args e.g. defined in gradle.properties
-      Collection<String> merged;
-      if (buildEnvironment != null) {
-        // the BuildEnvironment jvm arguments of the main build should be used for the 'buildSrc' import
-        // to avoid spawning of the second gradle daemon
-        BuildIdentifier buildIdentifier = getBuildIdentifier(buildEnvironment);
-        List<String> buildJvmArguments = buildIdentifier == null || "buildSrc".equals(buildIdentifier.getRootDir().getName())
-                                         ? ContainerUtil.emptyList()
-                                         : buildEnvironment.getJava().getJvmArguments();
-        merged = mergeJvmArgs(settings.getServiceDirectory(), buildJvmArguments, jvmArgs);
-      }
-      else {
-        merged = jvmArgs;
-      }
-
-      // filter nulls and empty strings
-      List<String> filteredArgs = ContainerUtil.mapNotNull(merged, s -> StringUtil.isEmpty(s) ? null : s);
-
-      operation.setJvmArguments(ArrayUtilRt.toStringArray(filteredArgs));
-    }
-
+  private static void applyIdeaParameters(@NotNull GradleExecutionSettings settings) {
     if (settings.isOfflineWork()) {
       settings.withArgument(GradleConstants.OFFLINE_MODE_CMD_OPTION);
     }
+    settings.withArgument("-Didea.active=true");
+    settings.withArgument("-Didea.version=" + getIdeaVersion());
+    settings.withArgument("-Didea.vendor.name=" + ApplicationInfo.getInstance().getShortCompanyName());
+  }
 
-    final Application application = ApplicationManager.getApplication();
-    if (application != null && application.isUnitTestMode()) {
-      if (!settings.getArguments().contains("--quiet")) {
-        if (!settings.getArguments().contains("--debug")) {
-          settings.withArgument("--info");
-        }
-      }
+  private static void setupProgressListeners(
+    @NotNull LongRunningOperation operation,
+    @NotNull GradleExecutionSettings settings,
+    @NotNull ExternalSystemTaskId id,
+    @NotNull ExternalSystemTaskNotificationListener listener,
+    @NotNull BuildEnvironment buildEnvironment
+  ) {
+    var buildRootDir = getBuildRoot(buildEnvironment);
+    var progressListener = new GradleProgressListener(listener, id, buildRootDir.toString());
+    operation.addProgressListener((ProgressListener)progressListener);
+    operation.addProgressListener(
+      progressListener,
+      OperationType.TASK,
+      OperationType.FILE_DOWNLOAD
+    );
+    if (settings.isRunAsTest() && settings.isBuiltInTestEventsUsed()) {
+      operation.addProgressListener(
+        progressListener,
+        OperationType.TEST,
+        OperationType.TEST_OUTPUT,
+        OperationType.TASK
+      );
     }
+  }
 
-    List<String> filteredArgs = new ArrayList<>();
-    if (!settings.getArguments().isEmpty()) {
-      String loggableArgs = StringUtil.join(obfuscatePasswordParameters(settings.getArguments()), " ");
-      LOG.info("Passing command-line args to Gradle Tooling API: " + loggableArgs);
-
-      // filter nulls and empty strings
-      filteredArgs.addAll(ContainerUtil.mapNotNull(settings.getArguments(), s -> StringUtil.isEmpty(s) ? null : s));
-
-      // TODO remove this replacement when --tests option will become available for tooling API
-      replaceTestCommandOptionWithInitScript(filteredArgs);
-    }
-    filteredArgs.add("-Didea.active=true");
-    filteredArgs.add("-Didea.version=" + getIdeaVersion());
-    operation.withArguments(ArrayUtilRt.toStringArray(filteredArgs));
-
-    setupEnvironment(operation, settings, gradleVersion, id, listener);
-
-    final String javaHome = settings.getJavaHome();
-    if (javaHome != null && new File(javaHome).isDirectory()) {
-      LOG.debug("Java home to set for Gradle operation: " + javaHome);
-      operation.setJavaHome(new File(javaHome));
-    }
-
-    String buildRootDir;
-    if (buildEnvironment == null) {
-      buildRootDir = null;
-    }
-    else {
-      BuildIdentifier buildIdentifier = getBuildIdentifier(buildEnvironment);
-      buildRootDir = buildIdentifier == null ? null : buildIdentifier.getRootDir().getPath();
-    }
-    GradleProgressListener gradleProgressListener = new GradleProgressListener(listener, id, buildRootDir);
-    operation.addProgressListener((ProgressListener)gradleProgressListener);
-    operation.addProgressListener(gradleProgressListener,
-                                  OperationType.TASK,
-                                  OperationType.TEST);
-    operation.setStandardOutput(standardOutput);
-    operation.setStandardError(standardError);
+  private static void setupStandardIO(
+    @NotNull LongRunningOperation operation,
+    @NotNull GradleExecutionSettings settings,
+    @NotNull ExternalSystemTaskId id,
+    @NotNull ExternalSystemTaskNotificationListener listener
+  ) {
+    operation.setStandardOutput(new OutputWrapper(listener, id, true));
+    operation.setStandardError(new OutputWrapper(listener, id, false));
     InputStream inputStream = settings.getUserData(ExternalSystemRunConfiguration.RUN_INPUT_KEY);
     if (inputStream != null) {
       operation.setStandardInput(inputStream);
     }
   }
 
-  @Nullable
-  private static BuildIdentifier getBuildIdentifier(@NotNull BuildEnvironment buildEnvironment) {
-    try {
-      return buildEnvironment.getBuildIdentifier();
+  @VisibleForTesting
+  public static void setupJvmArguments(
+    @NotNull LongRunningOperation operation,
+    @NotNull GradleExecutionSettings settings
+  ) {
+    var jvmArgs = ContainerUtil.filter(settings.getJvmArguments(), it -> !StringUtil.isEmpty(it));
+    if (!jvmArgs.isEmpty()) {
+      operation.addJvmArguments(ArrayUtilRt.toStringArray(jvmArgs));
     }
-    catch (UnsupportedMethodException ignore) {
-    }
-    return null;
   }
 
-  private static void setupEnvironment(@NotNull LongRunningOperation operation,
-                                       @NotNull GradleExecutionSettings settings,
-                                       @Nullable String gradleVersion,
-                                       ExternalSystemTaskId taskId,
-                                       ExternalSystemTaskNotificationListener listener) {
-    boolean isEnvironmentCustomizationSupported =
-      gradleVersion != null && GradleVersion.version(gradleVersion).getBaseVersion().compareTo(GradleVersion.version("3.5")) >= 0;
-    if (!isEnvironmentCustomizationSupported) {
-      if (!settings.isPassParentEnvs() || !settings.getEnv().isEmpty()) {
-        listener.onTaskOutput(taskId, String.format(
-          "The version of Gradle you are using%s does not support the environment variables customization feature. " +
-          "Support for this is available in Gradle 3.5 and all later versions.\n",
-          gradleVersion == null ? "" : (" (" + gradleVersion + ")")), false);
-      }
+  private static void setupJavaHome(
+    @NotNull LongRunningOperation operation,
+    @NotNull GradleExecutionSettings settings,
+    @NotNull ExternalSystemTaskId id,
+    @NotNull ExternalSystemTaskNotificationListener listener,
+    @Nullable BuildEnvironment buildEnvironment
+  ) {
+    var javaHome = getJavaHomeForOperation(settings, id, listener, buildEnvironment);
+    if (javaHome == null) {
       return;
     }
+    //noinspection IO_FILE_USAGE
+    operation.setJavaHome(new File(javaHome));
+    LOG.debug("Java home to set for Gradle operation: " + javaHome);
+  }
+
+  private static @Nullable String getJavaHomeForOperation(
+    @NotNull GradleExecutionSettings settings,
+    @NotNull ExternalSystemTaskId id,
+    @NotNull ExternalSystemTaskNotificationListener listener,
+    @Nullable BuildEnvironment buildEnvironment
+  ) {
+    if (Boolean.TRUE.equals(settings.getUserData(AUTO_JAVA_HOME)) && buildEnvironment != null) {
+      var project = id.getProject();
+      var gradle = buildEnvironment.getGradle();
+      var gradleVersion = GradleVersion.version(gradle.getGradleVersion());
+
+      for (var sdkPath : ExternalSystemJdkUtil.suggestJdkHomePaths(project)) {
+        var javaVersion = ExternalSystemJdkUtil.getJavaVersion(sdkPath);
+        if (javaVersion != null && GradleJvmSupportMatrix.isSupported(gradleVersion, javaVersion)) {
+          listener.onTaskOutput(
+            id,
+            GradleBundle.message("gradle.auto.jdk.was.selected", sdkPath) + System.lineSeparator(),
+            ProcessOutputType.STDOUT
+          );
+          return sdkPath;
+        }
+      }
+    }
+    return settings.getJavaHome();
+  }
+
+  private static void setupArguments(
+    @NotNull LongRunningOperation operation,
+    @NotNull GradleExecutionSettings settings
+  ) {
+    var commandLine = fixUpGradleCommandLine(settings.getCommandLine());
+
+    LOG.info("Passing command-line to Gradle Tooling API: " +
+             StringUtil.join(obfuscatePasswordParameters(commandLine.getTokens()), " "));
+
+    if (operation instanceof TestLauncher testLauncher) {
+      setupTestLauncherArguments(testLauncher, commandLine);
+    }
+    else if (operation instanceof BuildLauncher buildLauncher) {
+      setupBuildLauncherArguments(buildLauncher, commandLine, settings);
+    }
+    else {
+      operation.withArguments(commandLine.getTokens());
+    }
+  }
+
+  private static @NotNull GradleCommandLine fixUpGradleCommandLine(@NotNull GradleCommandLine commandLine) {
+    var tasks = new ArrayList<GradleCommandLineTask>();
+    for (var task : commandLine.getTasks()) {
+      var name = task.getName();
+      var options = ContainerUtil.filter(task.getOptions(), it -> !GradleCommandLineUtil.isWildcardTestPattern(it));
+      tasks.add(new GradleCommandLineTask(name, options));
+    }
+    return new GradleCommandLine(tasks, commandLine.getOptions());
+  }
+
+  private static void setupTestLauncherArguments(
+    @NotNull TestLauncher testLauncher,
+    @NotNull GradleCommandLine commandLine
+  ) {
+    for (var task : commandLine.getTasks()) {
+      var patterns = GradleCommandLineUtil.getTestPatterns(task);
+      if (!patterns.isEmpty()) {
+        testLauncher.withTestsFor(
+          it -> it.forTaskPath(task.getName())
+            .includePatterns(patterns)
+        );
+      }
+      else {
+        testLauncher.forTasks(ArrayUtil.toStringArray(task.getTokens()));
+      }
+    }
+    testLauncher.withArguments(commandLine.getOptions().getTokens());
+  }
+
+  private static void setupBuildLauncherArguments(
+    @NotNull BuildLauncher buildLauncher,
+    @NotNull GradleCommandLine commandLine,
+    @NotNull GradleExecutionSettings settings
+  ) {
+    buildLauncher.forTasks(ArrayUtil.toStringArray(commandLine.getTasks().getTokens()));
+    buildLauncher.withArguments(commandLine.getOptions().getTokens());
+    if (settings.isTestTaskRerun()) {
+      var initScript = GradleInitScriptUtil.createTestInitScript();
+      buildLauncher.addArguments(GradleConstants.INIT_SCRIPT_CMD_OPTION, initScript.toString());
+    }
+  }
+
+  @VisibleForTesting
+  @SuppressWarnings("ConstantValue") //Qodana false positive
+  public static void setupLogging(
+    @NotNull GradleExecutionSettings settings,
+    @Nullable BuildEnvironment buildEnvironment
+  ) {
+    var arguments = settings.getArguments();
+    var options = GradleCommandLineOptionsProvider.LOGGING_OPTIONS.getOptions();
+    var optionsNames = GradleCommandLineOptionsProvider.getAllOptionsNames(options);
+
+    if (ContainerUtil.exists(optionsNames, it -> arguments.contains(it))) {
+      return;
+    }
+
+    // workaround for https://github.com/gradle/gradle/issues/19340
+    // when using TAPI, user-defined log level option in gradle.properties is ignored by Gradle.
+    // try to read this file manually and apply log level explicitly
+    var buildRoot = getBuildRoot(buildEnvironment);
+    if (buildRoot != null) {
+      var properties = GradlePropertiesFile.getProperties(settings.getServiceDirectory(), buildRoot);
+      var logLevel = properties.getGradleLogLevel();
+      if (logLevel != null) {
+        switch (logLevel) {
+          case DEBUG -> settings.withArgument("-d");
+          case INFO -> settings.withArgument("-i");
+          case WARN -> settings.withArgument("-w");
+          case QUIET -> settings.withArgument("-q");
+        }
+      }
+    }
+
+    if (ContainerUtil.exists(optionsNames, it -> arguments.contains(it))) {
+      return;
+    }
+
+    // Default logging level for integration tests
+    final Application application = ApplicationManager.getApplication();
+    if (application != null && application.isUnitTestMode()) {
+      settings.withArgument("--info");
+    }
+  }
+
+  private static @Nullable Path getBuildRoot(@Nullable BuildEnvironment buildEnvironment) {
+    if (buildEnvironment == null) {
+      return null;
+    }
+    return buildEnvironment.getBuildIdentifier().getRootDir().toPath();
+  }
+
+  private static void setupEnvironment(
+    @NotNull LongRunningOperation operation,
+    @NotNull GradleExecutionSettings settings
+  ) {
+    var environmentConfigurationProvider = ExternalSystemExecutionAware.getEnvironmentConfigurationProvider(settings);
+    var environmentConfiguration = ObjectUtils.doIfNotNull(environmentConfigurationProvider, it -> it.getEnvironmentConfiguration());
+    if (environmentConfiguration != null && !LocalGradleExecutionAware.LOCAL_TARGET_TYPE_ID.equals(environmentConfiguration.getTypeId())) {
+      if (settings.isPassParentEnvs()) {
+        LOG.warn("Host system environment variables will not be passed for the target run.");
+      }
+      operation.setEnvironmentVariables(settings.getEnv());
+      return;
+    }
+
     GeneralCommandLine commandLine = new GeneralCommandLine();
     commandLine.withEnvironment(settings.getEnv());
     commandLine.withParentEnvironmentType(
@@ -375,301 +527,138 @@ public class GradleExecutionHelper {
     operation.setEnvironmentVariables(effectiveEnvironment);
   }
 
-  @ApiStatus.Experimental
-  static List<String> mergeJvmArgs(String serviceDirectory, List<String> jvmArgs, List<String> jvmArgsFromIdeSettings) {
-    File gradleUserHomeDir = serviceDirectory != null ? new File(serviceDirectory) : new BuildLayoutParameters().getGradleUserHomeDir();
-    LOG.debug("Gradle home: " + gradleUserHomeDir);
-    NativeServices.initialize(gradleUserHomeDir);
-    JvmOptions jvmOptions = new JvmOptions(null);
-    List<String> mergedJvmArgs = mergeJvmArgs(jvmArgs, jvmArgsFromIdeSettings);
-    jvmOptions.setAllJvmArgs(mergedJvmArgs);
-    return jvmOptions.getAllJvmArgs();
-  }
-
-  @ApiStatus.Experimental
-  static List<String> mergeJvmArgs(List<String> jvmArgs, List<String> jvmArgsFromIdeSettings) {
-    MultiMap<String, String> argumentsMap = MultiMap.createLinkedSet();
-    String lastKey = null;
-    for (String jvmArg : ContainerUtil.concat(jvmArgs, jvmArgsFromIdeSettings)) {
-      if (jvmArg.startsWith("-")) {
-        argumentsMap.putValue(jvmArg, "");
-        lastKey = jvmArg;
-      }
-      else {
-        if (lastKey != null) {
-          argumentsMap.putValue(lastKey, jvmArg);
-          lastKey = null;
-        }
-        else {
-          argumentsMap.putValue(jvmArg, "");
-        }
-      }
-    }
-
-    Map<String, String> mergedKeys = new LinkedHashMap<>();
-    Set<String> argKeySet = new LinkedHashSet<>(argumentsMap.keySet());
-    for (String argKey : argKeySet) {
-      Collection<String> values = argumentsMap.getModifiable(argKey);
-      if (values.size() == 1 && values.iterator().next().isEmpty()) {
-        Couple<String> couple = splitArg(argKey);
-        mergedKeys.put(couple.first, couple.second);
-      }
-      else {
-        mergedKeys.put(argKey, "");
-        Map<String, String> mergedArgs = new LinkedHashMap<>();
-        for (String jvmArg : values) {
-          if (jvmArg.isEmpty()) continue;
-          Couple<String> couple = splitArg(jvmArg);
-          mergedArgs.put(couple.first, couple.second);
-        }
-        values.clear();
-        mergedArgs.forEach((key, value) -> values.add(key + value));
-      }
-    }
-
-    List<String> mergedArgs = new SmartList<>();
-    mergedKeys.forEach((s1, s2) -> mergedArgs.add(s1 + s2));
-    argKeySet.stream().filter(argKey -> !mergedArgs.contains(argKey)).forEach(argumentsMap::remove);
-
-    // remove `--add-opens` options, because same options will be added by gradle producing the option duplicates.
-    // And the daemon will become uncompilable with the CLI invocations.
-    // see https://github.com/gradle/gradle/blob/v5.1.1/subprojects/launcher/src/main/java/org/gradle/launcher/daemon/configuration/DaemonParameters.java#L125
-    argumentsMap.remove("--add-opens");
-
-    List<String> result = new SmartList<>();
-    argumentsMap.keySet().forEach(key -> argumentsMap.get(key).forEach(val -> {
-      result.add(key);
-      if (StringUtil.isNotEmpty(val)) {
-        result.add(val);
-      }
-    }));
-    return result;
-  }
-
-  private static Couple<String> splitArg(String arg) {
-    int i = arg.indexOf('=');
-    return i <= 0 ? Couple.of(arg, "") : Couple.of(arg.substring(0, i), arg.substring(i));
-  }
-
-  @Nullable
-  public static File generateInitScript(boolean isBuildSrcProject, @NotNull Set<Class<?>> toolingExtensionClasses) {
-    InputStream stream = Init.class.getResourceAsStream("/org/jetbrains/plugins/gradle/tooling/internal/init/init.gradle");
-    if (stream == null) {
-      LOG.warn("Can't find init script template");
-      return null;
-    }
-    try (Reader reader = new InputStreamReader(stream, StandardCharsets.UTF_8)) {
-      String toolingExtensionsJarPaths = getToolingExtensionsJarPaths(toolingExtensionClasses);
-      String script = StreamUtil.readText(reader).replaceFirst(Pattern.quote("${EXTENSIONS_JARS_PATH}"), toolingExtensionsJarPaths);
-      if (isBuildSrcProject) {
-        String buildSrcDefaultInitScript = getBuildSrcDefaultInitScript();
-        if (buildSrcDefaultInitScript == null) return null;
-        script += buildSrcDefaultInitScript;
-      }
-
-      return writeToFileGradleInitScript(script, "ijinit");
-    }
-    catch (Exception e) {
-      LOG.warn("Can't generate IJ gradle init script", e);
-      return null;
-    }
-  }
-
-  public static File writeToFileGradleInitScript(@NotNull String content, @NotNull String filePrefix) throws IOException {
-    byte[] contentBytes = content.getBytes(StandardCharsets.UTF_8);
-    int contentLength = contentBytes.length;
-    return FileUtil.findSequentFile(new File(FileUtil.getTempDirectory()), filePrefix, GradleConstants.EXTENSION, file -> {
+  /**
+   * Visible for {@link com.android.tools.idea.gradle.project.build.invoker.GradleTasksExecutorImpl}.
+   */
+  public static @NotNull BuildEnvironment getBuildEnvironment(
+    @NotNull ProjectConnection connection,
+    @NotNull GradleExecutionContext context
+  ) {
+    Span span = ExternalSystemTelemetryUtil.getTracer(GradleConstants.SYSTEM_ID)
+      .spanBuilder("GetBuildEnvironment")
+      .startSpan();
+    try (Scope ignore = span.makeCurrent()) {
+      BuildEnvironment buildEnvironment;
       try {
-        if (!file.exists()) {
-          FileUtil.writeToFile(file, contentBytes, false);
-          file.deleteOnExit();
-          return true;
-        }
-        if (contentLength != file.length()) return false;
-        return content.equals(FileUtil.loadFile(file, StandardCharsets.UTF_8));
+        ExternalSystemTaskId taskId = context.getTaskId();
+        ExternalSystemTaskNotificationListener listener = context.getListener();
+
+        ModelBuilder<BuildEnvironment> modelBuilder = connection.model(BuildEnvironment.class);
+
+        modelBuilder.withCancellationToken(context.getCancellationToken());
+
+        setupJavaHome(modelBuilder, context.getSettings(), taskId, listener, null);
+
+        // do not use connection.getModel methods since it doesn't allow to handle progress events
+        // and we can miss gradle tooling client side events like distribution download.
+        GradleProgressListener gradleProgressListener = new GradleProgressListener(listener, taskId, context.getProjectPath());
+        modelBuilder.addProgressListener((ProgressListener)gradleProgressListener);
+        modelBuilder.addProgressListener((org.gradle.tooling.events.ProgressListener)gradleProgressListener);
+        modelBuilder.setStandardOutput(new OutputWrapper(listener, taskId, true));
+        modelBuilder.setStandardError(new OutputWrapper(listener, taskId, false));
+
+        buildEnvironment = modelBuilder.get();
       }
-      catch (IOException ignore) {
-        // Skip file with access issues. Will attempt to check the next file
+      catch (ExternalSystemException e) {
+        throw e;
       }
-      return false;
-    });
-  }
-
-  @Nullable
-  public static String getBuildSrcDefaultInitScript() {
-    InputStream stream = Init.class.getResourceAsStream("/org/jetbrains/plugins/gradle/tooling/internal/init/buildSrcInit.gradle");
-    if (stream == null) {
-      LOG.warn("Can't find default init script template");
-      return null;
-    }
-    try (Reader reader = new InputStreamReader(stream, StandardCharsets.UTF_8)) {
-      return StreamUtil.readText(reader);
-    }
-    catch (Exception e) {
-      LOG.warn("Can't use IJ gradle init script", e);
-      return null;
-    }
-  }
-
-  @Nullable
-  public static GradleVersion getGradleVersion(@NotNull ProjectConnection connection,
-                                               @NotNull ExternalSystemTaskId taskId,
-                                               @NotNull ExternalSystemTaskNotificationListener listener,
-                                               @Nullable CancellationTokenSource cancellationTokenSource) {
-    final BuildEnvironment buildEnvironment = getBuildEnvironment(connection, taskId, listener, cancellationTokenSource);
-
-    GradleVersion gradleVersion = null;
-    if (buildEnvironment != null) {
-      gradleVersion = GradleVersion.version(buildEnvironment.getGradle().getGradleVersion());
-    }
-    return gradleVersion;
-  }
-
-  @Nullable
-  public static BuildEnvironment getBuildEnvironment(@NotNull ProjectConnection connection,
-                                                     @NotNull ExternalSystemTaskId taskId,
-                                                     @NotNull ExternalSystemTaskNotificationListener listener,
-                                                     @Nullable CancellationTokenSource cancellationTokenSource) {
-    CancellationToken cancellationToken = cancellationTokenSource != null ? cancellationTokenSource.token() : null;
-    return getBuildEnvironment(connection, taskId, listener, cancellationToken);
-  }
-
-  @Nullable
-  public static BuildEnvironment getBuildEnvironment(@NotNull ProjectConnection connection,
-                                                     @NotNull ExternalSystemTaskId taskId,
-                                                     @NotNull ExternalSystemTaskNotificationListener listener,
-                                                     @Nullable CancellationToken cancellationToken) {
-    BuildEnvironment buildEnvironment = null;
-    try {
-      ModelBuilder<BuildEnvironment> modelBuilder = connection.model(BuildEnvironment.class);
-      if (cancellationToken != null) {
-        modelBuilder.withCancellationToken(cancellationToken);
+      catch (Exception ex) {
+        throw new RuntimeException("Failed to obtain build environment from Gradle daemon.", ex);
       }
-      // do not use connection.getModel methods since it doesn't allow to handle progress events
-      // and we can miss gradle tooling client side events like distribution download.
-      GradleProgressListener gradleProgressListener = new GradleProgressListener(listener, taskId);
-      modelBuilder.addProgressListener((ProgressListener)gradleProgressListener);
-      modelBuilder.addProgressListener((org.gradle.tooling.events.ProgressListener)gradleProgressListener);
-      modelBuilder.setStandardOutput(new OutputWrapper(listener, taskId, true));
-      modelBuilder.setStandardError(new OutputWrapper(listener, taskId, false));
 
-      buildEnvironment = modelBuilder.get();
-      if (LOG.isDebugEnabled()) {
-        try {
-          LOG.debug("Gradle version: " + buildEnvironment.getGradle().getGradleVersion());
-          LOG.debug("Gradle java home: " + buildEnvironment.getJava().getJavaHome());
-          LOG.debug("Gradle jvm arguments: " + buildEnvironment.getJava().getJvmArguments());
-        }
-        catch (Throwable t) {
-          LOG.debug(t);
-        }
+      checkThatGradleBuildEnvironmentIsSupportedByIdea(buildEnvironment);
+      checkThatGradleBuildEnvironmentIsDeprecatedByIdea(context, buildEnvironment);
+      var checkers = GradleExecutionChecker.EP_NAME.getExtensionList();
+      for (var checker : checkers) {
+        checker.checkExecution(context, buildEnvironment);
       }
+      return buildEnvironment;
     }
-    catch (Throwable t) {
-      LOG.debug(t);
+    catch (CancellationException ce) {
+      throw ce;
     }
-    return buildEnvironment;
-  }
-
-  private static void replaceTestCommandOptionWithInitScript(@NotNull List<String> args) {
-    Set<String> testIncludePatterns = new LinkedHashSet<>();
-    Iterator<String> it = args.iterator();
-    while (it.hasNext()) {
-      final String next = it.next();
-      if (GradleConstants.TESTS_ARG_NAME.equals(next)) {
-        it.remove();
-        if (it.hasNext()) {
-          testIncludePatterns.add(it.next());
-          it.remove();
-        }
-      }
+    catch (Exception ex) {
+      span.recordException(ex);
+      span.setStatus(StatusCode.ERROR);
+      throw ex;
     }
-    if (!testIncludePatterns.isEmpty()) {
-      StringBuilder buf = new StringBuilder();
-      buf.append('[');
-      for (Iterator<String> iterator = testIncludePatterns.iterator(); iterator.hasNext(); ) {
-        String pattern = iterator.next();
-        String groovyPattern = toGroovyString(pattern);
-        buf.append('\'').append(groovyPattern).append('\'');
-        if (iterator.hasNext()) {
-          buf.append(',');
-        }
-      }
-      buf.append(']');
-
-      String path = renderInitScript(buf.toString());
-      if (path != null) {
-        ContainerUtil.addAll(args, GradleConstants.INIT_SCRIPT_CMD_OPTION, path);
-      }
+    finally {
+      span.end();
     }
   }
 
-  @NotNull
-  public static String toGroovyString(@NotNull String string) {
-    StringBuilder stringBuilder = new StringBuilder();
-    for (char ch : string.toCharArray()) {
-      if (ch == '\\') {
-        stringBuilder.append("\\\\");
-      }
-      else if (ch == '\'') {
-        stringBuilder.append("\\'");
-      }
-      else if (ch == '"') {
-        stringBuilder.append("\\\"");
-      }
-      else {
-        stringBuilder.append(ch);
-      }
-    }
-    return stringBuilder.toString();
-  }
-
-  @Nullable
-  public static String renderInitScript(@NotNull String testArgs) {
-    InputStream stream = Init.class.getResourceAsStream("/org/jetbrains/plugins/gradle/tooling/internal/init/testFilterInit.gradle");
-    if (stream == null) {
-      LOG.error("Can't find test filter init script template");
-      return null;
-    }
-    try (Reader reader = new InputStreamReader(stream, StandardCharsets.UTF_8)) {
-      String script = StreamUtil.readText(reader).replaceFirst(Pattern.quote("${TEST_NAME_INCLUDES}"), Matcher.quoteReplacement(testArgs));
-      File tempFile = writeToFileGradleInitScript(script, "ijtestinit");
-      return tempFile.getAbsolutePath();
-    }
-    catch (Exception e) {
-      LOG.warn("Can't generate IJ gradle test filter init script", e);
-      return null;
+  private static void checkThatGradleBuildEnvironmentIsDeprecatedByIdea(
+    @NotNull GradleExecutionContext context,
+    @NotNull BuildEnvironment buildEnvironment
+  ) {
+    final GradleVersion gradleVersion = GradleVersion.version(buildEnvironment.getGradle().getGradleVersion());
+    if (GradleJvmSupportMatrix.isGradleDeprecatedByIdea(gradleVersion)) {
+      final String projectPath = context.getProjectPath();
+      final var issue = new DeprecatedGradleVersionIssue(gradleVersion, projectPath);
+      context.getListener().onStatusChange(
+        new ExternalSystemBuildEvent(
+          context.getTaskId(),
+          new BuildIssueEventImpl(context.getTaskId(), issue, MessageEvent.Kind.WARNING)
+        )
+      );
     }
   }
 
-  @NotNull
-  public static String getToolingExtensionsJarPaths(@NotNull Set<Class<?>> toolingExtensionClasses) {
-    final Set<String> jarPaths = ContainerUtil.map2SetNotNull(toolingExtensionClasses, aClass -> {
-      String path = PathManager.getJarPathForClass(aClass);
-      if (path != null) {
-        if (FileUtilRt.getNameWithoutExtension(path).equals("gradle-api-" + GradleVersion.current().getBaseVersion())) {
-          LOG.warn("The gradle api jar shouldn't be added to the gradle daemon classpath: {" + aClass + "," + path + "}");
-          return null;
-        }
-        return FileUtil.toCanonicalPath(path);
-      }
-      return null;
-    });
-    StringBuilder buf = new StringBuilder();
-    buf.append('[');
-    for (Iterator<String> it = jarPaths.iterator(); it.hasNext(); ) {
-      String jarPath = it.next();
-      buf.append('\"').append(jarPath).append('\"');
-      if (it.hasNext()) {
-        buf.append(',');
-      }
+  private static void checkThatGradleBuildEnvironmentIsSupportedByIdea(@NotNull BuildEnvironment buildEnvironment) {
+    var gradleVersion = GradleVersion.version(buildEnvironment.getGradle().getGradleVersion());
+    LOG.debug("Gradle version: " + gradleVersion);
+    if (!GradleJvmSupportMatrix.isGradleSupportedByIdea(gradleVersion)) {
+      throw new UnsupportedGradleVersionByIdeaException(gradleVersion);
     }
-    buf.append(']');
-    return buf.toString();
+    var javaHome = buildEnvironment.getJava().getJavaHome();
+    var jvmArguments = buildEnvironment.getJava().getJvmArguments();
+    LOG.debug("Gradle java home: " + javaHome);
+    LOG.debug("Gradle jvm arguments: " + jvmArguments);
+    var javaVersion = ExternalSystemJdkUtil.getJavaVersion(javaHome.getPath());
+    if (javaVersion != null && !GradleJvmSupportMatrix.isJavaSupportedByIdea(javaVersion)) {
+      throw new UnsupportedGradleJvmByIdeaException(gradleVersion, javaVersion);
+    }
   }
 
-  @NotNull
-  static List<String> obfuscatePasswordParameters(@NotNull List<String> commandLineArguments) {
+  public static class UnsupportedGradleVersionByIdeaException extends RuntimeException {
+
+    private final @NotNull GradleVersion myGradleVersion;
+
+    public UnsupportedGradleVersionByIdeaException(@NotNull GradleVersion gradleVersion) {
+      super("Unsupported Gradle version");
+      myGradleVersion = gradleVersion;
+    }
+
+    public @NotNull GradleVersion getGradleVersion() {
+      return myGradleVersion;
+    }
+  }
+
+  public static class UnsupportedGradleJvmByIdeaException extends RuntimeException {
+
+    private final @NotNull GradleVersion myGradleVersion;
+    private final @Nullable JavaVersion myJavaVersion;
+
+    public UnsupportedGradleJvmByIdeaException(
+      @NotNull GradleVersion gradleVersion,
+      @Nullable JavaVersion javaVersion
+    ) {
+      super("Unsupported Gradle JVM version");
+      myGradleVersion = gradleVersion;
+      myJavaVersion = javaVersion;
+    }
+
+    public @NotNull GradleVersion getGradleVersion() {
+      return myGradleVersion;
+    }
+
+    public @Nullable JavaVersion getJavaVersion() {
+      return myJavaVersion;
+    }
+  }
+
+  @VisibleForTesting
+  public static @NotNull List<String> obfuscatePasswordParameters(@NotNull List<String> commandLineArguments) {
     List<String> replaced = new ArrayList<>(commandLineArguments.size());
     final String PASSWORD_PARAMETER_IDENTIFIER = ".password=";
     for (String option : commandLineArguments) {
