@@ -1,4 +1,4 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package org.zmlx.hg4idea;
 
 import com.intellij.dvcs.ignore.VcsRepositoryIgnoredFilesHolder;
@@ -9,28 +9,44 @@ import com.intellij.openapi.progress.ProgressIndicator;
 import com.intellij.openapi.progress.Task;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.ui.DialogWrapper;
-import com.intellij.openapi.vcs.*;
+import com.intellij.openapi.vcs.FilePath;
+import com.intellij.openapi.vcs.FileStatus;
+import com.intellij.openapi.vcs.VcsBundle;
+import com.intellij.openapi.vcs.VcsNotifier;
+import com.intellij.openapi.vcs.VcsShowConfirmationOption;
+import com.intellij.openapi.vcs.VcsVFSListener;
 import com.intellij.openapi.vcs.changes.Change;
 import com.intellij.openapi.vcs.changes.ChangeListManager;
 import com.intellij.openapi.vcs.changes.VcsDirtyScopeManager;
 import com.intellij.openapi.vcs.changes.ui.SelectFilePathsDialog;
 import com.intellij.openapi.vfs.VirtualFile;
-import com.intellij.ui.AppUIUtil;
 import com.intellij.util.containers.ContainerUtil;
 import com.intellij.util.ui.VcsBackgroundTask;
 import com.intellij.vcsUtil.VcsUtil;
+import kotlinx.coroutines.CoroutineScope;
 import org.jetbrains.annotations.NotNull;
-import org.zmlx.hg4idea.command.*;
+import org.zmlx.hg4idea.command.HgAddCommand;
+import org.zmlx.hg4idea.command.HgCopyCommand;
+import org.zmlx.hg4idea.command.HgMoveCommand;
+import org.zmlx.hg4idea.command.HgRemoveCommand;
+import org.zmlx.hg4idea.command.HgStatusCommand;
 import org.zmlx.hg4idea.execution.HgCommandResult;
 import org.zmlx.hg4idea.util.HgErrorUtil;
 import org.zmlx.hg4idea.util.HgUtil;
 
-import javax.swing.*;
-import java.util.*;
+import javax.swing.Action;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.Iterator;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Set;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.stream.Collectors;
 
-import static com.intellij.util.containers.ContainerUtil.map2List;
+import static org.zmlx.hg4idea.HgNotificationIdsHolder.RENAME_FAILED;
 
 /**
  * Listens to VFS events (such as adding or deleting bunch of files) and performs necessary operations with the VCS.
@@ -40,48 +56,38 @@ public final class HgVFSListener extends VcsVFSListener {
   private final VcsDirtyScopeManager dirtyScopeManager;
   private static final Logger LOG = Logger.getInstance(HgVFSListener.class);
 
-  private HgVFSListener(@NotNull HgVcs vcs) {
-    super(vcs);
+  private HgVFSListener(@NotNull HgVcs vcs, @NotNull CoroutineScope activeScope) {
+    super(vcs, activeScope);
+
     dirtyScopeManager = VcsDirtyScopeManager.getInstance(myProject);
   }
 
-  @NotNull
-  public static HgVFSListener createInstance(@NotNull HgVcs vcs) {
-    HgVFSListener listener = new HgVFSListener(vcs);
+  public static @NotNull HgVFSListener createInstance(@NotNull HgVcs vcs, @NotNull CoroutineScope activeScope) {
+    HgVFSListener listener = new HgVFSListener(vcs, activeScope);
     listener.installListeners();
     return listener;
   }
 
-  @NotNull
   @Override
-  protected String getAddTitle() {
+  protected @NotNull String getAddTitle() {
     return HgBundle.message("hg4idea.add.title");
   }
 
-  @NotNull
   @Override
-  protected String getSingleFileAddTitle() {
+  protected @NotNull String getSingleFileAddTitle() {
     return HgBundle.message("hg4idea.add.single.title");
   }
 
   @SuppressWarnings("UnresolvedPropertyKey")
-  @NotNull
   @Override
-  protected String getSingleFileAddPromptTemplate() {
+  protected @NotNull String getSingleFileAddPromptTemplate() {
     return HgBundle.message("hg4idea.add.body");
   }
 
   @Override
-  protected void executeAdd(@NotNull final List<VirtualFile> addedFiles, @NotNull final Map<VirtualFile, VirtualFile> copyFromMap) {
-    executeAddWithoutIgnores(addedFiles, copyFromMap,
-                             (notIgnoredAddedFiles, copiedFilesMap) -> originalExecuteAdd(notIgnoredAddedFiles, copiedFilesMap));
-  }
-
-  @Override
-  protected void executeAddWithoutIgnores(@NotNull List<VirtualFile> addedFiles,
-                                          @NotNull Map<VirtualFile, VirtualFile> copyFromMap,
-                                          @NotNull ExecuteAddCallback executeAddCallback) {
+  protected void executeAdd(final @NotNull List<VirtualFile> addedFiles, final @NotNull Map<VirtualFile, VirtualFile> copyFromMap) {
     saveUnsavedVcsIgnoreFiles();
+
     // if a file is copied from another repository, then 'hg add' should be used instead of 'hg copy'.
     // Thus here we remove such files from the copyFromMap.
     for (Iterator<Map.Entry<VirtualFile, VirtualFile>> it = copyFromMap.entrySet().iterator(); it.hasNext(); ) {
@@ -100,6 +106,7 @@ public final class HgVFSListener extends VcsVFSListener {
         it.remove();
       }
     }
+
     // exclude files which are ignored in .hgignore in background and execute adding after that
     final Map<VirtualFile, Collection<VirtualFile>> sortedFiles = HgUtil.sortByHgRoots(myProject, addedFiles);
     final HashSet<VirtualFile> untrackedFiles = new HashSet<>();
@@ -117,8 +124,7 @@ public final class HgVFSListener extends VcsVFSListener {
         addedFiles.retainAll(untrackedFiles);
         // select files to add if there is something to select
         if (!addedFiles.isEmpty() || !copyFromMap.isEmpty()) {
-
-          AppUIUtil.invokeLaterIfProjectAlive(myProject, () -> executeAddCallback.executeAdd(addedFiles, copyFromMap));
+          performAddingWithConfirmation(addedFiles, copyFromMap);
         }
       }
     }.queue();
@@ -128,24 +134,16 @@ public final class HgVFSListener extends VcsVFSListener {
   VcsRepositoryIgnoredFilesHolder getIgnoreRepoHolder(@NotNull VirtualFile repoRoot) {
     return Objects.requireNonNull(HgUtil.getRepositoryManager(myProject).getRepositoryForRootQuick(repoRoot)).getIgnoredFilesHolder();
   }
-  /**
-   * The version of execute add before overriding
-   *
-   * @param addedFiles  the added files
-   * @param copiedFiles the copied files
-   */
-  private void originalExecuteAdd(List<VirtualFile> addedFiles, final Map<VirtualFile, VirtualFile> copiedFiles) {
-    super.executeAdd(addedFiles, copiedFiles);
-  }
 
   @Override
-  protected void performAdding(@NotNull final Collection<VirtualFile> addedFiles, @NotNull final Map<VirtualFile, VirtualFile> copiedFilesFrom) {
+  protected void performAdding(final @NotNull Collection<VirtualFile> addedFiles,
+                               final @NotNull Map<VirtualFile, VirtualFile> copiedFilesFrom) {
     Map<VirtualFile, VirtualFile> copyFromMap = new HashMap<>(copiedFilesFrom);
-    (new Task.ConditionalModal(myProject,
-                               HgBundle.message("hg4idea.add.progress"),
-                               false,
-                               VcsConfiguration.getInstance(myProject).getAddRemoveOption() ) {
-      @Override public void run(@NotNull ProgressIndicator aProgressIndicator) {
+    (new Task.Backgroundable(myProject,
+                             HgBundle.message("hg4idea.add.progress"),
+                             false) {
+      @Override
+      public void run(@NotNull ProgressIndicator aProgressIndicator) {
         final ArrayList<VirtualFile> adds = new ArrayList<>();
         final HashMap<VirtualFile, VirtualFile> copies = new HashMap<>(); // from -> to
         //delete unversioned and ignored files from copy source
@@ -168,7 +166,8 @@ public final class HgVFSListener extends VcsVFSListener {
           final VirtualFile copyFrom = copyFromMap.get(file);
           if (copyFrom != null) {
             copies.put(copyFrom, file);
-          } else {
+          }
+          else {
             adds.add(file);
           }
         }
@@ -197,9 +196,8 @@ public final class HgVFSListener extends VcsVFSListener {
     }).queue();
   }
 
-  @NotNull
   @Override
-  protected String getDeleteTitle() {
+  protected @NotNull String getDeleteTitle() {
     return HgBundle.message("hg4idea.remove.multiple.title");
   }
 
@@ -214,26 +212,21 @@ public final class HgVFSListener extends VcsVFSListener {
     return HgBundle.message("hg4idea.remove.single.body");
   }
 
-  @NotNull
   @Override
-  protected VcsDeleteType needConfirmDeletion(@NotNull final VirtualFile file) {
-    return ChangeListManager.getInstance(myProject).isUnversioned(file)
-           ? VcsDeleteType.IGNORE
-           : VcsDeleteType.CONFIRM;
+  protected boolean shouldIgnoreDeletion(@NotNull FileStatus status) {
+    return status == FileStatus.UNKNOWN;
   }
 
   @Override
   protected void executeDelete() {
-    AllDeletedFiles files = myProcessor.acquireAllDeletedFiles();
-    List<FilePath> filesToDelete = files.deletedWithoutConfirmFiles;
-    List<FilePath> filesToConfirmDeletion = files.deletedFiles;
+    List<FilePath> filesToConfirmDeletion = myProcessor.acquireDeletedFiles();
 
     // skip files which are not under Mercurial
-    skipNotUnderHg(filesToDelete);
     skipNotUnderHg(filesToConfirmDeletion);
 
-    filesToDelete.removeAll(processAndGetVcsIgnored(filesToDelete));
-    filesToConfirmDeletion.removeAll(processAndGetVcsIgnored(filesToConfirmDeletion));
+    skipVcsIgnored(filesToConfirmDeletion);
+
+    List<FilePath> filesToDelete = new ArrayList<>();
 
     // newly added files (which were added to the repo but never committed) should be removed from the VCS,
     // but without user confirmation.
@@ -246,11 +239,11 @@ public final class HgVFSListener extends VcsVFSListener {
       }
     }
 
-    new Task.ConditionalModal(myProject,
-                              HgBundle.message("hg4idea.remove.progress"),
-                              false,
-                              VcsConfiguration.getInstance(myProject).getAddRemoveOption()) {
-      @Override public void run( @NotNull ProgressIndicator indicator ) {
+    new Task.Backgroundable(myProject,
+                            HgBundle.message("hg4idea.remove.progress"),
+                            false) {
+      @Override
+      public void run(@NotNull ProgressIndicator indicator) {
         // confirm removal from the VCS if needed
         if (myRemoveOption.getValue() != VcsShowConfirmationOption.Value.DO_NOTHING_SILENTLY) {
           if (myRemoveOption.getValue() == VcsShowConfirmationOption.Value.DO_ACTION_SILENTLY || filesToConfirmDeletion.isEmpty()) {
@@ -272,19 +265,19 @@ public final class HgVFSListener extends VcsVFSListener {
     }.queue();
   }
 
-  @NotNull
-  private List<FilePath> processAndGetVcsIgnored(@NotNull List<FilePath> filePaths) {
+  private void skipVcsIgnored(@NotNull List<FilePath> filePaths) {
     Map<VirtualFile, Collection<FilePath>> groupFilePathsByHgRoots = HgUtil.groupFilePathsByHgRoots(myProject, filePaths);
-    return groupFilePathsByHgRoots.entrySet().stream()
+    List<FilePath> ignored = groupFilePathsByHgRoots.entrySet().stream()
       .map(entry -> getIgnoreRepoHolder(entry.getKey()).removeIgnoredFiles(entry.getValue()))
-      .flatMap(Collection::stream).collect(Collectors.toList());
+      .flatMap(Collection::stream).toList();
+    filePaths.removeAll(ignored);
   }
 
   /**
    * Changes the given collection of files by filtering out unversioned files and
    * files which are not under Mercurial repository.
    *
-   * @param filesToFilter    files to be filtered.
+   * @param filesToFilter files to be filtered.
    */
   private void skipNotUnderHg(Collection<FilePath> filesToFilter) {
     for (Iterator<FilePath> iter = filesToFilter.iterator(); iter.hasNext(); ) {
@@ -296,7 +289,7 @@ public final class HgVFSListener extends VcsVFSListener {
   }
 
   @Override
-  protected void performDeletion(@NotNull final List<FilePath> filesToDelete) {
+  protected void performDeletion(final @NotNull List<FilePath> filesToDelete) {
     List<HgFile> deletes = new ArrayList<>();
     for (FilePath file : filesToDelete) {
       VirtualFile root = VcsUtil.getVcsRootFor(myProject, file);
@@ -317,10 +310,9 @@ public final class HgVFSListener extends VcsVFSListener {
   @Override
   protected void performMoveRename(@NotNull List<MovedFileInfo> movedFiles) {
     final List<MovedFileInfo> failedToMove = new ArrayList<>();
-    (new VcsBackgroundTask<MovedFileInfo>(myProject,
-                                          HgBundle.message("hg4idea.move.progress"),
-                                          VcsConfiguration.getInstance(myProject).getAddRemoveOption(),
-                                          movedFiles) {
+    (new VcsBackgroundTask<>(myProject,
+                             HgBundle.message("hg4idea.move.progress"),
+                             movedFiles) {
       @Override
       public void onFinished() {
         if (!failedToMove.isEmpty()) {
@@ -331,14 +323,15 @@ public final class HgVFSListener extends VcsVFSListener {
       private void handleRenameError() {
         NotificationAction viewFilesAction =
           NotificationAction.createSimple(VcsBundle.messagePointer("action.NotificationAction.VFSListener.text.view.files"), () -> {
-          DialogWrapper dialog =
-            new ProcessedFilePathsDialog(myProject, map2List(failedToMove, movedInfo -> VcsUtil.getFilePath(movedInfo.myOldPath)));
-          dialog.setTitle(HgBundle.message("hg4idea.rename.error.title"));
-          dialog.show();
-        });
-        NotificationAction retryAction = NotificationAction.createSimpleExpiring(HgBundle.message("retry"), () -> performMoveRename(failedToMove));
+            List<FilePath> filePaths = ContainerUtil.map(failedToMove, movedInfo -> movedInfo.getOldPath());
+            DialogWrapper dialog = new ProcessedFilePathsDialog(myProject, filePaths);
+            dialog.setTitle(HgBundle.message("hg4idea.rename.error.title"));
+            dialog.show();
+          });
+        NotificationAction retryAction =
+          NotificationAction.createSimpleExpiring(HgBundle.message("retry"), () -> performMoveRename(failedToMove));
         VcsNotifier.getInstance(myProject)
-          .notifyError("hg.rename.failed",
+          .notifyError(RENAME_FAILED,
                        HgBundle.message("hg4idea.rename.error"),
                        HgBundle.message("hg4idea.rename.error.msg"),
                        viewFilesAction, retryAction);
@@ -346,8 +339,8 @@ public final class HgVFSListener extends VcsVFSListener {
 
       @Override
       protected void process(final MovedFileInfo file) {
-        final FilePath source = VcsUtil.getFilePath(file.myOldPath);
-        final FilePath target = VcsUtil.getFilePath(file.myNewPath);
+        final FilePath source = file.getOldPath();
+        final FilePath target = file.getNewPath();
         VirtualFile sourceRoot = VcsUtil.getVcsRootFor(myProject, source);
         VirtualFile targetRoot = VcsUtil.getVcsRootFor(myProject, target);
         if (sourceRoot != null && sourceRoot.equals(targetRoot)) {
@@ -368,11 +361,6 @@ public final class HgVFSListener extends VcsVFSListener {
         }
       }
     }).queue();
-  }
-
-  @Override
-  protected boolean isDirectoryVersioningSupported() {
-    return false;
   }
 
   @Override
