@@ -1,7 +1,6 @@
-// Copyright 2000-2018 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package org.jetbrains.idea.maven.dom.model.completion;
 
-import com.google.common.collect.ImmutableSet;
 import com.intellij.codeInsight.actions.ReformatCodeProcessor;
 import com.intellij.codeInsight.completion.CompletionContributor;
 import com.intellij.codeInsight.completion.CompletionParameters;
@@ -30,15 +29,11 @@ import org.jetbrains.idea.maven.dom.model.MavenDomExclusion;
 
 import java.util.Set;
 
-/**
- * @author Sergey Evdokimov
- */
 public class MavenPomXmlCompletionTagListenerContributor extends CompletionContributor {
-
-  private final Set<String> myHandledTags = ImmutableSet.of("dependency", "exclusion");
+  private static final Set<String> myHandledTags = Set.of("dependency", "exclusion");
 
   @Override
-  public void fillCompletionVariants(@NotNull CompletionParameters parameters, @NotNull final CompletionResultSet result) {
+  public void fillCompletionVariants(@NotNull CompletionParameters parameters, final @NotNull CompletionResultSet result) {
     if (TemplateManager.getInstance(parameters.getOriginalFile().getProject()).getActiveTemplate(parameters.getEditor()) != null) {
       return; // Don't brake the template.
     }
@@ -58,9 +53,9 @@ public class MavenPomXmlCompletionTagListenerContributor extends CompletionContr
       final String lookupString = lookupElement.getLookupString();
       if (myHandledTags.contains(lookupString)) {
         LookupElement decorator =
-          LookupElementDecorator.withInsertHandler(lookupElement, new InsertHandler<LookupElementDecorator<LookupElement>>() {
+          LookupElementDecorator.withInsertHandler(lookupElement, new InsertHandler<>() {
             @Override
-            public void handleInsert(@NotNull final InsertionContext context, @NotNull LookupElementDecorator<LookupElement> item) {
+            public void handleInsert(final @NotNull InsertionContext context, @NotNull LookupElementDecorator<LookupElement> item) {
               lookupElement.handleInsert(context);
               Object object = lookupElement.getObject();
               if (object instanceof XmlTag && "maven-4.0.0.xsd".equals(((XmlTag)object).getContainingFile().getName())) {
