@@ -9,9 +9,30 @@ import com.intellij.psi.PsiElement;
 import com.intellij.psi.PsiReferenceBase;
 import com.intellij.psi.util.PsiTreeUtil;
 import com.intellij.util.ObjectUtils;
+import com.intellij.util.containers.ContainerUtil;
 import com.jetbrains.python.PyStringFormatParser;
 import com.jetbrains.python.PyStringFormatParser.NewStyleSubstitutionChunk;
-import com.jetbrains.python.psi.*;
+import com.jetbrains.python.psi.LanguageLevel;
+import com.jetbrains.python.psi.PsiReferenceEx;
+import com.jetbrains.python.psi.PyArgumentList;
+import com.jetbrains.python.psi.PyBinaryExpression;
+import com.jetbrains.python.psi.PyCallExpression;
+import com.jetbrains.python.psi.PyDictLiteralExpression;
+import com.jetbrains.python.psi.PyDoubleStarExpression;
+import com.jetbrains.python.psi.PyExpression;
+import com.jetbrains.python.psi.PyKeyValueExpression;
+import com.jetbrains.python.psi.PyKeywordArgument;
+import com.jetbrains.python.psi.PyListLiteralExpression;
+import com.jetbrains.python.psi.PyLiteralExpression;
+import com.jetbrains.python.psi.PyNumericLiteralExpression;
+import com.jetbrains.python.psi.PyParenthesizedExpression;
+import com.jetbrains.python.psi.PyReferenceExpression;
+import com.jetbrains.python.psi.PySetLiteralExpression;
+import com.jetbrains.python.psi.PyStarArgument;
+import com.jetbrains.python.psi.PyStarExpression;
+import com.jetbrains.python.psi.PyStringLiteralExpression;
+import com.jetbrains.python.psi.PyTupleExpression;
+import com.jetbrains.python.psi.PyUtil;
 import com.jetbrains.python.psi.impl.PyPsiUtils;
 import com.jetbrains.python.psi.types.TypeEvalContext;
 import org.jetbrains.annotations.NotNull;
@@ -22,33 +43,30 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 public class PySubstitutionChunkReference extends PsiReferenceBase<PyStringLiteralExpression> implements PsiReferenceEx {
-  @NotNull private final PyStringFormatParser.SubstitutionChunk myChunk;
+  private final @NotNull PyStringFormatParser.SubstitutionChunk myChunk;
   private final boolean myIsPercent;
   private final int myPosition;
 
-  public PySubstitutionChunkReference(@NotNull final PyStringLiteralExpression element,
-                                      @NotNull final PyStringFormatParser.SubstitutionChunk chunk) {
+  public PySubstitutionChunkReference(final @NotNull PyStringLiteralExpression element,
+                                      final @NotNull PyStringFormatParser.SubstitutionChunk chunk) {
     super(element, getKeywordRange(element, chunk));
     myChunk = chunk;
     myIsPercent = chunk instanceof PyStringFormatParser.PercentSubstitutionChunk;
     myPosition = ObjectUtils.chooseNotNull(chunk.getPosition(), -1);
   }
 
-  @Nullable
   @Override
-  public HighlightSeverity getUnresolvedHighlightSeverity(@NotNull final TypeEvalContext context) {
+  public @Nullable HighlightSeverity getUnresolvedHighlightSeverity(final @NotNull TypeEvalContext context) {
     return HighlightSeverity.WARNING;
   }
 
-  @Nullable
   @Override
-  public String getUnresolvedDescription() {
+  public @Nullable String getUnresolvedDescription() {
     return null;
   }
 
-  @NotNull
-  private static TextRange getKeywordRange(@NotNull final PyStringLiteralExpression element,
-                                           @NotNull final PyStringFormatParser.SubstitutionChunk chunk) {
+  private static @NotNull TextRange getKeywordRange(final @NotNull PyStringLiteralExpression element,
+                                                    final @NotNull PyStringFormatParser.SubstitutionChunk chunk) {
     final TextRange textRange = chunk.getTextRange();
     if (chunk.getMappingKey() != null) {
       final int start = textRange.getStartOffset() + chunk.getTextRange().substring(element.getText()).indexOf(chunk.getMappingKey());
@@ -57,14 +75,12 @@ public class PySubstitutionChunkReference extends PsiReferenceBase<PyStringLiter
     return textRange;
   }
 
-  @Nullable
   @Override
-  public PsiElement resolve() {
+  public @Nullable PsiElement resolve() {
     return myIsPercent ? resolvePercentString() : resolveFormatString();
   }
 
-  @Nullable
-  private PsiElement resolveFormatString() {
+  private @Nullable PsiElement resolveFormatString() {
     final PyArgumentList argumentList = getArgumentList(getElement());
     if (argumentList == null || argumentList.getArguments().length == 0) {
       return null;
@@ -72,8 +88,7 @@ public class PySubstitutionChunkReference extends PsiReferenceBase<PyStringLiter
     return myChunk.getMappingKey() != null ? resolveKeywordFormat(argumentList).get() : resolvePositionalFormat(argumentList);
   }
 
-  @Nullable
-  private PsiElement resolvePositionalFormat(@NotNull PyArgumentList argumentList) {
+  private @Nullable PsiElement resolvePositionalFormat(@NotNull PyArgumentList argumentList) {
     int n = 0;
     boolean notSureAboutStarArgs = false;
     PyStarArgument firstStarArg = null;
@@ -107,10 +122,10 @@ public class PySubstitutionChunkReference extends PsiReferenceBase<PyStringLiter
     return notSureAboutStarArgs ? firstStarArg : null;
   }
 
-  @NotNull
-  private Ref<PyExpression> resolveKeywordFormat(@NotNull PyArgumentList argumentList) {
+  private @NotNull Ref<PyExpression> resolveKeywordFormat(@NotNull PyArgumentList argumentList) {
     final Ref<PyExpression> valueExprRef = getKeyValueFromArguments(argumentList);
-    final String indexElement = myChunk instanceof NewStyleSubstitutionChunk ? ((NewStyleSubstitutionChunk)myChunk).getMappingKeyElementIndex() : null;
+    final String indexElement =
+      myChunk instanceof NewStyleSubstitutionChunk ? ((NewStyleSubstitutionChunk)myChunk).getMappingKeyElementIndex() : null;
     if (valueExprRef != null && !valueExprRef.isNull() && indexElement != null) {
       final PyExpression valueExpr = PyPsiUtils.flattenParens(valueExprRef.get());
       assert valueExpr != null;
@@ -128,8 +143,7 @@ public class PySubstitutionChunkReference extends PsiReferenceBase<PyStringLiter
     return valueExprRef == null ? Ref.create() : valueExprRef;
   }
 
-  @Nullable
-  private Ref<PyExpression> getKeyValueFromArguments(@NotNull PyArgumentList argumentList) {
+  private @Nullable Ref<PyExpression> getKeyValueFromArguments(@NotNull PyArgumentList argumentList) {
     final PyKeywordArgument valueFromKeywordArg = argumentList.getKeywordArgument(myChunk.getMappingKey());
     final List<PyStarArgument> keywordStarArgs = getStarArguments(argumentList, true);
 
@@ -137,7 +151,7 @@ public class PySubstitutionChunkReference extends PsiReferenceBase<PyStringLiter
     if (valueFromKeywordArg != null) {
       valueExprRef = Ref.create(valueFromKeywordArg.getValueExpression());
     }
-    else if (!keywordStarArgs.isEmpty()){
+    else if (!keywordStarArgs.isEmpty()) {
       for (PyStarArgument arg : keywordStarArgs) {
         final Ref<PyExpression> resolvedRef = resolveKeywordStarExpression(arg);
         if (resolvedRef != null && (valueExprRef == null || valueExprRef.get() == null)) {
@@ -151,8 +165,7 @@ public class PySubstitutionChunkReference extends PsiReferenceBase<PyStringLiter
     return valueExprRef;
   }
 
-  @Nullable
-  private Ref<PyExpression> resolveStringIndex(@NotNull PyExpression valueExpr, @NotNull String indexElement) {
+  private @Nullable Ref<PyExpression> resolveStringIndex(@NotNull PyExpression valueExpr, @NotNull String indexElement) {
     if (valueExpr instanceof PyCallExpression) {
       return resolveDictCall((PyCallExpression)valueExpr, indexElement, false);
     }
@@ -167,8 +180,7 @@ public class PySubstitutionChunkReference extends PsiReferenceBase<PyStringLiter
     return null;
   }
 
-  @Nullable
-  private Ref<PyExpression> resolveNumericIndex(@NotNull PyExpression valueExpr, @NotNull Integer index) {
+  private @Nullable Ref<PyExpression> resolveNumericIndex(@NotNull PyExpression valueExpr, @NotNull Integer index) {
     if (PsiTreeUtil.instanceOf(valueExpr, PyListLiteralExpression.class, PyTupleExpression.class, PyStringLiteralExpression.class)) {
       Ref<PyExpression> elementRef = getElementByIndex(valueExpr, index);
       if (elementRef != null) return elementRef;
@@ -182,13 +194,12 @@ public class PySubstitutionChunkReference extends PsiReferenceBase<PyStringLiter
     return null;
   }
 
-  @Nullable
-  private Ref<PyExpression> getElementFromDictLiteral(@NotNull PyDictLiteralExpression valueExpr, @NotNull Integer index) {
+  private @Nullable Ref<PyExpression> getElementFromDictLiteral(@NotNull PyDictLiteralExpression valueExpr, @NotNull Integer index) {
     boolean allKeysForSure = true;
     final PyKeyValueExpression[] elements = valueExpr.getElements();
     for (PyKeyValueExpression element : elements) {
       final PyNumericLiteralExpression key = PyUtil.as(element.getKey(), PyNumericLiteralExpression.class);
-      if (key != null && new Long(index).equals(key.getLongValue())) {
+      if (key != null && Long.valueOf(index).equals(key.getLongValue())) {
         return Ref.create(element.getValue());
       }
       else if (!(element.getKey() instanceof PyLiteralExpression)) {
@@ -199,8 +210,7 @@ public class PySubstitutionChunkReference extends PsiReferenceBase<PyStringLiter
     return resolveDoubleStar(valueExpr, String.valueOf(index), true, allKeysForSure);
   }
 
-  @Nullable
-  public static Ref<PyExpression> getElementByIndex(@NotNull PyExpression listTupleExpr, int index) {
+  public static @Nullable Ref<PyExpression> getElementByIndex(@NotNull PyExpression listTupleExpr, int index) {
     boolean noElementsForSure = true;
     int seenElementsNumber = 0;
     PyExpression[] elements = getElementsFromListOrTuple(listTupleExpr);
@@ -214,7 +224,7 @@ public class PySubstitutionChunkReference extends PsiReferenceBase<PyStringLiter
           if (subsequenceElementIndex < subSequenceElements.length) {
             return Ref.create(subSequenceElements[subsequenceElementIndex]);
           }
-          if (noElementsForSure) noElementsForSure = Arrays.stream(subSequenceElements).noneMatch(it -> it instanceof PyStarExpression);
+          if (noElementsForSure) noElementsForSure = !ContainerUtil.exists(subSequenceElements, it -> it instanceof PyStarExpression);
           seenElementsNumber += subSequenceElements.length;
         }
         else {
@@ -232,38 +242,34 @@ public class PySubstitutionChunkReference extends PsiReferenceBase<PyStringLiter
     return noElementsForSure ? Ref.create() : null;
   }
 
-  public static PyExpression[] getElementsFromListOrTuple(@NotNull final PyExpression expression) {
-    if (expression instanceof PyListLiteralExpression) {
-      return ((PyListLiteralExpression)expression).getElements();
+  public static PyExpression[] getElementsFromListOrTuple(final @NotNull PyExpression expression) {
+    if (expression instanceof PyListLiteralExpression list) {
+      return list.getElements();
     }
-    else if (expression instanceof PyTupleExpression) {
-      return ((PyTupleExpression)expression).getElements();
+    else if (expression instanceof PyTupleExpression tuple) {
+      return tuple.getElements();
     }
-    else if (expression instanceof PyStringLiteralExpression) {
-      String value = ((PyStringLiteralExpression)expression).getStringValue();
-      if (value != null) {
-        // Strings might be packed as well as dicts, so we need to resolve somehow to string element.
-        // But string element isn't PyExpression so I decided to resolve to PyStringLiteralExpression for
-        // every string element
-        PyExpression[] result = new PyExpression[value.length()];
-        Arrays.fill(result, expression);
-        return result;
-      }
+    else if (expression instanceof PyStringLiteralExpression string) {
+      String value = string.getStringValue();
+      // Strings might be packed as well as dicts, so we need to resolve somehow to string element.
+      // But string element isn't PyExpression so I decided to resolve to PyStringLiteralExpression for
+      // every string element
+      PyExpression[] result = new PyExpression[value.length()];
+      Arrays.fill(result, expression);
+      return result;
     }
 
     return PyExpression.EMPTY_ARRAY;
   }
 
-  @NotNull
-  private static List<PyStarArgument> getStarArguments(@NotNull PyArgumentList argumentList,
-                                                       @SuppressWarnings("SameParameterValue") boolean isKeyword) {
+  private static @NotNull List<PyStarArgument> getStarArguments(@NotNull PyArgumentList argumentList,
+                                                                @SuppressWarnings("SameParameterValue") boolean isKeyword) {
     return Arrays.stream(argumentList.getArguments())
       .map(expression -> PyUtil.as(expression, PyStarArgument.class))
       .filter(argument -> argument != null && argument.isKeyword() == isKeyword).collect(Collectors.toList());
   }
 
-  @Nullable
-  private PsiElement resolvePercentString() {
+  private @Nullable PsiElement resolvePercentString() {
     final PyBinaryExpression binaryExpression = PsiTreeUtil.getParentOfType(getElement(), PyBinaryExpression.class);
     if (binaryExpression != null) {
       final PyExpression rightExpression = binaryExpression.getRightExpression();
@@ -271,13 +277,14 @@ public class PySubstitutionChunkReference extends PsiReferenceBase<PyStringLiter
         return null;
       }
       boolean isKeyWordSubstitution = myChunk.getMappingKey() != null;
-      return isKeyWordSubstitution ? resolveKeywordPercent(rightExpression, myChunk.getMappingKey()) : resolvePositionalPercent(rightExpression);
+      return isKeyWordSubstitution
+             ? resolveKeywordPercent(rightExpression, myChunk.getMappingKey())
+             : resolvePositionalPercent(rightExpression);
     }
     return null;
   }
 
-  @Nullable
-  private PyExpression resolveKeywordPercent(@NotNull PyExpression expression, @NotNull String key) {
+  private @Nullable PyExpression resolveKeywordPercent(@NotNull PyExpression expression, @NotNull String key) {
     final PyExpression containedExpr = PyPsiUtils.flattenParens(expression);
     if (PsiTreeUtil.instanceOf(containedExpr, PyDictLiteralExpression.class)) {
       final Ref<PyExpression> resolvedRef = getElementFromDictLiteral((PyDictLiteralExpression)containedExpr, key);
@@ -296,8 +303,7 @@ public class PySubstitutionChunkReference extends PsiReferenceBase<PyStringLiter
     return containedExpr;
   }
 
-  @Nullable
-  private PsiElement resolvePositionalPercent(@NotNull PyExpression expression) {
+  private @Nullable PsiElement resolvePositionalPercent(@NotNull PyExpression expression) {
     assert myPosition >= 0;
     final PyExpression containedExpression = PyPsiUtils.flattenParens(expression);
     if (containedExpression instanceof PyTupleExpression) {
@@ -314,14 +320,13 @@ public class PySubstitutionChunkReference extends PsiReferenceBase<PyStringLiter
       }
     }
     else if (myPosition != 0 && PsiTreeUtil.instanceOf(containedExpression, PyLiteralExpression.class, PySetLiteralExpression.class,
-                                                                  PyListLiteralExpression.class, PyDictLiteralExpression.class)) {
+                                                       PyListLiteralExpression.class, PyDictLiteralExpression.class)) {
       return null;
     }
     return containedExpression;
   }
 
-  @Nullable
-  private PsiElement resolveNotNestedBinaryExpression(@NotNull PyBinaryExpression containedExpression) {
+  private @Nullable PsiElement resolveNotNestedBinaryExpression(@NotNull PyBinaryExpression containedExpression) {
     assert myPosition >= 0;
     PyExpression left = containedExpression.getLeftExpression();
     PyExpression right = containedExpression.getRightExpression();
@@ -343,14 +348,12 @@ public class PySubstitutionChunkReference extends PsiReferenceBase<PyStringLiter
     return containedExpression;
   }
 
-  @Nullable
-  private static PyArgumentList getArgumentList(final PsiElement original) {
+  private static @Nullable PyArgumentList getArgumentList(final PsiElement original) {
     final PsiElement pyReferenceExpression = PsiTreeUtil.getParentOfType(original, PyReferenceExpression.class);
     return PsiTreeUtil.getNextSiblingOfType(pyReferenceExpression, PyArgumentList.class);
   }
 
-  @Nullable
-  private Ref<PyExpression> resolveKeywordStarExpression(@NotNull PyStarArgument starArgument) {
+  private @Nullable Ref<PyExpression> resolveKeywordStarExpression(@NotNull PyStarArgument starArgument) {
     // TODO: support call, reference expressions here
     final PyDictLiteralExpression dictExpr = PsiTreeUtil.getChildOfType(starArgument, PyDictLiteralExpression.class);
     final PyCallExpression callExpression = PsiTreeUtil.getChildOfType(starArgument, PyCallExpression.class);
@@ -365,11 +368,11 @@ public class PySubstitutionChunkReference extends PsiReferenceBase<PyStringLiter
     return null;
   }
 
-  @Nullable
-  private Ref<PyExpression> resolvePositionalStarExpression(@NotNull PyStarArgument starArgument, int argumentPosition) {
+  private @Nullable Ref<PyExpression> resolvePositionalStarExpression(@NotNull PyStarArgument starArgument, int argumentPosition) {
     assert myPosition >= 0;
-    final PyExpression expr = PyPsiUtils.flattenParens(PsiTreeUtil.getChildOfAnyType(starArgument, PyListLiteralExpression.class, PyParenthesizedExpression.class,
-                                                            PyStringLiteralExpression.class));
+    final PyExpression expr =
+      PyPsiUtils.flattenParens(PsiTreeUtil.getChildOfAnyType(starArgument, PyListLiteralExpression.class, PyParenthesizedExpression.class,
+                                                             PyStringLiteralExpression.class));
     if (expr == null) {
       return Ref.create(starArgument);
     }
@@ -377,14 +380,12 @@ public class PySubstitutionChunkReference extends PsiReferenceBase<PyStringLiter
     return getElementByIndex(expr, position);
   }
 
-  @Nullable
-  private Ref<PyExpression> getElementFromDictLiteral(@NotNull PyDictLiteralExpression expression, @NotNull String mappingKey) {
+  private @Nullable Ref<PyExpression> getElementFromDictLiteral(@NotNull PyDictLiteralExpression expression, @NotNull String mappingKey) {
     boolean allKeysForSure = true;
     final PyKeyValueExpression[] keyValueExpressions = expression.getElements();
     for (PyKeyValueExpression keyValueExpression : keyValueExpressions) {
       PyExpression keyExpression = keyValueExpression.getKey();
-      if (keyExpression instanceof PyStringLiteralExpression) {
-        final PyStringLiteralExpression key = (PyStringLiteralExpression)keyExpression;
+      if (keyExpression instanceof PyStringLiteralExpression key) {
         if (key.getStringValue().equals(mappingKey)) {
           return Ref.create(keyValueExpression.getValue());
         }
@@ -397,8 +398,10 @@ public class PySubstitutionChunkReference extends PsiReferenceBase<PyStringLiter
     return resolveDoubleStar(expression, mappingKey, false, allKeysForSure);
   }
 
-  @Nullable
-  private Ref<PyExpression> resolveDoubleStar(@NotNull PyDictLiteralExpression expression, @NotNull String mappingKey, boolean isNumeric, boolean allKeysForSure) {
+  private @Nullable Ref<PyExpression> resolveDoubleStar(@NotNull PyDictLiteralExpression expression,
+                                                        @NotNull String mappingKey,
+                                                        boolean isNumeric,
+                                                        boolean allKeysForSure) {
     final LanguageLevel languageLevel = LanguageLevel.forElement(expression);
     PyDoubleStarExpression[] starExpressions = PsiTreeUtil.getChildrenOfType(expression, PyDoubleStarExpression.class);
     if (languageLevel.isAtLeast(LanguageLevel.PYTHON35) && starExpressions != null) {
@@ -415,7 +418,7 @@ public class PySubstitutionChunkReference extends PsiReferenceBase<PyStringLiter
             }
 
             allKeysForSure = element != null;
-             if (element != null && !element.isNull()) return element;
+            if (element != null && !element.isNull()) return element;
           }
           else if (underStarExpr instanceof PyCallExpression) {
             Ref<PyExpression> element = resolveDictCall((PyCallExpression)underStarExpr, mappingKey, true);
@@ -432,8 +435,7 @@ public class PySubstitutionChunkReference extends PsiReferenceBase<PyStringLiter
     return allKeysForSure ? Ref.create() : null;
   }
 
-  @Nullable
-  private Ref<PyExpression> resolveDictCall(@NotNull PyCallExpression expression, @NotNull String key, boolean goDeep) {
+  private @Nullable Ref<PyExpression> resolveDictCall(@NotNull PyCallExpression expression, @NotNull String key, boolean goDeep) {
     final PyExpression callee = expression.getCallee();
     boolean allKeysForSure = true;
     final LanguageLevel languageLevel = LanguageLevel.forElement(expression);
